--- a/laxyam/padyam/purANam/nArAyaNIyam/001.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/001.md
@@ -1,8 +1,7 @@
 ---
-title: ००१ विष्णुस्तुतिः 
-unicode_script: devanagari  
----
+title: ००१ विष्णुस्तुतिः
 
+---
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/001/001_01.mp3"></div>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -18,6 +17,14 @@ unicode_script: devanagari
 निर्मुक्तं नित्यमुक्तं निगमशतसहस्रेण निर्भास्यमानम् ।  
 अस्पष्टं दृष्टमात्रे पुनरुरुपुरुषार्थात्मकं ब्रह्मतत्त्वं  
 तत्तावद्भाति साक्षाद्गुरुपवनपुरे हन्त भाग्यं जनानाम् ॥ १-१॥
+</details>
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+It is the greatest good fortune of mankind in this Kali Yuga that the eternal truth which grants us salvation manifests itself as Lord Krishna in the holy shrine of Guruvayoor to bless all true devotees. This embodiment of eternal spiritual bliss is beyond any comparison and transcends all limits of time and space. This eternal truth is free of all illusion and is all-pervading, being the root cause of the entire universe. Even the Vedas cannot fully comprehend or describe it but it can be attained through singleminded devotion by the true Bhakthas of Lord Krishna.
+
 </details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/001/001_02.mp3"></div>
@@ -37,6 +44,14 @@ unicode_script: devanagari
 निश्शेषात्मानमेनं गुरुपवनपुराधीशमेवाश्रयामः ॥ १-२॥
 </details>
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Although such an easy access to eternal salvation has been offered to mankind on a silver platter in the form of Lord Krishna at Guruvayoor, common mortals, due to their inherent lowly nature, overlook the eternal benefits of this and go in pursuit of worldly pleasures. May we all realize our folly and serve Him with complete faith as He alone can alleviate all our sorrows.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/001/001_03.mp3"></div>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -52,6 +67,14 @@ unicode_script: devanagari
 भूतैर्भूतेन्द्रियैस्ते वपुरिति बहुशः श्रूयते व्यासवाक्यम् ।  
 तत्स्वच्छत्वाद्यदच्छादितपरसुखचिद्गर्भनिर्भासरूपं  
 तस्मिन् धन्या रमन्ते श्रुतिमतिमधुरे सुग्रहे विग्रहे ते ॥ १-३॥
+</details>
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+The great sage Vyaasa has identified Thy form as Suddha Sathva, unsullied by the evil and impure qualities of Rajas and Tamas. Contemplation of this pure divine form of Lord Krishna will lead us to ultimate bliss and wisdom.
+
 </details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/001/001_04.mp3"></div>
@@ -71,6 +94,14 @@ unicode_script: devanagari
 कस्मान्नो निष्कलस्त्वं सकल इति वचस्त्वत्कलास्वेव भूमन् ॥ १-४॥
 </details>
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord Krishna ! This unchanging form of Suddha Sathva embodied in Thee, transcending time and space, is the ocean of nectar giving supreme happiness to all true devotees, encompassing all the liberated souls embedded like pure pearls in the waves of this ocean. Hence this incarnation of Thine as Lord Krishna can be called the only complete one, as compared to other revelations of Thy divine form.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/001/001_05.mp3"></div>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -86,6 +117,14 @@ unicode_script: devanagari
 तेनैवोदेति लीना प्रकृतिरसतिकल्पाऽपि कल्पादिकाले ।  
 तस्याः संशुद्धमंशं कमपि तमतिरोधायकं सत्त्वरूपं  
 स त्वं धृत्वा दधासि स्वमहिमविभवाकुण्ठ वैकुण्ठरूपम् ॥ १-५॥
+</details>
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Even without any action or reason, Thy glance alone can activate Maya at the beginning of a new kalpa or cycle of creation, spontaneously. Thus, the divine form of the Lord of Vaikunta manifests itself as Maya or Prakruthi without its glory or purity being diminished or tarnished in any way.
+
 </details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/001/001_06.mp3"></div>
@@ -105,6 +144,14 @@ unicode_script: devanagari
 सिञ्चत्सञ्चिन्तकानां वपुरनुकलये मारुतागारनाथ ॥ १-६॥
 </details>
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Guruvayurappa ! I meditate on Thy divine form which is more beautiful than the dark rain clouds and the blue Kalaya flowers, where Goddess Lakshmi plays uninhibitedly, which being the abode of beauty, is the ultimate sanctuary of all true devotees, drowning their hearts in the nectar of supreme bliss.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/001/001_07.mp3"></div>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -120,6 +167,14 @@ unicode_script: devanagari
 मित्येवं पूर्वमालोचितमजित मया नैवमद्याभिजाने ।  
 नो चेज्जीवाः कथं वा मधुरतरमिदं त्वद्वपुश्चिद्रसार्द्रं  
 नेत्रैः श्रोत्रैश्च पीत्वा परमरससुधाम्भोधिपूरे रमेरन् ॥ १-७॥
+</details>
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Supreme One ! Earlier, in my ignorance, I had thought that Thy creation was sheer misery to mankind entangling all of us in the cycle of births and deaths; but now I realise how wrong I was. But for this divine miracle of creation, how could our souls be liberated without our eyes and ears drinking the nectar of supreme bliss in a fully conscious state?
+
 </details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/001/001_08.mp3"></div>
@@ -139,6 +194,14 @@ unicode_script: devanagari
 क्षुद्रं तं शक्रवाटीद्रुममभिलषति व्यर्थमर्थिव्रजोऽयम् ॥ १-८॥
 </details>
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Hari ! Thou art ready to shower on us all that we desire and even more by granting liberation to our wretched souls. But due to our total ignorance of this ultimate bliss, we pursue worldly belongings and sensual pleasures. Men long for the Parijata tree in Indra's garden when the Kalpaka Vriksha in the form of Lord Krishna is waiting to grant them salvation.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/001/001_09.mp3"></div>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -154,6 +217,14 @@ unicode_script: devanagari
 दैश्वर्यादीशतेऽन्ये जगति परजने स्वात्मनोऽपीश्वरस्त्वम् ।  
 त्वय्युच्चैरारमन्ति प्रतिपदमधुरे चेतनाः स्फीतभाग्यास्-  
 त्वं चात्माराम एवेत्यतुलगुणगणाधार शौरे नमस्ते ॥ १-९॥
+</details>
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Souri ! Thou art omnipotent and the embodiment of all virtue and hence Thou hath the unique power to grant supreme bliss to Thy devotees instead of only desired objects, in contrast to other gods. Those who realise this truth are blessed at every step they take towards Thee. Oh Lord Krishna! I pray to Thee for such a blessing.
+
 </details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/001/001_10.mp3"></div>
@@ -172,3 +243,10 @@ unicode_script: devanagari
 अङ्गासङ्गा सदा श्रीरखिलविदसि न क्वापि ते सङ्गवार्ता  
 तद्वातागारवासिन् मुरहर भगवच्छब्दमुख्याश्रयोऽसि ॥ १-१०॥
 </details>
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord Murari ! Thou art the embodiment of all the six divine qualities of greatness viz., Sri (prosperity), Jnana (knowledge), Vairagya (detachment), Aishwarya (lordliness), Veerya (valour) and Yashas (fame) and hence the word Bhagavath is the most befitting attribution to Thee, who art the resident of the Guruvayur temple.
+
+</details>
+
