--- a/laxyam/padyam/purANam/nArAyaNIyam/002.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/002.md
@@ -20,6 +20,14 @@ title: ००२ वपुषि भक्तिः
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+I pray to the divine form of Lord Krishna adorned by the diamond crown more brilliant than the sun, the upright sandal mark on the forehead, the compassionate eyes, the charming smile, the shapely nose, the cheeks reflecting the light of the earrings brushing against them, the neck resplendent with the Kausthubha jewel and the chest decorated with flower garlands, pearl necklaces and the holy Srivatsa beauty mark.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/002/002_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +45,14 @@ title: ००२ वपुषि भक्तिः
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+I prostrate before this most beautiful form of Lord Krishna with the four shining arms bedecked with shoulder ornaments, bangles, bracelets, rings studded with precious stones, the mace, the conch, the disc, the lotus, the shining yellow silk robe adorning the waist with the gold belt around it and the beautiful lotus feet which are the ultimate refuge of all devotees for the removal of all their sorrows.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/002/002_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +72,14 @@ title: ००२ वपुषि भक्तिः
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Omnipotent One ! This supreme divine form of Thine transcends all beauty, radiance and sweetness in all the three worlds and generates intense love in the hearts of all true Bhakthas.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/002/002_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +97,14 @@ title: ००२ वपुषि भक्तिः
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord Achutha ! Goddess Lakshmi being so attached to Thee cannot remain long with any of her devotees. Hence she has earned the epithet Chapala or Fickleminded one as far as her Bhakthas are concerned. So strong and steadfast is her love for Thee.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/002/002_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +124,14 @@ title: ००२ वपुषि भक्तिः
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lakshmipathi ! Goddess Lakshmi's firm love of Thee makes her shower blessings on all those devotees who are ever praising Thy qualities and worshipping Thee. Her fickleness is only with regard to those who have no love or respect for Thee.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/002/002_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +149,14 @@ title: ००२ वपुषि भक्तिः
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Description of Thy divine form is like nectar to the ears and minds of devotees, drenching their bodies in ecstasy and taking them to the extremes of bliss.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/002/002_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +176,14 @@ title: ००२ वपुषि भक्तिः
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord Krishna ! Therefore Bhakthi Yoga or the path of devotion is recommended by great sages to be far superior to Karma Yoga (or path of action ) or Jnana Yoga (or path of spiritual knowledge) in the quest for salvation and it can be attained effortlessly through intense love for Thy divine form.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/002/002_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +201,14 @@ title: ००२ वपुषि भक्तिः
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Most Powerful One ! Karma Yoga yields results only in the distant future and Jnana Yoga is beyond the comprehension of ordinary mortals. But devotion to Thee is far more satisfying to our minds.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/002/002_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +228,14 @@ title: ००२ वपुषि भक्तिः
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Performance of Karma Yoga is very exhausting and leads us to the path of Jnana or Bhakthi only after our mind has been cleansed of impurities. Philosophical search for eternal truth can lead to salvation only after a painful process of life cycles and rebirths. Is it not then more prudent to adopt the path of Bhakthi directly?
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/002/002_10.mp3"></div><details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 **त्वद्-भक्तिस्** तु कथा-रसामृत-झरी-निर्मज्जनेन स्वयं  
@@ -177,5 +249,11 @@ title: ००२ वपुषि भक्तिः
 सिद्ध्यन्ती विमलप्रबोधपदवीमक्लेशतस्तन्वती ।१  
 सद्यः सिद्धिकरी जयत्ययि विभो सैवास्तु मे त्वत्पद-  
 प्रेमप्रौढिरसार्द्रता द्रुततरं वातालयाधीश्वर ॥ २-१०॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord Krishna ! Bhakthi is the most superior path to merge with Thee and leads us to the state of pure divinity without delay. I pray to Thee to grant me the ability to be steeped in devotion to Thy lotus feet.
+
 </details>
 
