--- a/laxyam/padyam/purANam/nArAyaNIyam/004.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/004.md
@@ -16,6 +16,14 @@ title: ००४
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! Grant me a strong and healthy body to serve Thee; then with Thy blessing I shall surely become proficient in doing the eightfold yoga of concentration.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/004/004_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -29,6 +37,14 @@ title: ००४
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+By practising selfcontrol through celibacy, honesty and nonviolence and by observing the daily rituals of bathing,meditation etc., I shall cleanse my body and mind and perform the Padmasana (lotus posture) and other aasanas and worship Thee.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/004/004_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -44,6 +60,14 @@ title: ००४
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Chanting the Pranava mantra (OM) continuously and thus controlling the sense organs I shall purify myself and concentrate on Thee.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/004/004_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -57,6 +81,14 @@ title: ००४
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Through repeated effort I shall try to focus my mind on Thy form which is intangible. But by meditating onThy lotus feet I shall try to capture the ecstasy of true devotion.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/004/004_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -72,6 +104,14 @@ title: ००४
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+By intense and repeated effort I shall be able to visualise through my mind's eye the loveliness of each and every limb of Thy divine form and effortlessly meditate on it.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/004/004_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -85,6 +125,14 @@ title: ००४
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! Those who concentrate on Thy divine form will be entranced by its beauty and gradually their minds will be transported to a higher level wherein they can comprehend the impersonal Brahman or eternal truth and bliss.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/004/004_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -100,6 +148,14 @@ title: ००४
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Viswanatha ! Having reached the apex of spiritual concentration which is supreme bliss, we must again, on relaxation, begin afresh the process of Dharana and follow the same steps in ascending order.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/004/004_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -113,6 +169,14 @@ title: ००४
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+The constant practice of this process of concentration is in itself an enjoyable experience in the attainment of supreme bliss. Our souls will be liberated by this process and be free to wander about like the most exalted devotees Suka, Narada etc., singing Thy glory.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/004/004_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +192,14 @@ title: ००४
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Thus the Yogi who attains Samadhi is able to control his life breath and draw it upward along the Sushumna nerve past the six nerve centres in his quest for salvation.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/004/004_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -141,6 +213,14 @@ title: ००४
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Then leaving this earthly body those who wish for immediate salvation merge with Thee, while those who wish for the pleasures of the higher worlds go with the sense organs piercing the head.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/004/004_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -156,6 +236,14 @@ title: ००४
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Thus Thy devotee who is led to the solar world by the presiding deities of fire, daylight, the waxing fortnight of the moon and the summer solstice goes on to the world of Dhruva.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/004/004_12.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -169,6 +257,14 @@ title: ००४
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Then, after a long sojourn in Maharloka, Thy devotee, as soon as he is afflicted by the scorching fire issuing forth from the serpent Sesha, or even before that, reaches Satyaloka or the world of Brahma.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/004/004_13.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -184,6 +280,14 @@ title: ००४
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Residing in Satyaloka or Thine own Vishnuloka, Thy devotee attains salvation during the great flood or even before, at his own will, breaking through the Brahmanda or macrocosm with his yogic power.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/004/004_14.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -198,6 +302,14 @@ title: ००४
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! The Brahmanda is encased in seven covers viz. the five elements, earth, water, fire, air, ether and then intellect and illusion. Thy devotee breaks through all these barriers experiencing the pleasures in each of these and finally attains salvation at Thy lotus feet.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/004/004_15.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -208,5 +320,11 @@ title: ००४
 
 अर्चिरादिगतिमीद्रुशीं व्रजन् विच्युतिं न भजते जगत्पते ।  
 सच्चिदात्मक भवद्गुणोदयानुच्चरन्तमनिलेश पाहि माम् ॥ १५॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Jagannatha ! One who successfully completes this arduous soul-searching journey does not come down again. I am Thy humble devotee singing Thy praises. Please save me, Oh Lord of Guruvayur, who art the embodiment of truth and reality.
+
 </details>
 
