--- a/laxyam/padyam/purANam/nArAyaNIyam/005.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/005.md
@@ -20,6 +20,14 @@ title: ००५
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+When the earlier great deluge occurred, the world was nonexistent and Maya was merged in Thy Supreme Form undiscernible in any way. There was no life or death and no day or night. Only Thy brilliant form of Supreme Bliss existed.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/005/005_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +45,14 @@ title: ००५
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! At that point of time everything in the Universe viz. Kala (time), Karma (action), Guna (mood), the Jivathmas (individual souls ) all lay merged in Thy supreme form. But they were never nonexistent or imaginary like flowers of the sky. They were ensconced in Thee and re-emerged after the deluge.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/005/005_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +72,14 @@ title: ००५
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+This state lasted for two Parardhas. Then with the desire for creation Thou activated Maya with a single glance and the evolution of the three worlds began. From Maya came Kalashakthi, the hidden resultant Karmas of the Jivas and inborn dispositions (swabhavas).From these evolved the Gunas or moods and helped Maya to manifest as the universe.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/005/005_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +97,14 @@ title: ००५
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+The Vedas describe Thee as a witness to the creation of Maya. Yet Thy form is  not enveloped by Maya. Thou art the one and only individual soul reflected on Maya in different forms. Time, action, nature have all been ordained by Thee. The very same Maya, influenced by these forces, created the principle of intelligence called 'Mahat'.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/005/005_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +124,14 @@ title: ००५
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+This principle of intelligence is endowed with the three gunas . The sathvic guna created in the total soul the cognizance of unqualified Self. But this same intelligence being predominantly Tamasic in nature created the cognizance of qualified self viz. ahamkara or egoism in that very soul.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/005/005_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +149,14 @@ title: ००५
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+This ahamkara or ego changed into three different forms, the Vaikarika with sathvic quality, and the Thaijasa dominated by Rajas and Tamas. From the Sathvic guna came the presiding deities of senses like Direction (Disha), Air (Vayu), Sun (Surya), Varuna, Aswini Devas, Fire (Agni), Vishnu, Mitra, Prajapathi, Moon (Chandra), Brahma, Rudra and Kshetrajna.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/005/005_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +176,14 @@ title: ००५
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+From the Sathvic part of Ahamkara was created the Anthakarana or internal sense which is a combination of Chitta, mind, intellect and egoism. From the Rajasa part came the set of ten senses and from the Tamasa part Thou created Shabda or sound which is the prime essence of the sky.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/005/005_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +201,14 @@ title: ००५
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+From Shabda Thou created the sky. From that came touch (sparsha); from which air or vayu was born; from that came rupa or form; from rupa came agni or fire; from fire came taste; then came water from taste; from water came smell and from smell earth was formed. Thus Oh Lord Madhava ! Thou caused the group of elements to manifest from tamasa egoism with each one of them having the qualities of those created prior to them and hence all of them being interconnected.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/005/005_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +228,14 @@ title: ००५
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+These groups of elements, senses and their presiding deities did not themselves create the Universe. These deities sang Thy praises in various hymns and Thou entered these fundamentals and by impelling them to combine with one another created the Golden Egg or Hiranyagarbha which is the Universe.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/005/005_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -178,5 +250,11 @@ title: ००५
 निर्भिन्दन्नकृथाश्चतुर्दशजगद्रूपं विराडाह्वयम।  
 साहस्रैः करपादमूर्धनिवहैर्निश्शेषजीवात्मको  
 निर्भातोऽसि मरुत्पुराधिप स मां त्रायस्व सर्वामयात् ॥ १०॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+This Brahmanda or Cosmic Egg lay for a thousand years in the primal water created earlier. Then exploding it, Thou came in the form called Virata Purusha of the fourteen worlds. In that form Thou shone as the total form of all individual souls with thousands of hands, feet and heads. Oh Guruvayurappa ! May that divine form of Thine be the saviour of all my ills.
+
 </details>
 
