--- a/laxyam/padyam/purANam/nArAyaNIyam/006.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/006.md
@@ -20,6 +20,14 @@ title: ००६
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Wonder of Wonders ! Thy Virata Purusha form encompassing the fourteen worlds has been described thus by sages: The soles of Thy feet are Patala; the upper part of Thy feet are Rasatala and Thy pair of ankles are Mahatala.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/006/006_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +45,14 @@ title: ००६
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord Chakrapani ! The sages refer to Thy shins as the world of Talatala, Thy knees as Suthala and Thy two thighs as Vithala and Athala. The front portion of Thy hip is the earth, Thy navel is the sky and Thy breast is Heaven where Indra dwells.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/006/006_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +72,14 @@ title: ००६
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Thy neck is Maharloka, Thy face, Janaloka, Thy forehead, Tapoloka and Thy head which envelops everything is Satyaloka. Oh Lord who art the embodiment of all the worlds ! I prostrate before Thy divine form which is composed of other things too that depend on these worlds.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/006/006_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +97,14 @@ title: ००६
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord who art the root cause of the Universe ! Thy Brahmarandhra (skull) is the Vedas; Oh Kesava Thy lovely tresses are the clouds; Thy pair of radiant brows are the abode of Brahma; Thy eyelashes are night and day and Thy eyes are the Sun.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/006/006_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +124,14 @@ title: ००६
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! Thy glance is the act of creation of the entire Universe. Thy ears are the directions, Thy nostrils are the two Aswin devatas. Thy lower lip is avarice or greed and Thy upper lip is modesty. Thy teeth are the groups of stars and Thy molars represent Lord Yama,the God of Death.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/006/006_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +149,14 @@ title: ००६
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! Thy radiant smile is Maya or illusion. Thy breath is air and Thy tongue is water. Thy speech is the family of birds; Thy musical notes are the Siddhas etc. The hollow of Thy mouth is fire; Thine arms are the Gods and Thy two breasts are the abode of Dharma Deva.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/006/006_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +176,14 @@ title: ००६
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lotus-eyed Lord ! Thy hind part is Adharma or evil; and Thy mind is the moon. Thy lotus heart is intangible being balanced by the gunas or moods. Thy abdomen is the host of oceans; Thy garments are the two twilights; Thy private parts are the God Brahma and Thy scrotum is the God Mitra.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/006/006_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +201,14 @@ title: ००६
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Merciful One ! Thy hip is the animal kingdom, the nails of Thy feet are the elephants, camels, horses etc. Thy gait is Time. Thy lotus-like face, Thy arms,Thy two charming thighs and Thy feet are the source of the Brahmins and other castes.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/006/006_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +228,14 @@ title: ००६
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord Chakrapani ! Thy actions are the cycle of births and deaths. Thy valour is the host of powerful demons or asuras. Thy bones are the mountains, Thy nerves are the collection of rivers and Thy hair are the trees. Oh Lord ! May this marvellous Virata Purusha form of Thine flourish and conquer.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/006/006_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -178,5 +250,11 @@ title: ००६
 कर्मावसानसमये स्मरणीयमाहुः।  
 तस्यान्तरात्मवपुषे विमलात्मने ते  
 वातालयाधिप नमोऽस्तु निरुन्धि रोगान् ॥ १०॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+This Virata Purusha form of Thine encompassing the fourteen worlds is worthy of worship by Karma Yogis at the end of every good deed. Oh Guruvayurappa ! I salute Thee and beg Thee to protect me from all maladies.
+
 </details>
 
