--- a/laxyam/padyam/purANam/nArAyaNIyam/007.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/007.md
@@ -20,6 +20,14 @@ title: ००७
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Guruvayurappa ! Thus, Thou who assumed the form of Virata Purusha symbolising the fourteen worlds, again manifested Thyself as Brahma, the Creator, in Satyaloka which is above all these worlds. This form of Thine called Hiranyagarbha is the total collective soul of the three worlds. Then Brahmadeva was pervaded by the desire for manifold creation through the compelling force of Rajas guna.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/007/007_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +45,14 @@ title: ००७
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+This Brahma who was infused by the desire for manifold creation, contemplated deeply about it but remained confused as he lacked the necessary knowledge for it. Thou, unseen by him, urged him to do penance by whispering sweetly in his ear.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/007/007_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +72,14 @@ title: ००७
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+The entire Universe was enveloped in water then. Brahma looked around to see who whispered in his ear. He could not see Thee but obeying Thy command he did penance for a thousand divine years to propitiate Thee. Thou then revealed to him the wonderful world of Vaikunta.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/007/007_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +97,14 @@ title: ००७
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! Vaikuntaloka is the embodiment of that supreme light emanating from Thy divine form and it outshines all other worlds. In it there is no Maya or illusion, no room for emotions like sorrow, rage, ignorance or fear. Herein is only the continuous outpouring of complete happiness. Thou revealed to Brahma, this supreme abode of Vaikunta shining beyond all comparison.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/007/007_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +124,14 @@ title: ००७
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Herein the divine souls who are four-armed and who shine with the radiance of blue sapphire lit up by the precious gems in the ornaments that adorn them, live in shining aerial cars. Their extreme devotion to Thee has earned them a place in this high abode. May this immaculate abode of Thine outshine all else.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/007/007_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +149,14 @@ title: ००७
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+In this divine abode Goddess Mahalakshmi, who illuminates the entire world with her bewitching, dazzling form like a streak of lightning, is seen inhaling the aroma of Thy lotus feet surrounded by her retinue of celestial maidens. Oh Lord ! Please bless me and grant me a place in this wonderful abode of Thine.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/007/007_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +176,14 @@ title: ००७
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord !Thy divine form which was revealed to Brahma in Vaikuntaloka is the root cause of the universe. God Brahma had a supreme vision of Thee seated on the throne set with precious jewels. Thy divine form adorned by the crown sparkling with the brilliance of a crore suns; Thy bracelets and other ornaments, the Srivatsa mark and the red Kausthubha jewel were all revealed to Brahma in their full splendour. May Thou grant me this very same supreme vision.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/007/007_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +201,14 @@ title: ००७
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+May that marvellous form of Thine, enchanting Brahma with its all pervading dazzling light, like the dark rain clouds or the Kalaya flowers, Thy face radiant with its angelic smile and Thy four arms holding the conch,mace,disc and lotus, cure all my maladies.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/007/007_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +228,14 @@ title: ००७
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Seeing Thy divine form, Brahma, overwhelmed by astonishment and joy arising out of the ecstasy of devotion, prostrated at Thy lotus feet and entreated Thee, who art all knowing, to explain to him the dualistic and non-dualistic nature of Thy divine form. Oh Lord ! I pray to Thee who granted the revelation of Thy supreme divine form to Brahma.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/007/007_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -178,5 +250,11 @@ title: ००७
 बोधस्ते भविता न सर्गविधिबिर्बन्धोऽपि सञ्जायते।  
 इत्याभाष्य गिरं प्रतोष्यनितरां तच्चित्तगूढः स्वयं  
 सृष्टौ तं समुदैरयस्स भगवन्नुल्लासयोल्लाघताम् ॥ १०॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Holding Brahma who lay prostrate at Thy lotus feet by Thy own hand Thou blessed him saying that he would have knowledge but would not be bound by the act of creation. Thus encouraging him, Thine ownself hidden in Brahma's heart spurred him on to begin the act of creation. Oh Lord ! Bless me with good health.
+
 </details>
 
