--- a/laxyam/padyam/purANam/nArAyaNIyam/008.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/008.md
@@ -20,6 +20,14 @@ title: ००८
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+After the great deluge, God Brahma who took birth on the very first Brahma Kalpa (day) got the Vedas from Thee and began the task of creation as in the previous Kalpa.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/008/008_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +45,14 @@ title: ००८
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+This Brahma spent a thousand fourfold yugas as day and as many nights too, several times. Along with his creations, he sleeps, merged in Thee. Hence his night is known as Naimittika Pralaya or a deluge having a reason, viz. sleep.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/008/008_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +72,14 @@ title: ००८
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+As each day begins, with Thy blessing Brahma goes on with the act of creation, as we perform our daily rituals at dawn.Those long-living souls born in the earlier Brahma Kalpa, also wake up at the dawn of the new Kalpa after a long night's sleep.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/008/008_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +97,14 @@ title: ००८
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+This Brahma has now completed one Parardha or half his age (50 years). Oh Lord ! Let me now relate the strange playful events that were enacted by Thee in the preceding night and the following morning of Brahma.(Our 1000x4 yugas = 1 day of Brahma Kalpa, and similarly, our 1000x4 yugas = 1 night of Brahma Kalpa. Our 2000x4 yugas =1 day + 1 night of Brahma. 360 days (including nights) of Brahma = 1 year of Brahma. 100 years of Brahma = Brahma's full age which is the duration of the great deluge also.)
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/008/008_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +124,14 @@ title: ००८
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+At the end of his day Brahma, feeling sleepy, lay merged in Thee. The worlds also took refuge in Thy abdomen and the universe became a huge ocean of water.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/008/008_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +149,14 @@ title: ००८
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+When the entire universe was enveloped in water, Thou being the soul of complete bliss, resting on Adisesha (King of serpents),who is another manifestation of Thee, became deeply immersed in self concentration.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/008/008_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +176,14 @@ title: ००८
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+There the host of forces including Kalashakthi or force of Time remained merged in Thee. Thou, having commanded the force of Time to awaken Thee at the end of the deluge, indulged in yogic sleep.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/008/008_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +201,14 @@ title: ००८
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Viswanatha ! It is said that Kalashakthi or the force of Time, awakened Thee after Thou had slept for a thousand fourfold yugas.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/008/008_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +228,14 @@ title: ००८
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord who were lying in the ocean bed ! On awakening Thou threw a collective glance at all the worlds merged in Thyself.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/008/008_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -181,6 +253,14 @@ title: ००८
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! Then there sprouted from Thy navel, an exotic, divine lotus bud embodying the essence of all the objects merged in Thee.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/008/008_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -200,6 +280,14 @@ title: ००८
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+That lotus bud which came forth from Thy navel, rose up from the waters and spread its radiant light all round chasing away the darkness.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/008/008_12.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -218,6 +306,14 @@ title: ००८
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+In that marvellous, full-blossomed lotus, held up by Thy yogic power, arose Brahma known as Padmajanma or lotusborn, with the entire set of Vedas committed instantly to his memory.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/008/008_13.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -232,5 +328,11 @@ title: ००८
 त्वमित्थमुत्थापितपद्मयोनिः ।  
 अनन्तभूमा मम रोगराशिं  
 निरुन्धि वातालयवास विष्णो ॥ १३॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord Vishnu, who art enshrined in Guruvayur ! Oh Great Soul ! Oh Thou of Eternal Glory, who thus awakened Brahma in Paadmakalpa ! May Thou remove all my afflictions.
+
 </details>
 
