--- a/laxyam/padyam/purANam/nArAyaNIyam/009.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/009.md
@@ -20,6 +20,14 @@ title: ००९
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Sitting in the lotus on Thy navel, Brahma was perplexed as to wherefrom the lotus sprang up in the ocean. Eager to find out, he turned his face all round, thereby acquiring four faces with eight eyes like full-blown lotuses.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/009/009_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +45,14 @@ title: ००९
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Seeing only the unsupported lotus in the mighty ocean and not perceiving Thy divine form propping it up, Brahma started wondering about his own identity, seated all alone in this huge lotus and about its origination.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/009/009_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +72,14 @@ title: ००९
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Convinced that this lotus could not be unsupported and determined to find its origin, Brahma who was highly intelligent, descended through the hole in the stalk of the lotus by his yogic power, but was still unable to locate Thy extremely charming form.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/009/009_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +97,14 @@ title: ००९
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Even after delving deeply through every hole in the lotus stalk and searching frantically for a hundred divine years, Brahma could not find anything.Then giving up the search, he sat in a relaxed posture within the lotus and with his mind focussed only on one point, he went into a deep trance invoking only Thy grace.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/009/009_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +124,14 @@ title: ००९
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+After spending a hundred divine years in a state of deep trance (samadhi), Brahma cleansed by the pure wisdom acquired thus, was granted the wonderful never-before-seen vision of Thee, lying majestically on one side on the body of the serpent (Adisesha). Seeing this marvellous vision through his mind's eye, Brahma was overjoyed.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/009/009_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +149,14 @@ title: ००९
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! I worship that divine form, which was shown to lotus-born God Brahma, that divine form resplendent with the brilliant crown,adorned with bangles,necklaces and shoulder bracelets,the gem-studded waistbelt,dressed in the elegant yellow silk-cloth,the radiant Kausthubha jewel round the neck and sparkling like the Kalaya flower.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/009/009_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +176,14 @@ title: ००९
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+"Hail, Hail, Oh Hari ! Oh Lord of Lakshmi ! Oh Thou of Infinite Glory whose supremacy has been described by the various scriptures ! It is my good fortune that Thou art visible to me. May Thou  grant me the intelligence and skill for the creation of the world." May Thou, whose abundance of good qualities has thus been praised by Brahma, protect me.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/009/009_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +201,14 @@ title: ००९
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Thou blessed Brahma with unlimited skill for the creation of the three worlds and urged him to do penance again. Thou who art the personification of accomplishment encouraged Brahma to pray to Thee with more intense fervour and delighted him with more boons than he asked for.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/009/009_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +228,14 @@ title: ००९
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Then God Brahma did penance for a hundred divine years and acquired more strength from penance and more intelligence than ever before. Seeing the lotus trembling in the water due to the wind, he inhaled both the wind and water, heartened by Thy moral support.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/009/009_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -178,5 +250,11 @@ title: ००९
 प्रकल्प्य भुवनत्रयीं प्रववृते प्रजानिर्मितौ ।  
 तथाविधकृपाभरो गुरुमरुत्पुराधीश्वर  
 त्वमाशु परिपाहि मां गुरुदयोक्षितैरीक्षितैः ॥ १०॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Once more, by Thy blessing, God Brahma, with the lotus as base, created the three worlds and began the creation of living beings. Oh Guruvayurappa ! May Thou of such infinite mercy, protect me by Thy compassion filled glances.
+
 </details>
 
