--- a/laxyam/padyam/purANam/nArAyaNIyam/011.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/011.md
@@ -16,6 +16,14 @@ title: ०११
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord Guruvayurappa !  While creation was going on as ordained, the four divine sages, Sanaka  etc, came to Vaikunta to see Thee.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/011/011_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -29,6 +37,14 @@ title: ०११
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+After traversing the six fortresses, the divine sages came to the gateway of Thy incomparable abode, containing the enchanting garden of Naisreyasa, various tanks and stately castles studded with gems.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/011/011_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -44,6 +60,14 @@ title: ०११
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Here the guards Jaya and Vijaya prevented them from entering Thy abode. Instantly, the sages, who were very keen to see Thee, were enraged and all this Oh Lord, happened in accordance with Thy wishes.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/011/011_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -57,6 +81,14 @@ title: ०११
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+The sages, outraged by this despicable behaviour of the doorkeepers, marring the glory of Vaikunta, cursed them to become demons or asuras. Having thus incurred the wrath and curse of the sages, these two servants of Thine repented their action and begged the sages to grant them the remembrance of Lord Hari  even in their lowly asura status.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/011/011_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -72,6 +104,14 @@ title: ०११
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Aware of all these happenings, Thou, Oh Lotus-eyed Lord, emerged with Goddess Lakshmi, with Thy lovely arms resting on Garuda's (King of Birds) shoulders, delighting the sages with Thy extremely beautiful appearance.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/011/011_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -85,6 +125,14 @@ title: ०११
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+The divine sages sang Thy praises and Thou delighted them with Thy charming speech. Then with pity for Thy forlorn, helpless attendants, Thou promised them that they could attain Thee in three births by nurturing extreme hatred and enmity towards Thee.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/011/011_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -100,6 +148,14 @@ title: ०११
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Then these two dependents of Thine were born of Sage Kasyapa in Diti as twin demon warriors. As they were conceived at dusk they were extremely evil-natured and roamed the world like two Yamas or gods of destruction.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/011/011_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -113,6 +169,14 @@ title: ०११
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+They were known as Hiranyakasipu and Hiranyaksha. Owing to their cruel, demonic nature these two began to terrorise this entire world of Thine.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/011/011_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +192,14 @@ title: ०११
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Among them Hiranyaksha, the king of the demons, searched frantically for an enemy equal to him in valour to fight against, but could not find one such. So he abducted Thy beloved, Goddess Earth and drowned her in water. He then wandered around, crowing with pride, and flaunting his mace.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/011/011_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -138,5 +210,11 @@ title: ०११
 
 ततो जलेशात्सदृशं भवन्तं निशम्य बभ्राम गवेषयंस्त्वाम् ।  
 भक्तैकदृश्यः स कृपानिधे त्वं निरुन्धि रोगान् मरुदालयेश ॥ १०॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Coming to know from Varuna, the Lord of waters that Thou wert equal to him in valour he went about looking for Thee. Oh Lord Guruvayurappa ! Treasurehouse of Mercy ! May Thou who art visible only to true devotees, remove my afflictions.
+
 </details>
 
