--- a/laxyam/padyam/purANam/nArAyaNIyam/013.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/013.md
@@ -20,6 +20,14 @@ title: ०१३
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Varada ! Hiranyaksha was roaming about in the knee-deep waters of the deluge looking for Thee. At that time, Sage Narada, Thy ardent devotee, who was well versed in diplomatic tactics to accomplish Thy aims, went to him and spoke to him, in cleverly worded phrases, praising his prowess and belittling Thy strength.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/013/013_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +45,14 @@ title: ०१३
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Narada, who wished to provoke the demon against Thee, bemoaned the abduction of the earth, which rightfully belonged to him (Hiranyaksha), by that trickster, Vishnu. Incited thus, the demon, following Narada's instructions, found Thee just as Thou wert emerging from the waters with the earth.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/013/013_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +72,14 @@ title: ०१३
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Ignoring for a while, that son of Diti, who was making fun of Thee, calling Thee a wild animal and shouting other words of insult at Thee, Thou, perceiving the earth on the tip of Thy tusk, trembling with fear, propped her up firmly on the water with Thy yogic strength and then engaged in battle with him.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/013/013_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +97,14 @@ title: ०१३
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Since the demon wielded a club in his hand, Thou too chose to fight with Thy lofty club (Kaumodaki) as if it were child's play. Hearing the clashing sounds of the two clubs, the gods in Heaven, asembled in the sky, keen to watch the battle. Then, Brahmadeva requested Thee to kill the demon before dusk.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/013/013_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +124,14 @@ title: ०१३
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+But to the astonishment of all those watching this wonderful duel, the demon's club felled Thine own club to the ground. Yet, Thou, quite unperturbed, recalled to mind, Thy Sudarsana Chakra, or disc, powerful enough to destroy the entire demon race,and took it in hand, with a radiant smile on Thy face.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/013/013_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +149,14 @@ title: ०१३
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Then the demon, fuming like the God of destruction, attacked Thee with a trident which Thou shattered with Thy disc. Overcome with rage, he rained blows on Thee with his fist and resorted to illusionary tactics to ensnare Thee, which is really absurd, as Thou art beyond all illusion (Maya).
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/013/013_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +176,14 @@ title: ०१३
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Seeing that all his illusionary tactics had been destroyed by a minute spark of flame from Thy disc, the demon, his mind blinded by rage, dealt several blows to Thee with his fists. Then, Thou struck a mighty blow on the base of his ear with Thy toe. 
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/013/013_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +201,14 @@ title: ०१३
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+The gigantic asura fell down, bleeding profusely from the face and mouth, on being kicked by Thy foot and the sages were overjoyed by his fall. Then those great sages, whose hearts were delighted, with deep, enhanced, fervour, extolled Thy virtues, singing profoundly meaningful hymns about Thee, who art the embodiment of Sacrifice (Yajna).
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/013/013_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +228,14 @@ title: ०१३
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Supreme Lord ! Grantor of boons ! Thou who art the personification of Yajna, wert then described in the following manner by the sages. Thy skin are the Chandas (the Gayatri mantra and such like). Thy hair houses the sheaf of Darbha grass. Thy eye holds the ghee. In Thy feet are the four priests conducting the sacrifice. Thy face holds the sacrificial vessel (Sruk) for keeping the ghee. In Thy stomach is the vessel Ida for storing the Puroda offering. Thy tongue is the vessel for extracting Soma juice and Thy ear is the vessel for drinking Soma juice. The Soma juice is Thy semen and in Thy neck are the three sacrificial rites called Upsat.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/013/013_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -178,5 +250,11 @@ title: ०१३
 महीयस्या मूर्त्या विमलतरकीर्त्या च विलसन् ।  
 स्वधिष्ण्यं संप्राप्तः सुखरसविहारी मधुरिपो  
 निरुन्ध्या रोगं मे सकलमपि वातालयपते ॥ १३१०॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Destroyer of the demon Madhu, Thus the great sages sang hymns of glory delighting Thy mind. Oh Thou of this admirable Varaha incarnation, of immaculate glory ! Having accomplished the task of destroying the demon Hiranyaksha, didst retire to Thy abode, Vaikunta, with Thy heart filled by Thy own natural bliss. Oh Lord of Guruvayur ! May Thou protect me from my ills.
+
 </details>
 
