--- a/laxyam/padyam/purANam/nArAyaNIyam/014.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/014.md
@@ -16,6 +16,14 @@ title: ०१४
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Swayambhuva Manu, who came from the limb of lotus-born Brahma, lived happily, constantly worshipping Thy two feet and singing Thy praises.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/014/014_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -29,6 +37,14 @@ title: ०१४
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+During that same time (Swayambhuva Manvantara), Prajapati (ruler) Kardama, who took birth from the shadow of Brahma, and who in accordance with Brahma's wishes, took pleasure in creation, served Thee, Oh Lord, for ten thousand years.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/014/014_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -44,6 +60,14 @@ title: ०१४
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! Thy divine form, seated on the bird Garuda, majestic in colour, like the dark blue cloud, Thy lotus-like hand holding playfully the lotus flower and Thy face radiant with a pleasing smile was revealed to Kardama by Thy divine grace.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/014/014_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -57,6 +81,14 @@ title: ०१४
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+When Kardama, enraptured by Thy revelation, was singing Thy praises, Thou granted him the boon of marrying the daughter of Manu and thereby begetting nine daughters and a son, Kapila, who would be a part of Thine ownself, and finally, salvation. Then Thou vanished from his sight.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/014/014_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -72,6 +104,14 @@ title: ०१४
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Swayambhuva Manu under the guidance of Narada, who was prompted by Thee, went with his consort, Satarupa and virtuous daughter, Devahoothi, to Kardama, who was looking forward to their coming.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/014/014_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -85,6 +125,14 @@ title: ०१४
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Kardama married Devahuti, the jewel among maidens, given by Manu. Although at peace in his devotion to Thee, he lavished his love on her in return for her selfless and steadfast service and affection.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/014/014_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -100,6 +148,14 @@ title: ०१४
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+In order to make his beloved Devahoothi happy, Kardama, by virtue of the yogic power, acquired by him through his constant devotion to Thee, adopted a new elegant form, and indulged in romantic pleasures,in the heavenly regions with Devahoothi, accompanied by celestial maidens, in the vimana or aerial pleasure car created by himself.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/014/014_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -113,6 +169,14 @@ title: ०१४
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+After spending a hundred years thus and begetting nine daughters, Kardama, though ever ready to go to the forest to do penance,stayed at home to fulfil his beloved's desire, eagerly looking forward to Thy birth as their son, Kapila.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/014/014_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +192,14 @@ title: ०१४
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! Thou took the incarnation of Kapila in Devahoothi, who obeying her husband's command, was intent only on service to Thee, simply to teach the human race, the philosophy of the Supreme Soul and the means to acquire that wisdom.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/014/014_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -138,5 +210,11 @@ title: ०१४
 
 वनमेयुषि कर्दमे प्रसन्ने मतसर्वस्वमुपादिशञ्जनन्यै ।  
 कपिलात्मक वायुमदिरेशत्वरितं त्वं परिपाहि मां गदौघात् ॥ १०॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Happy at having seen Thy Kapila incarnation, Kardama departed to the forest. Oh Guruvayurappa ! May Thou who came in the form of Kapila to teach Thy mother the essence of religion, save me from all my sorrows.
+
 </details>
 
