--- a/laxyam/padyam/purANam/nArAyaNIyam/015.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/015.md
@@ -20,6 +20,14 @@ title: ०१५
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Thou in Thy incarnation as Kapila, advised Devahoothi thus: The human mind gets attracted to material objects in this world which leads to bondage, while the mind which remains detached is free from worldly ties and hence conducive to adopting the path of devotion. Bhakthi Yoga or the path of devotion leads to the liberation of the soul. Hence we should follow in the footsteps of great souls and have only the goal of devotion in our heart.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/015/015_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +45,14 @@ title: ०१५
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+There are twenty-four basic principles governing human existence in this world. They are Prakriti or matter, Mahat or intelligence, Ahamkara or egoism, the five subtle bases, the five elements, the mind and the ten organs of sense and action. The twenty-fifth which is Purusha or the Supreme Soul, transcends all others and the one who understands this differntiation will be free from Maya. Thus Thou advised Devahoothi, in Thy incarnation as Kapila.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/015/015_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +72,14 @@ title: ०१५
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+This Purusha or soul is far above the numerous qualities relating to Prakriti or matter. If the Purusha gets attached to Prakriti, her qualities influence him. By steadfast devotion to Thee and constantly remembering these principles, that attachment to Prakriti will automatically vanish. Thus Thou advised Devahuti in Thy incarnation as Kapila.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/015/015_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +97,14 @@ title: ०१५
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+The devotee who has cleansed his mind of impurities and acquired control over his senses by the rigorous practise of Yogasanas should constantly think of the Lord's form as seated on the Garuda, adorned with divine ornaments and weapons, resplendent like the Tamala flower. Thus Thou advised Devahoothi in Thy incarnation as Kapila.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/015/015_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +124,14 @@ title: ०१५
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Listening to the Lord's virtuous attributes and stories of His sportive phenomena, chanting His names repeatedly and singing His glories will inspire intense devotion which flows unhindered like the heavenly river Ganges. Such a great devotion is powerful enough to conquer Death. Thus Thou advised Devahoothi in Thy incarnation as Kapila.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/015/015_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +149,14 @@ title: ०१५
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+The man who earns his livelihood by unfair means, inflicting hardship on others to maintain his family, who is a slave to physical passion, who is engrossed in his children's mischief and who is attached to his home without any devotion to the Lord will truly and unfortunately go to hell. Thus Thou advised Devahoothi in Thy incarnation as Kapila.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/015/015_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +176,14 @@ title: ०१५
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+In the womb of the mother, a man goes through endless woes and although having real wisdom, he has no means of overcoming his sorrows. When he comes out in the world he forgets that knowledge, and is afflicted by several maladies in his childhood. Again on attaining adolescence he becomes, unfortunately, a slave to carnal passion. Thus Thou advised Devahoothi in Thy incarnation as Kapila.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/015/015_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +201,14 @@ title: ०१५
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+That householder who leads a virtuous life propitiating the gods and his ancestors, goes to the southern path and after the merits earned by him are exhausted, falls back on the earth to begin a new cycle of life. But if our action and devotion are dedicated to the Lord without any expectation of its fruit, we will go toward the northern path of salvation. Thus Thou advised Devahoothi, in Thy incarnation as Kapila.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/015/015_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +228,14 @@ title: ०१५
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! Blessing Devahoothi after imparting to her the knowledge regarding the Supreme Being and Salvation, Thou departed accompanied by the host of sages. In course of time, Devahoothi, adopting the path of devotion, with a mind cleansed of impurities, attained salvation. Even now Thou in the form of Kapila, dost reside in the north eastern quarter for the welfare of mankind.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/015/015_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -178,5 +250,11 @@ title: ०१५
 सकलभयविनेत्रीं सर्वकामोपनेत्रीम् ।  
 वदसि खलु दृढं त्वं त्वद्विधूयामयान्मे  
 गुरुपवनपुरेश त्वय्युपाधत्स्व भक्तिम् ॥ १०॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Supreme Lord ! What more can be said in this regard ? Thou hast most emphatically declared that devotion to Thy lotus feet alone can remove all our fears and grant all our desires. May Thou, Oh Guruvayurappa cure all my afflictions and kindle in my heart that devotion to Thee.
+
 </details>
 
