--- a/laxyam/padyam/purANam/nArAyaNIyam/016.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/016.md
@@ -20,6 +20,14 @@ title: ०१६
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Brahma's son Daksha Prajapati, married Prasuti, daughter of Swayambhuva Manu and fathered sixteen daughters by her. Of these he gave thirteen to God Dharma, Swadha to the ancestors, Swaha to Agni, the Fire god and Sati to Siva, who was a part of Thine own self, in marriage.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/016/016_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +45,14 @@ title: ०१६
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Dharma's wife Murthi gave birth to Thee, Narayana, along with Thy twin Nara, both of great glory. The devas who were overjoyed at this incarnation of Thee, sounded drums, showered flowers and sang Thy praises.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/016/016_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +72,14 @@ title: ०१६
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+In order to destroy the demon Sahasrakavacha, who donned a thousand armours, Thou in the twin form of Nara-Narayana, did penance and battle, alternately for a thousand years, and as a result of that penance, all but one of his armours were shattered. Thou broke the remaining one armour and thus effortlessly killed him.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/016/016_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +97,14 @@ title: ०१६
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Thou and Thy brother Nara, retired to the hermitage at Badarika, and spent Thy time practising the path to salvation and teaching the same to others also. Then Indra, unable to tolerate Thy peaceful existence and jealous of the strength of Thy penance, sent Manmatha, the god of love, along with celestial maidens to disturb Thy peace and penance.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/016/016_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +124,14 @@ title: ०१६
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Cupid (Manmatha) along with his friends, the spring (Vasanta) season and the gentle Malaya breeze, aimed his arrows consisting of the erotic glances and graceful dance movements of the celestial maidens at Thee. On seeing Thee still unmoved by such gestures, Cupid was alarmed. Thou spoke to him, then with a kind smile.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/016/016_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +149,14 @@ title: ०१६
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Reassuring Cupid, Vasanta and the celestial maidens to be calm, Thou revealed to them Thy own retinue of beautiful maidens, standing around, singing Thy glory, who were a creation of Thine own mind and they were wonder struck by that sight.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/016/016_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +176,14 @@ title: ०१६
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Cupid and his companions who had conspired together to allure Thee were in fact captivated by the sweet aroma of Thy serving maids. Ashamed of themselves they humbly accepted Urvasi, (who was so beautiful that the pride of the heavenly damsels was subdued) presented by Thee to them.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/016/016_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +201,14 @@ title: ०१६
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Seeing Urvasi and perceiving Thy glory, Indra became disturbed in mind, reflecting on Thy majesty. Oh, Grantor of Boons ! There is only one other incarnation of Thine which surpasses this one in peace and beauty and that is Thy incarnation as Krishna.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/016/016_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +228,14 @@ title: ०१६
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Daksha who was overly indulged by Brahma, became blinded by arrogance due to the predominance of Rajo Guna in his mind. He had no respect or devotion for Thee and was unfortunately without any peace of mind. Due to this taint in his nature, he developed a hatred for Lord Siva, who too is a form of Thee and projected his hatred by insulting his own daughter, Sati, who was Siva's wife, in the sacrifice he performed.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/016/016_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -178,5 +250,11 @@ title: ०१६
 देवप्रसादितहरादथ लब्धजीवः ।  
 त्वत्पूरितक्रतुवरः पुनराप शान्तिं  
 स त्वं प्रशान्तिकर पाहि मरुत्पुरेश ॥१०॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Siva, who was enraged by Daksha's insults, destroyed the sacrifice and cut off his head. Then, when Siva was propitiated by the gods, Daksha regained his life due to Siva's blessing. His sacrifice was then completed in the best manner possible by Thee and he got back his peace of mind. Oh Gurvayurappa ! Thou who brings peace to the devotee's heart, May Thou save me.
+
 </details>
 
