--- a/laxyam/padyam/purANam/nArAyaNIyam/017.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/017.md
@@ -20,6 +20,14 @@ title: ०१७
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+King Uttanapada, the son of Swayambhuva Manu, had two wives, by name Suruchi and Suneethi. The king was very fond of Suruchi but ignored Suneethi altogether. Having no other support, Suneethi took refuge in Thee alone.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/017/017_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +45,14 @@ title: ०१७
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Once when Uttama, son of Suruchi, was sitting on his father's lap, Dhruva, son of Suneethi, wished to do the same but was stopped by Suruchi, who scolded him harshly. Oh Guruvayurappa ! Those who have no devotion to Thee are indeed very jealous at heart.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/017/017_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +72,14 @@ title: ०१७
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+The father who was blinded by his infatuation for Suruchi, remained a silent witness to the cruel treatment meted out by her to the boy. Deeply wounded at heart, Dhruva went in search of his mother. She consoled the child, saying that taking refuge at Thy feet alone would help one overcome the ill effects of one's previous actions.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/017/017_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +97,14 @@ title: ०१७
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Following his mother's advice, the child who was only five years old, yet full of self respect set out of the city, determined to pray to Thee. Sage Narada, whom he met on the way taught him the method of worshipping Thee by reciting Mantras. With that knowledge, he proceeded to the forest, Madhuvana, to do penance.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/017/017_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +124,14 @@ title: ०१७
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+King Uttanapada, who was grieving at heart, after Dhruva's departure to the forest, was consoled by Narada, who came to the palace. Meanwhile, the boy, with his mind fully dedicated to Thee spent five months in rigorous penance, intensifying it, step by step.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/017/017_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +149,14 @@ title: ०१७
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Owing to the intensity of Dhruva's penance, living creatures in all the directions began to feel suffocated. The gods prayed to Thee to save them. So, with Thy heart overflowing with mercy, Thou appeared, seated on Garuda, before Dhruva, whose heart was fully immersed in Thy divine ecstatic form.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/017/017_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +176,14 @@ title: ०१७
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Thy divine appearance filled Dhruva's heart with waves of ecstasy. Deeply submerged in the nectar of Thy form, he was kindled with the desire to praise Thee. Knowing his desire, Thou gently caressed his cheek, with Thy conch (the source of Sabda Brahma).
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/017/017_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +201,14 @@ title: ०१७
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Then Dhruva, with his mind, purified and enlightened by Thy divine touch, sang Thy praises to his heart's content. Thou blessed him to rule over the kingdom happily for a long time. Thou then granted him the boon of attaining the highest abode, the Dhruvapadam, from which there would be no return to the nether regions.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/017/017_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +228,14 @@ title: ०१७
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+After Thou had departed blessing Dhruva thus, the prince returned to the city, to the joy of all. All his wishes were fulfilled with Thy grace. After his father retired to the forest to do penance, he ruled the kingdom happily for a long time.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/017/017_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -182,6 +254,14 @@ title: ०१७
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Guruvayurappa ! Once when Dhruva's brother, Uttama, was killed by a Yaksha, he was determined to wage war against the Yakshas, but in compliance with the request of Swayambhuva Manu, Dhruva withdrew from the war. Kubera, the king of the Yakshas, being pleased with Dhruva's forbearance, granted him a boon, but the large-hearted Dhruva, asked only for the boon of firm devotion to Thee.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/017/017_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -196,5 +276,11 @@ title: ०१७
 मात्रा समं ध्रुवपदे मुदितोऽयमास्ते ।  
 एवं स्वभृत्यजनपालनलोलधीस्त्वं  
 वातालयाधिप निरुन्धि ममामयौघान् ॥ ११॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+When Dhruva's life came to an end, he went with his mother in the aerial car brought by Thy servants, to the Dhruva region high up in the heavens, where to this day he resides happily as a guiding star. Oh Guruvayurappa ! May Thou who art an ardent protector of Thy devotees, remove my afflictions.
+
 </details>
 
