--- a/laxyam/padyam/purANam/nArAyaNIyam/018.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/018.md
@@ -20,6 +20,14 @@ title: ०१८
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+The famous king, Anga, who was born in the same dynasty as Dhruva, had a son named Vena, who was very wicked. Anga, who was heart broken by his son's evil ways, went to the forest, with his mind dedicated to Thy feet alone.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/018/018_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +45,14 @@ title: ०१८
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+In spite of his wickedness and cruelty, he was crowned king by the subjects of his kingdom to rule over the land. Owing to his arrogance and pride, he indulged in self praise and banned all sacrificial rites to Thee and all kinds of worship of Thee in his kingdom.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/018/018_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +72,14 @@ title: ०१८
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+In order to bring him back to the path of righteousness, several sages came to advise him for his own good, but he spurned their advice, boasting that he alone was the supreme lord on earth, and blaspheming Thee using vile words. The lordly sages, enraged by his behaviour, cursed him and reduced him to ashes, like a moth burnt in fire.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/018/018_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +97,14 @@ title: ०१८
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+After his death, the great sages were afraid that tyranny and evil would increase if the kingdom remained without a ruler. Vena's mother had long preserved his dead body. So the lordly sages churned his thighs, which were like strong poles and removed all his sins. Then, when they churned his ramrod like arm, Thou manifested Thyself.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/018/018_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +124,14 @@ title: ०१८
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Thou took the form of Prithu, the great emperor. Prompted by the sages, soothsayers, bards and others sang hymns of glory about the various brave and gallant exploits Thou wert to perform in the future. Due to Vena's evil deeds, the Earth had swallowed all her wealth and would not bring it forth. Attacking her with Thy bow, Thou levelled all the ups and downs and made the Earth yield all the hidden wealth.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/018/018_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +149,14 @@ title: ०१८
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Transforming the Earth into the celestial cow, Kamadhenu, Thou made the gods and others milk it, using the heads of their dynasties as calves, (and obtain) whatever they wished for, such as food and other desired objects, in befitting, beautiful vessels, as much as they wanted.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/018/018_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +176,14 @@ title: ०१८
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord of three abodes ! Thou, in the form of Prithu,  performed several sacrifices to Vishnu, which is Thine own self. When the hundredth horse sacrifice began, Indra, out of jealousy, came to Thee, disguised as a lowly barbarian, and abducted the horse. In the battle which followed, he was defeated by Thy son.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/018/018_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +201,14 @@ title: ०१८
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+But Indra came back persistently and abducted the horse, time and again. Finally the great sages decided to make Devendra, himself the sacrificial offering, but God Brahma stopped them from doing so. When the sacrifice was over, Thou saw Thine own self manifested in the all-pervading Vishnu form.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/018/018_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +228,14 @@ title: ०१८
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+In Thy form as Prithu, Thou received the boon of single-minded devotion from Vishnu. Later, while residing on the banks of the river Ganges, (as Prithu), when Thou wert engaged in counselling the sages assembled there for a sacrificial session, about Dharma, Thou saw in person the great sage, Sanaka and others.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/018/018_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -178,5 +250,11 @@ title: ०१८
 स्वात्मानं स्वयमगमो वनान्तसेवी ।  
 तत्तादृक्पृथुवपुरीश सत्वरं मे  
 रोगौघं प्रशमय वातगेहवासिन् ॥ १०॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Following the advice on spiritual wisdom given by Sanaka and the rest, Thou, as Prithu, went to the forest to do penance and attained self-salvation, merging in Thine own self. Oh Guruvayurappa ! May Thou who came in the form of Prithu, remove all my afflictions.
+
 </details>
 
