--- a/laxyam/padyam/purANam/nArAyaNIyam/020.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/020.md
@@ -16,6 +16,14 @@ title: ०२०
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Priyavrata's beloved son, Aagnidhara, had a son called Nabhi, of great fame, who performed many sacrifices to please Thee. During one such sacrifice, he saw Thee, the grantor of the heart's desires.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/020/020_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -29,6 +37,14 @@ title: ०२०
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+In that sacrifice, the great sages praised Thee and beseeched Thee, who art the embodiment of the universe, to bless the king with a son equal to Thee in every respect. As there is none such, Thou promised to be born as Nabhi's son and vanished into the sacrificial fire.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/020/020_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -44,6 +60,14 @@ title: ०२०
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+In keeping with Thy word, Thou took birth as Nabhi's son, Rishabha, in Nabhi's beloved wife, Merudevi, bringing great joy to the people of the land, due to Thy extraordinary qualities and might.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/020/020_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -57,6 +81,14 @@ title: ०२०
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Thou, who art the Lord of the three worlds, was entrusted with the responsibility of ruling the kingdom by Nabhi, who went to the forest along with Merudevi, to do penance. Worshipping Thee devoutly, he attained Thy abode Vaikunta, the state of complete bliss.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/020/020_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -72,6 +104,14 @@ title: ०२०
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Indra, who was jealous of Thy glory and the growing prosperity of the land ruled by Thee, stopped the rains in this land of Ajanabha. So by the strength of Thy own yoga Thou brought rainfall in plenty here.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/020/020_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -85,6 +125,14 @@ title: ०२०
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Although of complete inner satisfaction and bliss, Thou, married the beautiful damsel, Jayanthi, presented by Indra to Thee after Thou had defeated his attempt to bring drought to Thy country. Thou begot by her a hundred sons of whom the eldest, Bharata, became king.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/020/020_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -100,6 +148,14 @@ title: ०२०
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Among the rest, nine became famous sages. Another nine ruled over the nine provinces of Bharatavarsha. The remaining eightyone sons of Thee attained the status of Brahmins due to the strength of their penance.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/020/020_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -113,6 +169,14 @@ title: ०२०
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+In the midst of the lordly sages, Thou preached to Thy sons the path to salvation, explaining that detachment from worldly objects combined with devotion to God would lead to the liberation of the soul. Then Thou embarked on the Paramahamsa (an elevated status of sainthood) path, in which Thou adopted the lifestyle of an emotionless mad man or one obsessed by a spirit.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/020/020_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +192,14 @@ title: ०२०
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Although Thou art the Supreme Soul, Thou roamed the entire world, in the guise of a mad man, preaching spiritual values to the people, some of whom spurned Thy advice. In spite of being ridiculed, Thou traversed the whole earth, unmoved by their taunts, immersed in the ecstasy of contemplation of the Supreme Soul.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/020/020_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -138,5 +210,11 @@ title: ०२०
 
 शयुव्रतं गोमृगकाकचर्यां चिरं चरन्नाप्य परं स्वरूपम् ।  
 दवाहृताङ्गः कुटकाचले त्वं तापान्ममापाकुरु वातनाथ ॥ २०१० ॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Betaking for a long time to the lifestyle of a python (which eats what comes its way) or that of a cow, deer or crow, Thou attained Thy Supreme Form, having Thy body burnt in a forest fire in the Kutaka or Coorg mountains. Oh Guruvayurappa !  May Thou remove all my woes.
+
 </details>
 
