--- a/laxyam/padyam/purANam/nArAyaNIyam/022.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/022.md
@@ -16,6 +16,14 @@ title: ०२२
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Long ago, there lived a Brahmin by name Ajamila, who followed the path of virtue, leading the life of a householder. He went to the forest at the command of his father. There he met a woman of immodest appearance and undesirable character, in a drunken state.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/022/022_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -29,6 +37,14 @@ title: ०२२
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Though of a composed, disciplined mind by nature, he was attracted to her and forsaking his dutiful way of life, he became a slave to passion and spent his life in her company. Leading a sinful life, he grew old and became very much attached to his son, to whom he had given Thy name, Narayana.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/022/022_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -44,6 +60,14 @@ title: ०२२
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+When he was in his death bed, he was terrified by the sight of three attendants of the god of death in front of him. Owing to a small spark of Thy memory lingering in his mind from his younger days, he called out in fear, Thy name, Narayana, thinking of his son.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/022/022_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -57,6 +81,14 @@ title: ०२२
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Despite his sinfulness, the moment he uttered the word, Narayana, owing to the power of the letters of Thy divine name, there appeared at his bedside, Thy own charming attendants, four-armed and wearing yellow garments.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/022/022_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -72,6 +104,14 @@ title: ०२२
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Thy attendants forcibly stopped Yama's messengers, who after tying him with ropes were dragging him along. Thus prevented by Thy attendants, Yama's servants apprised them of all his sins.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/022/022_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -85,6 +125,14 @@ title: ०२२
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! Thy attendants admonished Yama's soldiers for meting out punishment to a person who had atoned for his sins and scolded them for their ignorance in spite of being learned.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/022/022_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -100,6 +148,14 @@ title: ०२२
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+The scriptures (vedas and shastras) describe many vows and disciplinary measures which help one to get rid of one's sins, but they do not rid us of our innate wickedness. But devotion to the Lord destroys both the sin and the natural inclination to sin. Thus, Oh Lord, Thy attendants advised Yama's men.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/022/022_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -113,6 +169,14 @@ title: ०२२
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Thy attendants told the messengers of Yama that even though Ajamila called out the name of Hari in fear, the very fact that he uttered the name of the Lord was atonement enough for the sins committed by him even in a thousand crore years.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/022/022_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +192,14 @@ title: ०२२
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+The magnificence of the divine name Hari is so (mighty) glorious, that even mere recitation and repetition of the name of Lord Mukunda, even if done mechanically without conscious effort, destroys all the sins committed by men, just as fire burns the sticks of firewood or medicine removes diseases. Thus, Oh Lord, Thy attendants spoke.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/022/022_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -142,6 +214,14 @@ title: ०२२
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+The soldiers of Yama, thus advised, withdrew and Thy attendants also went away. Ajamila after spending some time meditating on Thee, was taken to Thy abode by Thy attendants at the appropriate hour.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/022/022_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -152,5 +232,11 @@ title: ०२२
 
 स्वकिङ्गरावेदनशङ्कितो यमस्त्वदङ्घ्रिभक्तेषु न गम्यतामिति ।  
 स्वकीयभृत्यानशिशिक्षदुच्चकैः स देव वातालय पाहि माम् ॥ २२११ ॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+The servants of Yama apprised him of the developments on earth in Ajamila's affair and Yama, Godfearing and righteous as he was, strictly forbade them to approach any devotee of Thy feet. Oh Guruvayurappa of such immense glory ! May Thou protect me.
+
 </details>
 
