--- a/laxyam/padyam/purANam/nArAyaNIyam/025.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/025.md
@@ -20,6 +20,14 @@ title: ०२५
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+When Hiranyakasipu struck the pillar with his sword, so forcefully, there arose a deafening roar, shattering his ears and seeming to stir up the inner contents of the bowl of the earth, striking terror all round. Never having heard such a terrible sound before, the demon king's heart was shaken by an unknown feeling of dread. Even Brahma was jolted from his seat by that sound.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/025/025_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +45,14 @@ title: ०२५
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! As the demon, full of rage, was rolling his eyes in all directions, there emerged from the pillar Thy form, which was neither beast, nor man. While the demon, his mind, filled with bewilderment at this strange vision, was wondering who this dreadful creature could be, Thou grew to immense proportions, roaring terribly, and radiant with Thy thick, white, fierce mane.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/025/025_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +72,14 @@ title: ०२५
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+May this divine form of Thine flourish and conquer. Thy eyes shining like molten gold, rolling fiercely; Thy copious, flying mane seeming to obscure the entire sky; Thy mouth wide open like a huge cave, with its long projecting tongue, flitting like a sword; the two incisor teeth on either side of the tongue, looking fierce and terrible. Oh Lord ! This form of Thine is the wonder of wonders.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/025/025_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +97,14 @@ title: ०२५
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! I prostrate before that Narasimha form of Thine which is a fusion of man and lion; the fierce looking jaw, criss crossed by swollen nerve ends, seeming to tear the cheeks apart, the short, stout neck, the hundreds of strong hands with pointed claws, emitting fiery rays, the terrible roar like that of thunder clouds, driving away the enemies; I bow down to all these divine features of Thy Narasimha form.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/025/025_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +124,14 @@ title: ०२५
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Realising without doubt that Thou wert Vishnu himself, the demon leapt toward Thee, brandishing his club, but Thou caught him in Thy powerful arms. Thereupon, he slipped out of Thy hold, and grabbing his sword and shield, and exhibiting his amazing prowess in battle tactics, he lunged at Thee, who art capable of swallowing the entire world like nectar.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/025/025_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -110,6 +150,14 @@ title: ०२५
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Then, again, quickly grabbing that lowly demon, who was spinning round and round, attacking Thee, in Thy two arms, Thou laid him across Thy two thighs, seated as Thou wert on the threshold, and tearing his breast apart with Thy claws, Thou drank his blood, gushing out profusely, with great vigour and satisfaction, roaring as if it were the end of the Universe.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/025/025_07.mp3"></div>
 
 
@@ -121,6 +169,14 @@ title: ०२५
 त्वां मध्येसभमिद्धरोषमुषितं दुर्वारगुर्वारवम् ।  
 अभ्येतुं न शशक कोऽपि भुवने दूरे स्थिता भीरवः  
 सर्वे शर्वविरिञ्चवासवमुखाः प्रत्येकमस्तोषत ॥ २५८॥
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Then, throwing away the demon's dead body, Thou, with Thy form drenched in his blood, fell upon the entire demon clan and swallowed them. Then total chaos prevailed over the Universe, affecting both movable and immovable objects; the earth revolved; the oceans rolled; the mountains shook and the stars began to fall from their respective positions.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/025/025_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -140,6 +196,14 @@ title: ०२५
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Thy body looking gruesome with its gory coating of flesh and fat, and wearing the bloodsoaked entrails of the demon, like a garland, Thou wert seated in the midst of the assembly hall, roaring loudly with uncontrollable rage. At that time, none had the courage to come near Thee, in the entire world. All gods, including Siva, Brahma and Indra, stood afar, out of fear, praising Thee, individually.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/025/025_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -154,5 +218,11 @@ title: ०२५
 श्रुत्यन्तस्फुटगीतसर्वमहिमन्नत्यन्तशुद्धाकृते ।  
 तत्तादृङ्निखिलोत्तरं पुनरहो कस्त्वां परो लंघयेत्  
 प्रह्लादप्रिय हे मरुत्पुरपते सर्वामयात्पाहि माम् ॥ २५१०॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+As Thy anger remained unabated, the child, Prahlada, at the instance of Brahma, prostrated at Thy feet, without fear. Thou, with Thy heart filled with compassion, calmed down and placing Thy hand on his head, blessed him. To him who was singing Thy hymns of praise, without any desire for favours, Thou granted the boon of steadfast devotion, and Thy blessing to the world.
+
 </details>
 
