--- a/laxyam/padyam/purANam/nArAyaNIyam/026.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/026.md
@@ -16,6 +16,14 @@ title: ०२६
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Indradyumna, the king of the land of Pandya, was a staunch devotee of Thee. Once, when he was engaged deeply in worshipping Thee, in the Malaya  mountain, Sage Agastya, came there, expecting to be welcomed as an honoured guest by the king; but the king, his mind fully immersed in Thee, did not notice the sage at all.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/026/026_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -29,6 +37,14 @@ title: ०२६
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Sage Agastya, overcome by rage, cursed him to become an elephant of inferior intellect, for his arrogance, and went away. The king became the lord of elephants, but was graced with Thy remembrance as he had been thinking of Thee, when he was cursed thus.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/026/026_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -44,6 +60,14 @@ title: ०२६
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+This king of elephants was engaged in romantic sports with the female elephants in the Trikuta mountain, situated in the middle of the ocean of milk, and was superior in strength to all other animals. Oh Lord, Thy devotees attain glory, wherever they go.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/026/026_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -57,6 +81,14 @@ title: ०२६
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Owing to the divinity of the place and his own natural strength, this elephant lord knew no hardship here. Yet, once, by Thy impulsion, being scorched by the heat of summer, he was playing with the other elephants, beside a lake on the mountain slope.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/026/026_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -72,6 +104,14 @@ title: ०२६
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+At that time, a gandharva, named Huhu, having become a crocodile, due to the curse of Sage Devala,  was present there. This crocodile caught hold of the elephant's foot. Oh Lord, in order to give ultimate peace to Thy devotees, Thou tests them by putting them through trial and tribulation.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/026/026_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -85,6 +125,14 @@ title: ०२६
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Gajendra, (in his previous birth), due to the glory of Thy worship, had been continuously engaged in conflict, for a thousand years. Now, when the time had come for him, to attain  liberation at Thy feet, Thou caused him to be afflicted by the crocodile.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/026/026_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -100,6 +148,14 @@ title: ०२६
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Supreme Soul ! In his time of distress, Gajendra, remembered his devotion and knowledge of the previous birth; he began to worship Thee, offering lotuses with his trunk held aloft, and chanting the best of hymns, learnt by him in the past birth, extolling Thy Unqualified Supreme form.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/026/026_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -113,6 +169,14 @@ title: ०२६
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+On hearing the entire hymn, describing the Unqualified nature of the Universal Being, Gods Brahma, Siva  and others, knowing that it did not refer to them, did not come there. But Thou, who art all knowing, manifested before him, seated on Garuda, impelled by Thy flow of mercy.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/026/026_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +192,14 @@ title: ०२६
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Then holding Gajendra  in Thy lotuslike hand, Thou tore apart the ferocious crocodile, with Thy disc. The Gandharva, was then liberated from his curse and the elephant attained oneness with Thee, transcending all.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/026/026_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -138,5 +210,11 @@ title: ०२६
 
 एतद्वृत्तं त्वां च मां च प्रगे यो गायेत्सोऽयं भूयसे श्रेयसे स्यात् ।  
 इत्युक्त्वैनं तेन सार्धं गतस्त्वं धिष्ण्यं विष्णो पाहि वातालयेश ॥ २६१० ॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Oh All pervading Lord, According to Thee, whoever sings this episode of Gajendra Moksham, at dawn and chants the name of Gajendra  and Thee, will attain all wealth and prosperity. Having said this, Thou departed for Vaikunta,  along with him.  Oh Guruvayurappa !  May Thou protect me.
+
 </details>
 
