--- a/laxyam/padyam/purANam/nArAyaNIyam/027.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/027.md
@@ -16,6 +16,14 @@ title: ०२७
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Sage Durvasa, once gifted to Indra, the divine garland, presented to him by celestial maidens. That garland was trampled upon and crushed by Iravata, lord of elephants, belonging to Indra.  Seeing this, the sage cursed him out of anger. Since Durvasa  was not born of Thee, (but of Rudra), tolerance was not one of his qualities.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/027/027_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -29,6 +37,14 @@ title: ०२७
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Due to that curse, Indra, hitherto known as Nirjara, or The Unaging One, was afflicted by old age; the gods were defeated by the demons  and lost all their glory and strength. Oh Thou Source of Deliverance ! All the gods including Siva  went to Brahma, and along with him came to Thee for help.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/027/027_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -44,6 +60,14 @@ title: ०२७
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Varada ! Grantor of Boons ! Thou whose glory was long sung by Brahma  and others, appeared before them, radiating supreme light and ordered them to enter into a pact with the demon race and churn the ocean for nectar.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/027/027_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -57,6 +81,14 @@ title: ०२७
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+The gods, entering into a peace pact with the demons, proudly brought the Mandara  mountain to be used as a churning stick, but it fell down half way. Then, Thou seated aloft Garuda, the king of birds, lifted it effortlessly, as if it were a badara  fruit and soon, placed it in the ocean of milk.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/027/027_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -72,6 +104,14 @@ title: ०२७
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Using  Vasuki, the serpent, as the churning rope, the gods and demons began to churn the ocean of milk, with all the vital seeds embedded in it. At that time, Thou, cunningly, placed the demons, facing the serpent, near its mouth.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/027/027_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -85,6 +125,14 @@ title: ०२७
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+When the ocean was thus vigorously churned, the churning stick, the Mandara mountain, due to its own heavy weight, began to sink in the rolling waters below. Seeing the gods becoming distressed by this, Thou, wishing to help them, took the form of a hardbacked tortoise.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/027/027_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -100,6 +148,14 @@ title: ०२७
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Vishnu ! Thou, assuming the form of a tortoise, with its outer shell harder than diamond, and its width spanning a lakh of yojanas, entered the depths of the ocean, and lifted the lord of the mountains, that lay sunken there.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/027/027_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -113,6 +169,14 @@ title: ०२७
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+As the lord of mountains emerged from the water, there was gaiety all round, and the gods and demons churned with redoubled vigour. Thou, at that time, entered the hearts of the two groups and the lord of serpents, enthusing them and driving away their fatigue.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/027/027_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +192,14 @@ title: ०२७
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+To prevent the Mandara  mountain from being toppled, owing to the vigorous churning and the consequent speedy revolution, Thou, held it firmly in place with Thy lotus like hand. Seeing this, Siva, Brahma  and others, showered flowers on Thee from the heavens and sang Thy praises full of wonder and delight.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/027/027_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -142,6 +214,14 @@ title: ०२७
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+The poisonous breath emanating from the serpent's mouth, made the demons feel parched and uncomfortable. The gods also felt the heat,  but to a lesser extent, as they were in the rear. Owing to Thy mercy, Oh  Lord ! The clouds rained water on the gods, but not on the demons.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/027/027_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -152,5 +232,11 @@ title: ०२७
 
 उद्भ्राम्यद्बहुतिमिनक्रचक्रवाले तत्राब्धौ चिरमथितेऽपि निर्विकारे ।  
 एकस्त्वं करयुगकृष्टसर्पराजः संराजन् पवनपुरेश पाहि रोगात् ॥ २७११ ॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Even though the ocean was churned for a long time, with the multitudes of whales and crocodiles swimming round in agitation, nothing happened. Then Thou, holding the ends of the serpent lord in Thy two hands, churned the ocean, all by Thyself. Oh Guruvayurappa !  May Thou, of such amazing prowess, protect me from diseases.
+
 </details>
 
