--- a/laxyam/padyam/purANam/nArAyaNIyam/028.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/028.md
@@ -16,6 +16,14 @@ title: ०२८
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+From the ocean, there first flowed out the kalakuta  poison, like a raging fire; Lord Siva, who was delighted by the gods praising him, swallowed it fully in order to please Thee.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/028/028_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -29,6 +37,14 @@ title: ०२८
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord of three abodes ! On further churning of the ocean by the gods and demons, the celestial cow, Surabhi  was born and Thou gifted her to the sages. Then came the gem among horses, (Uchaisravas), followed by the gem among elephants, (Iravata); then came the celestial tree, Kalpakavriksha, and after that the celestial damsels or the Apsaras. Thou presented all these to the gods.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/028/028_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -44,6 +60,14 @@ title: ०२८
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Jagadisa ! Then there appeared, Goddess Mahalakshmi, most charming and attached to Thee alone. Seeing her immaculate beauty, everybody was tempted at heart and wished to possess her.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/028/028_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -57,6 +81,14 @@ title: ०२८
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+To that Goddess, whose heart was given to Thee, Indra,  the lord of gods, presented a gem studded throne. Then with the collection of coronation paraphernalia brought by all, the sages poured holy water on her, amidst the chanting of Vedic  hymns.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/028/028_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -72,6 +104,14 @@ title: ०२८
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Her slender form, already adorned with Thy charming, sidelong glances, was further beautified with jewel studded earrings, yellow silk garment, necklaces and the like, by the gods after the holy water had been poured on her for coronation.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/028/028_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -85,6 +125,14 @@ title: ०२८
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Holding the wedding garland, with bees buzzing round, she walked at a slow pace, due to the weight of  her pitcher like breasts, toward Thee, accompanied by the tinkling sound of her anklet bells and a shy smile on her face.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/028/028_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -100,6 +148,14 @@ title: ०२८
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Knowing that all the other gods like Siva  and Brahma, though virtuous, were still not blemishless, she offered the divine garland to Thee, who art the eternal embodiment of perfection and charm.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/028/028_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -113,6 +169,14 @@ title: ०२८
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Goddess Lakshmi, who is the mother of all the worlds and who is attached to none other than Thee, was instantly embraced by Thee and given a place of honour on Thy breast. At once the whole world was showered with wealth and prosperity, owing to her gracious glances, as she sat radiant on Thy breast.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/028/028_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +192,14 @@ title: ०२८
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Then there appeared the Goddess Varuni, (the presiding deity of liquor), who was extremely intoxicating and alluring. Thou presented her, who was the seat of ignorance, to the great demons, as if it were a gift of a very high order.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/028/028_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -138,5 +210,11 @@ title: ०२८
 
 तरुणाम्बुदसुन्दरस्तदा त्वं ननु धन्वन्तरिरुत्थितोऽम्बुराशेः ।  
 अमृतं कलशे वहन्कराभ्यामखिलार्तिं हर मारुतालयेश ॥ २८१० ॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Then, indeed, Thou arose from the ocean in the form of Dhanvantari, looking beautiful like a fresh cloud, and carrying the vessel of divine nectar in Thy hands. Oh Guruvayurappa ! May Thou remove all my afflictions.
+
 </details>
 
