--- a/laxyam/padyam/purANam/nArAyaNIyam/029.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/029.md
@@ -20,6 +20,14 @@ title: ०२९
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Just as Thou wert rising up from the ocean, the demons snatched away the nectar from Thy hands, and the gods were rendered helpless. Thou comforted them and disappeared immediately. Oh God ! Through Thy power of illusion (maya), Thou induced the demons to quarrel among themselves.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/029/029_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +45,14 @@ title: ०२९
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Then Thou assumed the form of a temptress, a dark beautiful mature woman, slightly leaning forward, owing to the weight of her heaving breasts. The demons, abandoning their fight over the vessel of nectar, came running toward Thee, extremely attracted by Thy pitcher-like breasts.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/029/029_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +72,14 @@ title: ०२९
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+The demons openly wondering about this deer eyed beauty, entreated  Thee, in that Mohini  form to apportion the nectar among them. Thou, teasingly reminded them that Thou wert a harlot, a woman of loose conduct, and wondered how they could trust Thee but this flippant reply only boosted  their faith in Thee.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/029/029_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +97,14 @@ title: ०२९
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+The demons joyfully gave the vessel of nectar to Thee in the form of Mohini. Thou, cautioning them to bear with Thy whimsical behaviour, made the gods and demons sit in separate rows and began serving the nectar only to the gods. The demons  entranced by Thy seductive walk and movements, sat quietly.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/029/029_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +124,14 @@ title: ०२९
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+While the demons sat silent, believing that she (Mohini), loves them, Thou, who loves Thy devotees, distributed the nectar fully among the gods, and assuming Thy own form, cut off the head of Rahu (Swarbhanu), who had half drunk the nectar.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/029/029_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +149,14 @@ title: ०२९
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+After punishing the demons thus for snatching the vessel of nectar from Thee, Thou went away. A pitched battle then took place between the demons and gods. At the height of this terrible war, the hosts of gods were rendered unconscious by the delusive tactics of the demon Bali;  so Thou manifested Thyself in their midst.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/029/029_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +176,14 @@ title: ०२९
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Then Thou killed Kalanemi, Mali  and others, while the lord of gods, Indra, killed Paka, Bali, Jambha and Vala. Namuchi, who could not be killed with anything dry or wet was destroyed with foam from the sea. Then at Sage Narada's request, Thou stopped the war.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/029/029_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +201,14 @@ title: ०२९
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Learning about the female form Thou took to tempt the demons, Lord Siva, curious to see Thy Mohini  form, came to Thy abode with his attendants, the Bhutaganas, and Parvati Devi,  and having praised Thee, expressed his desire to Thee. At this, Thou vanished.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/029/029_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +228,14 @@ title: ०२९
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Then, espying Thee in the precincts of a garden, as an attractive damsel, with eyes flitting in the act of playing with a ball and with garments slipping down, Lord Siva, who was the enemy of Cupid, became extremely infatuated and passionately embraced Thee.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/029/029_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -178,5 +250,11 @@ title: ०२९
 वीर्यप्रमोक्षविकसत्परमार्थबोधः ।  
 त्वन्मानितस्तव महत्वमुवाच देव्यै  
 तत्तादृशस्त्वमव वातनिकेतनाथ ॥ २९१०॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+When  Mohini, freed  herself from Lord Siva's  grasp and ran, he pursued her again.. On the discharge of his virile fluid, the truth dawned on him and  he came to his senses. He who was revered by Thee, sang Thy praises and extolled Thy glory to Parvati Devi  and others. Oh Guruvayurappa ! May Thou of such glory, save me.  
+
 </details>
 
