--- a/laxyam/padyam/purANam/nArAyaNIyam/030.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/030.md
@@ -20,6 +20,14 @@ title: ०३०
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+The demon Bali, though killed in battle by Indra, was brought back to life by Sukra, the preceptor of the demons. By performing many sacrifices, he acquired more power and conquered the three worlds, without fear of Thy disc; the gods ran away and hid themselves in fear from him.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/030/030_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +45,14 @@ title: ०३०
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Aditi, the mother of the gods was heartbroken at the sight of her sons, living in fear and sorrow. She beseeched her husband, Kasyapa, for help and by his advice, observed the best form of worship to Thee, called Payovrata, lasting for twelve days with complete and staunch devotion.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/030/030_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +72,14 @@ title: ०३०
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+When the vrat was duly concluded, Thou, appeared before Aditi, (who was still immersed in Thee), four-armed and of a dark blue colour in form. As she prostrated before Thee, Thou promised to be born as her son, but cautioned her to keep Thy revelation a secret, and then Thou vanished.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/030/030_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +97,14 @@ title: ०३०
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Then embedding Thyself in Kasyapa's seed born of penance, Thou wert conceived in Aditi's womb and wert praised by Brahma. On the auspicious Sravana Dwadasi day, Aditi, gave birth to Thee, manifested in divine Vaishnava form.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/030/030_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +124,14 @@ title: ०३०
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+The gods exceedingly delighted, sounded auspicious instruments and showered flowers over the sacred hermitage. While the parents stood with folded hands praising Thy glory repeatedly and heralding Thy victory, Thou instantly assumed the form of a dwarf, a competent Brahmachari, well-versed in the Vedas.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/030/030_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +149,14 @@ title: ०३०
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! Then and there, Thy father Kasyapa Prajapati, performed all the ceremonial rites from birth to thread ceremony; Thou wert offered the Mounji grass, the Danda or stick, the deerskin, the Akshamala, or string of beads and so on; adorned by all these and shining with divine splendour, Thou completed the rites of the sacrificial fire, and proceeded to the house of Bali where he was performing the horse sacrifice.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/030/030_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +176,14 @@ title: ०३०
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Though dwarflike in form, Thy dignified gait seemed to forecast the magnificent form Thou wert to assume in the future, by the movement of Thy body shaking the earth at every step; Thy umbrella, seemed to be held to ward off the enemy fire and Thy stick, as if to strike down the demons with it.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/030/030_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +201,14 @@ title: ०३०
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+As Thou appoached the site of the horse sacrifice, situated on the northern bank of the river Narmada, the dazzling brilliance of Thy form, blinded Sukra and other sages and they wondered aloud, who this could be, whether Thou wert the Sun or Fire or the sage Sanatkumara.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/030/030_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +228,14 @@ title: ०३०
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Sage Bhrigu (Sukracharya) and his clan, who were bedazzled by Thy radiance, hastily welcomed Thee; the blessed demon king, Bali, who was overwhelmed with ecstasy, on seeing Thy lustrous form, approached Thee and washing Thy feet reverently, sprinkled that sacred water, which having touched Thy feet, was now holiest of all, on his head.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/030/030_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -178,5 +250,11 @@ title: ०३०
 विश्वासतो नु तदिदं दितिजोऽपि लेभे ।  
 यत्ते पदाम्बु गिरिशस्य शिरोभिलाल्यं  
 स त्वं विभो गुरुपुरालय पालयेथाः ॥ ३०१०॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+The sacred water flowing from Thy feet, adorns the head of Lord Siva. Although a demon by birth, Bali, was fortunate enough to have it sprinkled on his head, perhaps due to his being born in the dynasty of Prahlada, or due to his sacrifices or because of his faith in Brahmins. Oh Guruvayurappa, May Thou of such glory, save me.
+
 </details>
 
