--- a/laxyam/padyam/purANam/nArAyaNIyam/031.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/031.md
@@ -20,6 +20,14 @@ title: ०३१
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Thou of Invincible Form ! The demon Bali, who was overcome by devotion on seeing Thy radiant form, worshipped Thee in every way possible and then with folded hands, requested Thee, in the form of a Brahmin boy, to ask for whatever Thou wished, be it food or a house or a piece of land or all these put together, and promised that he was willing to give anything.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/031/031_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +45,14 @@ title: ०३१
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Hearing these generous words of Bali, Thou who art full of mercy, but still wishing to curb his pride, praised the demon clan profusely and requested him for three feet of land, measured by Thy paces alone, adding playfully that it would become a laughing matter, if Thou asked him to give all that was his. 
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/031/031_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +72,14 @@ title: ०३१
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Swollen with pride, Bali ridiculed Thee for being a silly fool, asking for only three feet of land, when he, as lord of the universe, could give so much more, and prodded Thee to ask for the whole earth. It was this vanity of Bali, which brought about his downfall, and made it impossible for him to fulfil his promise of giving those three feet of land. For the complete humbling of this pride, he had to suffer ignominy of bondage, though not entirely justified. 
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/031/031_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +97,14 @@ title: ०३१
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Varada ! Thou pointed out to him that one who is not satisfied with three feet of land will not be happy even with the gift of three worlds. As Bali prepared to honour his promise to Thee with the ritual of offering water, his preceptor, Sukra, inwardly impelled by Thee, (as Thou wished to test Bali's sincerity), cautioned him openly, from making this gift, as Thou wert none other than Hari, himself. (Here the name Hari which is a synonym of Vishnu, also aptly conveys the meaning of one who has come to appropriate everything).
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/031/031_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +124,14 @@ title: ०३१
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+To this word of warning, by his preceptor, the demon replied with determination, that even if this was the lord himself,who had entreated him thus, he would be fulfilled of all desire, and hence he would keep his word. Thereupon, although cursed by Sukracharya, he symbolically dedicated all that was his, to Thee, after his wife, Vindhyavali, had offered the water for washing Thy feet. That was indeed the wonder of wonders.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/031/031_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +149,14 @@ title: ०३१
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+When the lord of the Diti clan, thus dedicated all his belongings to Thee, without any room for doubt or misgiving, the sages along with the gods showered flowers on Thee. While the entire world was watching, Thy divine dwarf-like form, grew to phenomenal dimensions, spanning the entire cosmos and beyond, until Thy feet touched Brahma's abode, Satyaloka. 
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/031/031_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +176,14 @@ title: ०३१
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Brahma, the lotus-born, washed Thy feet with the water from his sacred bowl, when they touched his abode of Satyaloka and this holy water, purified all the worlds. On this festive occasion, the inhabitants of the heavens, danced with joy; Thy devotee, Jambavan , went round the world, sounding his drum in jubilation.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/031/031_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +201,14 @@ title: ०३१
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! Then the demons started a battle against Thee, without the consent of their lord, Bali, and were defeated by Thy attendants and the gods, who had joined them. Then Bali, restrained them, reminding them that the embodiment of Time, (Thou), by whose grace they had succeeded earlier was now manifest before them and hence their conflict was of no avail. Hearing these words, the demons retired to the nether world. 
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/031/031_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +228,14 @@ title: ०३१
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Then, in a loud voice, Thou sarcastically, asked Bali, who was tied with ropes by the lord of birds, Garuda, to give Thee the space for placing Thy third step, as he was the lord of the universe. To this, Bali, without any hesitation or tremor, requested Thee to place Thy foot on his head. At that time Prahlada appeared there in person and commending Bali, for his dedication, sang Thy praises.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/031/031_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -178,5 +250,11 @@ title: ०३१
 र्लोकस्तेऽस्तु त्रिदिवविजयी वासवत्वं च पश्चात् ।  
 मत्सायुज्यं भज च पुनरित्यन्वगृह्णा बलिं तं  
 विप्रैस्सन्तानितमखवरः पाहि वातालयेश ॥ ३११०॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Then addressing the lord of demons, Thou explained to him that all this was done to destroy his pride. Thou blessed him saying that owing to his good deeds, he had been liberated; that he would reach the world beyond heaven; that he would attain a status equal to that of Indra; and that he would finally be merged in Thee. With these words, Thou had the interrupted sacrifices completed by the Brahmins. Oh Guruvayurappa !  Please protect me.
+
 </details>
 
