--- a/laxyam/padyam/purANam/nArAyaNIyam/032.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/032.md
@@ -16,6 +16,14 @@ title: ०३२
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Very long ago, during the second deluge, at the end of the sixth Manwantara, the great demon Hayagreeva, stole the Vedas from the mouth (meaning the mind and memory) of Brahma, who was about to fall asleep. In order to retrieve the Vedas, Thou wished to assume the form of a fish.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/032/032_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -29,6 +37,14 @@ title: ०३२
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Thou manifested as a small, radiant fish, within the cupped palms of King Satyavrata, of Dramida, just as he was offering libations to his ancestors in the waters of the river.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/032/032_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -44,6 +60,14 @@ title: ०३२
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Thou Omnipresent One ! Seeing Thee trembling as if in fear, when put back in the water, the royal sage took Thee home in his water bowl; in a few days time Thou grew in size to fill the water bowl and then to the size of a well, still again to the size of a tank and finally Thou wert big enough to fill a lake.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/032/032_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -57,6 +81,14 @@ title: ०३२
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Then at Thy own behest, the sage, by his yogic power, took Thee to the ocean. Perceiving that this fish form was a divine incarnation of Thine, the sage wished to see the deluge and requested Thy consent. Asking him to wait for seven days, Thou vanished.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/032/032_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -72,6 +104,14 @@ title: ०३२
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+As promised by Thee, on the seventh day, the rains came and the entire earth was submerged in the waters of the deluge. The royal sage, along with the Saptharshis, being tossed and turned in the boundless waters, took refuge in Thee.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/032/032_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -85,6 +125,14 @@ title: ०३२
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Then by Thy command, the earth came there in the form of a boat and they climbed on to it, still trembling and frightened by the tossing and rolling of the boat. Then Thou appeared before them from the ocean in the form of a big fish.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/032/032_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -100,6 +148,14 @@ title: ०३२
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Seeing Thy fish form which was one lakh yojanas in length and exceedingly brilliant the sages were overjoyed and obeying Thy instruction, tied the boat to Thy lofty horn.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/032/032_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -113,6 +169,14 @@ title: ०३२
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Thou towed the boat in the flood waters, showing the group of sages all parts of the world, and roamed about, teaching the renowned sage the supreme knowledge of Self, while he was singing Thy praises.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/032/032_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +192,14 @@ title: ०३२
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+As the kalpa neared its end, Thou reinstalled the seven sages in their respective places and appointed King Satyavrata as Vaivaswatha Manu for the next Manvantara. Then with rage, Thou went after Hayagreeva.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/032/032_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -138,5 +210,11 @@ title: ०३२
 
 स्वतुङ्गषृङ्गक्षतवक्षसं तं निपात्य दैत्यं निगमान्गृहीत्वा ।  
 विरिञ्चये प्रीतहृदे ददानः प्रभञ्जनागारपते प्रपायाः ॥ ३२१० ॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+With Thy lofty horn, Thou tore apart the demon's breast, struck him down and retrieved the Vedas. Thou presented them to Brahma, who was filled with joy. Oh Gurvayurappa ! May Thou protect me.
+
 </details>
 
