--- a/laxyam/padyam/purANam/nArAyaNIyam/033.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/033.md
@@ -20,6 +20,14 @@ title: ०३३
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Vaivaswatha Manu's son Nabhaga, had a son called Naabhaaga, who was a great king. His son Ambareesha. was ruling over the earth surrounded by seven oceans. He was very pious and devout and always engaged in meditating on Thee and Thy devotees.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/033/033_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +45,14 @@ title: ०३३
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! Since he was such a staunch devotee of Thine, who had dedicated everything to please Thee, Thou wished to bless him in a fitting manner. So Thou gifted him Thy disc with a thousand sharp edges, for his protection, although he did not ask for it.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/033/033_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +72,14 @@ title: ०३३
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+He lived in Madhuvana, near the bank of the river Yamuna, for a whole year, along with his virtuous wife, and observed the Ekadasi fast, and the Dwadasi rites, to propitiate Thee. As a part of this worship he gave away sixty crores of cows to brahmins.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/033/033_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +97,14 @@ title: ०३३
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+On the day of breaking the fast, at the close of this worship, Sage Durvasa came to the palace and was invited by the king to partake of the food at the close of the rites. The sage who had a natural inclination to put others to hardship, went to the river Yamuna at a leisurely pace to perform his customary ablutions.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/033/033_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +124,14 @@ title: ०३३
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+As the auspicious time for breaking the fast was about to end, the king, though troubled at heart, broke his fast by sipping only water, out of devotion to Thee. The sage, coming to know of this, by his divine vision, returned and abused the king with harsh words and then, tearing his matted hair, with rage, created a wicked deity called Kritya, to destroy the king.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/033/033_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +149,14 @@ title: ०३३
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Even when that evil spirit, with sword in hand, advanced toward him, scorching everything in its way, the king stood rooted to his post. Seeing the king's agony, Thy divine disc, Sudarsana, instantly burnt that terrible deity by its own fire like a moth is destroyed and started chasing the sage.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/033/033_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +176,14 @@ title: ०३३
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+The sage fled in terror, to all the worlds but everywhere he saw the disc pursuing him relentlessly; he entreated Brahma to save him but Brahma drove him away with the plea that the wheel of time could not be superceded; he approached Lord Siva, but he too pleaded helplessness and saluted Thee.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/033/033_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +201,14 @@ title: ०३३
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Then Oh Lord ! The sage came to Thy abode Vaikunta, and prostrated before Thee. Thou claiming to be the servant of Thy devotees, advised him that knowledge and penance deserved respect only when combined with humility and therefore, he should take refuge in the feet of Thy devotee, Ambareesha himself.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/033/033_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +228,14 @@ title: ०३३
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+At once the sage fell at the king's feet; the king, stepping back, prayed to Thy divine weapon and the disc, pacified by that, vanished. The sage praised his devotion to Thee and his compassionate nature even toward those who had harmed him and conferred all his blessings on him.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/033/033_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -178,5 +250,11 @@ title: ०३३
 सम्भोज्य साधु तमृषिं विसृजन्प्रसन्नम् ।  
 भुक्त्वा स्वयं त्वयि ततोऽपि दृढं रतोऽभूत्  
 सायुज्यमाप च स मां पवनेश पायाः ॥ ३३१०॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+The king who was waiting for the sage for a whole year, without partaking any food, fed him a sumptuous feast and bade him farewell; the sage left with full satisfaction. The king took food only after that. His devotion to Thee increased more than ever before and in due time he was granted salvation and was fully merged in Thee. Oh Guruvayurappa ! May Thou of such a divine nature, save me.
+
 </details>
 
