--- a/laxyam/padyam/purANam/nArAyaNIyam/035.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/035.md
@@ -20,6 +20,14 @@ title: ०३५
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Through Hanuman's efforts Thou struck up a friendship with Sugreeva, and entered into a pact with him to help Thee find Sita, in return for Thy killing Vaali and installing Sugreeva as the king of his land. In order to gain his confidence, Thou lifted aloft the body of Dundubhi, with Thy toe and made it fall several miles away; besides, Thou, pierced through seven Sala trees, with one arrow, in a single attempt. Then Thou killed Vaali, of matchless might, by unfair means, standing hidden behind a tree, as he wanted to destroy Thy friend Sugreeva. Then Thou spent the rainy season at the hermitage of sage Matanga, full of grief and distress at being separated from Thy beloved Sita. 
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/035/035_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +45,14 @@ title: ०३५
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Sugreeva, who was spending his time in worldly pleasures, was threatened by Lakshmana, with dire consequences, for not keeping his word of helping Thee to find Sita. Alarmed by Lakshmana's threats, he ordered his army of monkeys to get ready for the search of Sita, in all directions. Happy at this development, Thou gave Thy message and Thy ring to Hanuman and then the monkeys, determinedly, went looking for Thy beloved, in all directions.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/035/035_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +72,14 @@ title: ०३५
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Coming to know of Thy plight, Sampathi, whose newly-fledged wings helped him fly very high and fast, informed the monkeys of Sita's whereabouts, before flying away. By that information, Hanuman leaped across the ocean and located Sita in a garden (kept a prisoner by demonesses), in the city of Lanka.. He gave her Thy message and ring, and destroying that garden called Asokavana, engaged in a battle with Aksha Kumara and killed him. Bearing the insult of being tied up with ropes and taken to the court of Ravana, confronted the evil Rakshasa, and then set fire to Lanka. Then returning home speedily, he gave Thee the crest jewel, Choodamani, sent by Sita.. 
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/035/035_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +97,14 @@ title: ०३५
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Thou marched toward the seashore, along with the mighty monkey army, headed by stalwarts like Sugreeva, Angada and others, spread out all over the land. The Rakshasa king's brother, Vibhishana, sought shelter at Thy feet. He apprised Thee of secret information about Thy enemy. When Varuna, the lord of the ocean, spurned Thy request for a passage through it, Thou threatened him with the missile of fire; trembling with fear, he acceded to Thy request and provided a pathway for Thee, through the middle of the ocean.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/035/035_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +124,14 @@ title: ०३५
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+A causeway (Sethu) was built across the ocean, with the masses of rocks and stones brought by the monkeys from all round the place. Going across to Lanka, with the monkey warriors, using nails, teeth, stones and rocks and uprooted trees as weapons, Thou destroyed the Rakshasa army. Thy display of such heroic feats was halted for a short while, by Indrajit, son of Ravana, who bound Thee and Thy brother Lakshmana, with the missile of serpents which rendered Thee both unconscious but wert soon revived by the breeze from the flapping wings of Garuda, the lord of birds.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/035/035_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +149,14 @@ title: ०३५
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Lakshmana, who was stricken unconscious by a mighty blow from Ravana's powerful lance, regained his breath after inhaling the medicinal herbs on the Sanjeevini mountain, which Hanuman, brought in time from a faraway land across the ocean. Indrajit, who was very proud of his prowess in delusionary tactics, was then killed by Lakshmana.. The use of delusion (maya) by Ravana, created confusion in the battlefield and Thou became agitated, but Thy mind was put to rest by Vibhishana, who explained the true state of affairs to Thee. Then Thou destroyed Kumbhakarna, who approached Thee with his earth-shaking gait, swallowing the whole army of monkeys on his way.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/035/035_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +176,14 @@ title: ०३५
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Accepting the chariot and armour sent by Indra, Thou confronted Ravana and cut off his row of ten heads with the missile of Brahma, and thus destroyed him. Thou accepted Sita, who was purified by the ordeal of fire. The monkey warriors who had died in the battlefield were brought back to life by the grace of the gods. Thou and Thy beloved Sita, set out for Thy capital city Ayodhya, along with the newly-crowned lord of Lanka, Vibhishana, and the monkey army, in the aerial car, the Pushpaka Vimana.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/035/035_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +201,14 @@ title: ०३५
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Delighted with the divine coronation festivities, Thou ruled over Thy kingdom, happily for more than ten thousand years. Then, unfortunately, owing to the scandalous rumours about Sita, who was pregnant, Thou banished her from the kingdom. The Rakshasa Lavana, was killed by Satrughna. The worthless sage, Sudra, was destroyed by Thee. Meanwhile, Sita, gave birth to twin sons in the hermitage of sage Valmiki.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/035/035_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +228,14 @@ title: ०३५
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! At the sacrificial altar, Thy sons, by the command of sage Valmiki, sang sweetly, his divine composition, (the Ramayana). Thou wished to take back Sita, who came there, but she entered the earth and Thou wert reminded by the god of Time (Death) that the hour for departure had come. Thou abandoned Lakshmana, for a certain purpose, and with Thy entire retinue, plunged into the waters of the river, Sarayu, and simultaneously attained Vaikunta, Thy original abode.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/035/035_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -178,5 +250,11 @@ title: ०३५
 विश्लेषार्तिर्निरागस्त्यजनमपि भवेत्कामधर्मातिसक्त्या ।  
 नो चेत्स्वात्मानुभूतेः क्वनु तव मनसो विक्रिया चक्रपाणे  
 स त्वं सत्त्वैकमूर्ते पवनपुरपते व्याधुनु व्याधितापान् ॥ ३५१० ॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+This incarnation of Thine in the form of a human being was taken to teach mankind the lessons to be learnt from the Ramayana. Excessive attachment to desire causes anguish and pain when one faces separation from loved ones and excessive attachment to duty leads to the sacrifice and suffering of innocent fellow beings. If this were not true, how could this change of mind have taken place in Thee, who art Thyself the Supreme Self, and the Soul of Delight. Oh Lord Vishnu ! Oh Chakrapani (Wielder of the Disc) ! Oh Thou Sole Embodiment of Virtue ! Oh Guruvayurappa ! May Thou of such divine deeds, save me from my afflictions.
+
 </details>
 
