--- a/laxyam/padyam/purANam/nArAyaNIyam/039.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/039.md
@@ -20,6 +20,14 @@ title: ०३९
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+This leading member of the Yadu family, Vasudeva, carrying Thee, found the river Kalindi, in spate with its flood waters rising sky high, when he came there; but, wonder of wonders, the waters receded and became only ankle deep, as if by Maya, and he was able to cross the river.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/039/039_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +45,14 @@ title: ०३९
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Arriving at the house of Nanda, where all the cowherds were fast asleep, and where the doors were wide open, Vasudeva, hearing the soft crying of the baby girl, entered the confinement room, picked her up and left Thee in her place on the delivery bed and returned quickly to his city with that baby, Yoga Maya.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/039/039_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +72,14 @@ title: ०३९
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+The guards, whose sleep had been disturbed by the cries of Thy sister, ran to the Bhoja king, Kamsa, to inform him of the birth of the baby. Kamsa, arrived there at once, with his hair all in disarray and his mind agitated by the news of the delivery, but was totally confused and astonished at the sight of a girl baby, in his sister's hands.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/039/039_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +97,14 @@ title: ०३९
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Thinking that this must be another trick of that cunning Vishnu, who killed the demon, Madhu, he snatched the little girl baby, clutched tightly in his sister's arms, like a wild elephant would pluck a tender lotus stalk from the middle of a lotus pond, and dashed Thy sister, Maya against a stone slab.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/039/039_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +124,14 @@ title: ०३९
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Just as Thy devotee would slip through the chains of death, that Maya, who came as a baby girl, slipped past Kamsa's hands, quickly, took a different divine form,and flew up to the sky, resplendent with powerful weapons shining in her eight arms, without again touching the ground.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/039/039_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +149,14 @@ title: ०३९
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+As she flew up, she warned the wicked Kamsa, that killing her was of no use to him, as his destroyer was born elsewhere and that he should worry about his welfare. Then praised by the Marutganas and other gods, Thy sister Maha Maya, entered the temples on earth, where she is worshipped as Durga, Bhadrakali etc.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/039/039_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +176,14 @@ title: ०३९
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+The next morning,Kamsa related Yogamaya's warnings to the arrogant demons led by Pralamba, Baka, and Poothana. They roamed fearlessly all over the world, killing all infants, prompted by their desire to destoy Thee. No measure of cruelty was beyond these wicked demons.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/039/039_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +201,14 @@ title: ०३९
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Mukunda ! Thou, lying on the delivery bed, beside Yasoda, the wife of the cowherd, Nanda, in their house, began to cry, shaking Thy leg slightly. Awakened by Thy cries, the womenfolk announced loudly, the birth of a son and there was rejoicing all round Gokula. Oh ! How can I describe that happy, thrilling scene.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/039/039_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +228,14 @@ title: ०३९
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Then Yasoda, overcome by joy, at the sight of Thee, lying beside her, looking like a freshly blossomed Kayambu flower, suckled Thee at her breast, fondling Thy soft, charming body, experiencing indescribable bliss. Oh ! Indeed, she is the most fortunate of all blessed beings in the world. How wonderful really !
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/039/039_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -178,5 +250,11 @@ title: ०३९
 प्रमोदभरसङ्कुले द्विजकुलाय किं नाददात् ।  
 तथैव पशुपालकाः किमु न मङ्गलं तेनिरे  
 जगत्रितयमङ्गल त्वमिह पाहि मामामयात् ॥ ३९१०॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Nandagopa, filled with happiness, for the sake of Thy wellbeing, gave away innumerable gifts to the Brahmins. There was nothing he did not give. So also, there was no auspicious ceremony that the cowherds left undone. Oh Guruvayurappa ! Oh Most Auspicious One in the three worlds ! May Thou save me from my ailments here.
+
 </details>
 
