--- a/laxyam/padyam/purANam/nArAyaNIyam/040.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/040.md
@@ -16,6 +16,14 @@ title: ०४०
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Nanda, the abode of all virtue, went to the capital city to pay his taxes. Thy father met him and warned him about the wicked plots of Kamsa's assistants to kill Thee.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/040/040_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -29,6 +37,14 @@ title: ०४०
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Congratulating the head of the cowherds, (Nanda) on the birth of a son to him, Thy father told him that he was as happy as he would be if it had been born to him, thus honouring him with the status of being Thy father.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/040/040_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -44,6 +60,14 @@ title: ०४०
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Thy father, (Vasudeva), drew Nanda's attention to the hundreds of ill omens manifest there and urged him to return to his village as soon as possible. Hearing these words, Nanda, apprehensive of danger to Thee, hurried home.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/040/040_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -57,6 +81,14 @@ title: ०४०
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Thou Deceptive Infant ! In the meanwhile, a lovely woman, whose tresses were encircled by bees drawn by the fragrance of the flowers on her hair, approached Thee in the village.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/040/040_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -72,6 +104,14 @@ title: ०४०
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+As the cowherd womenfolk were wondering who she was, that infamous Poothana, a demoness, who was accustomed to killing infants, lifted Thee in her arms.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/040/040_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -85,6 +125,14 @@ title: ०४०
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+The cowherd women, who had been mesmerised by her bewitching ways, could not stop her; she sat down in the house and put Thee, Oh Illusive Infant ! to her breast.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/040/040_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -100,6 +148,14 @@ title: ०४०
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Then Thou, full of resentment for her slaying of several babies, climbed on to her lap, without any misgiving, and sucked vigorously at her swollen breast, smeared all round with deadly poison, as if it were a mango fruit. 
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/040/040_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -113,6 +169,14 @@ title: ०४०
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+When Thou sucked her breast and along with it her life's breath, she attained her true, dreadful form and screaming in a thunderous voice, fell flat on the floor, with her arms outstretched.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/040/040_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +192,14 @@ title: ०४०
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Hearing that terrifying scream and seeing that colossal form, the cowherds of Gokula, stood transfixed. Then seeing Thee playing on her breast, the cowherd women came and lifted Thee.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/040/040_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -138,5 +210,11 @@ title: ०४०
 
 भुवनमङ्कलनामभिरेव ते युवतिभिर्बहुधा कृतरक्षणः ।  
 त्वमयि वातनिकेतननाथ मामगदयन् कुरु तावकसेवकम् ॥ ४०१०॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Thou who art the embodiment of goodness in the whole world ! the young Gopikas, chanting Thy own names, sought to protect Thee (from evil), in many ways. Oh Guruvayurappa ! Free me from disease and make me Thy servant.
+
 </details>
 
