--- a/laxyam/padyam/purANam/nArAyaNIyam/044.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/044.md
@@ -16,6 +16,14 @@ title: ०४४
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord Omnipresent ! At Vasudeva's request, Sage Garga, well versed in the science of astrology, came to Thy house, to conduct secretly, the ceremonial rites of birth for Thee, who art beyond all ceremonies.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/044/044_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -29,6 +37,14 @@ title: ०४४
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Then Nanda, full of joy and ardour to have these ceremonies performed for Thee, welcomed this noble sage, as an honoured guest.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/044/044_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -44,6 +60,14 @@ title: ०४४
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Sage Garga, being the preceptor of the Yadu clan, wished to perform these functions under cover, out of fear of rousing Kamsa's suspicion. Accordingly, the sage, thrilled by the prospect of naming Thee and Thy elder brother initiated the ceremonies.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/044/044_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -57,6 +81,14 @@ title: ०४४
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+How could he give thee a single name, when indeed Thou hast a thousand names and even more countless ones. Oh Lord ! Thinking so, sage Garga, performed Thy naming ceremony under cover.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/044/044_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -72,6 +104,14 @@ title: ०४४
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Linking the root Krish and the suffix na, the sage named Thee Krishna, to denote that Thou art the embodiment of everlasting existence and complete bliss, or as if to mean one who draws out all the sins of the world, or in other words one who purifies the world.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/044/044_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -85,6 +125,14 @@ title: ०४४
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Sage Garga, gave Thee other names also and explained in detail to Thy father the inner significance of these names. Similarly he named Thy elder brother Rama and so forth. Without revealing Thy divine identity, he told Thy father, that Thy powers and qualities were well beyond that of ordinary mortals.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/044/044_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -100,6 +148,14 @@ title: ०४४
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+The noble sage, elaborated further on Thy glory, to Thy father, averring that, whosoever showed affection to his son, would be free from Maya and worldly sorrows, thereafter, but those who hated him would be destroyed.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/044/044_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -113,6 +169,14 @@ title: ०४४
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+The sage outlined Thy future exploits also, saying that Thou would conquer many demons; that Thou would lead Thy kinsmen to that highest state of absolute bliss and that the whole world would come to know of Thy untainted glory.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/044/044_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +192,14 @@ title: ०४४
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Without explicitly saying that Thou wert Hari himself, the sage reiterated that all obstacles would be overcome by remaining steadfast in devotion to Thee.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/044/044_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -138,5 +210,11 @@ title: ०४४
 
 गर्गेऽथ निर्गतेऽस्मिन् नन्दितनन्दादिनन्द्यमानस्त्वम् ।  
 मद्गदमुद्गतकरुणो निर्गमय श्रीमरुत्पुराधीश ॥ ४४१०॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Guruvayurappa ! May Thou who wert blessed and showered with affection by Nanda and others after sage Garga left, show mercy on me and save me.
+
 </details>
 
