--- a/laxyam/padyam/purANam/nArAyaNIyam/045.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/045.md
@@ -20,6 +20,14 @@ title: ०४५
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Murari ! Thou along with Thy brother Balarama, crawled all over the house on Thy hands and knees, lighting up the place most charmingly. Eager to hear the tinkling sound of Thy anklet bells, on Thy lotus feet, the two of Thee, went roaming as fast as Thou both could.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/045/045_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +45,14 @@ title: ०४५
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+The gentle smile revealing the pearly white teeth, the curls of hair falling on the face, the soles of the lotus feet showing while crawling and the bangles sliding down the arms and resting on the wrists, with all these charming features, the two of Thee, enthralled the hearts of the spectators.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/045/045_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +72,14 @@ title: ०४५
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Vaasudeva ! How great was the ecstasy of the people who followed with indulgent, expectant looks, Thee and Thy brother, as the two of Thee crawling rapidly, and gurgling softly, turned Thy lotuslike faces and smiled charmingly at them.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/045/045_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +97,14 @@ title: ०४५
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+In Thy attempts to move fast, the two of Thee would fall down and get mudstained; Thy two mothers would come rushing there and cradling Thee both lovingly in their arms, would kiss and caress Thee both repeatedly, while the unsullied (pure-hearted) sages in the heavens, would sing Thy praises, smilingly.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/045/045_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +124,14 @@ title: ०४५
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Thou who came in the guise of a delusive cowherd ! Yasoda, the most blessed of all souls, would cradle Thee in her lap and suckle Thee at her breasts, overflowing with milk, mind wavering with excitement; seeing Thy charming face, with the budding teeth and bewitching smile, while feeding Thee, she would be overjoyed.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/045/045_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +149,14 @@ title: ०४५
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Then, as Thou grew a little bigger and could walk steadily, Thou, along with other cowherd children, in neighbouring houses, would play and engage in childish pranks and mischief, chasing household pets, like parrots, cats and calves and would be laughingly stopped by the gopas somehow.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/045/045_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +176,14 @@ title: ०४५
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Murari ! Wherever Thou wandered, playing, with Thy brother Balarama, (Haladhara), the gopis, oblivious of their household duties, forgetting their children and servants, followed Thee, with star-struck eyes, bewildered and at the same time, delighted by Thy charming appearance.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/045/045_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +201,14 @@ title: ०४५
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Having a desire to eat the fresh butter offered by the gopis, Thou sang sweet songs, pronouncing the words indistinctly and sometimes danced too, exuding utmost charm. Thou ate the fresh butter, the gopis kindly gave Thee and sometimes Thou drank the freshly boiled milk offered by them.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/045/045_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +228,14 @@ title: ०४५
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! In one of Thy earlier incarnations, as a Brahmin boy, Vamana, Thou had gone to beg for land, to the house of Maha Bali, (who was powerful), a humiliation, which Thou did not wish to undergo before these defenceless women and hence Thou took to stealing curd and butter through Thy ingenious tricks in this most charming incarnation of Thine.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/045/045_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -178,5 +250,11 @@ title: ०४५
 मभजत हृदि रोषो नावकाशं न शोकः ।  
 हृदयमपि मुषित्वा हर्षसिन्धौ न्यधास्त्वं  
 स मम शमय रोगान्वातगेहाधिनाथ ॥ ४५१०॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Gurvayurappa ! The gopis bore no illwill toward Thee for stealing their curds and butter and they were never angry or unhappy for that, because Thou had stolen their hearts and drowned them in the ocean of bliss. May Thou of such divine acts, save me from disease.
+
 </details>
 
