--- a/laxyam/padyam/purANam/nArAyaNIyam/046.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/046.md
@@ -16,6 +16,14 @@ title: ०४६
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! Once, when, sucking at Thy mother's breast, Thou lying flat on her lap, opened Thy mouth to yawn, the entire Universe was seen by Yasoda, in it.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/046/046_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -29,6 +37,14 @@ title: ०४६
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord of the Universe ! Another time, Thou, playing with other children, plucking fruits, cheated them and ate the fruits gathered by them. Angry with Thee, they complained to Thy mother that Thou had eaten mud.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/046/046_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -44,6 +60,14 @@ title: ०४६
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord Omnipresent ! Thy mother, fearing that Thou would become sick by consuming mud, was angry with Thee, because she knew not that Thou, at the time of the deluge swalloweth everything, like earth, water etc.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/046/046_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -57,6 +81,14 @@ title: ०४६
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! When Thy mother questioned Thee, whether Thou, her mischievous pet, had eaten mud, Thou laughingly denied it emphatically.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/046/046_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -72,6 +104,14 @@ title: ०४६
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Thy mother, not believing Thee, because all the other children had convinced her of it, goaded Thee into opening Thy mouth which was like a fullblown lotus.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/046/046_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -85,6 +125,14 @@ title: ०४६
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Then Thy mother, who expected to see a small ball of mud, was granted a revelation of not only the whole earth but all the other worlds too, by Thee, as if to satisfy her curiosity.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/046/046_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -100,6 +148,14 @@ title: ०४६
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+In Thy open mouth, she saw forests and oceans on one side; the sky, space and the nether regions on the other; elsewhere she saw humans, demons and gods; oh what all did she not see in there !
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/046/046_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -113,6 +169,14 @@ title: ०४६
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+She saw Thy manifold forms in Thy mouth; reclining majestically in the milky ocean; then reigning supreme in that glorious Vaikunta; yet again in front of her as her own son; oh how many different forms of Thee did she not see in Thy mouth !
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/046/046_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +192,14 @@ title: ०४६
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+In that mouth, where the whole universe shone clearly, she saw yet another similar face and open mouth, with the whole universe shining in it; within that yet another mouth, displaying the whole universe and thus an endless revelation of Thy infinite quality. Wonderful indeed.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/046/046_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -138,5 +210,11 @@ title: ०४६
 
 धृततत्त्वधियं तदा क्षणं जननीं तां प्रणयेन मोहयन् ।  
 स्तनमम्ब दिशेत्युपासजन् भगवन्नद्भुतबाल पाहि माम् ॥ ४६१०॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Thus, for a brief moment Yasoda, was given a taste of the Absolute Truth, but in the next instant she was shrouded in that Maya, of filial love, as Thou climbed on to her lap, asking for milk. Oh Lord ! who took the form of that wonderful child, please protect me.
+
 </details>
 
