--- a/laxyam/padyam/purANam/nArAyaNIyam/050.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/050.md
@@ -20,6 +20,14 @@ title: ०५०
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Gracious Lord ! In that beautiful Brindaavana, with hordes of honeybees buzzing around, Thy resplendent form, armed with the horn, flute and stick, wandering about with Balarama, (carrier of the plough) and other cowherd children, ardently tending the calves, was a sight most pleasing to the eyes.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/050/050_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +45,14 @@ title: ०५०
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord of Lakshmi ! When Thy two feet, which protect the entire universe and which are fondled lovingly by the lotus-like hands of Lakshmi, touched the sacred Brindaavana, the entire surroundings, including the trees, creepers, water, earth, mountains, soil, fields and all else, became most fertile and productive, teeming with wealth and prosperity.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/050/050_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +72,14 @@ title: ०५०
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Thou roamed about, playing the flute, while tending the calf herds on the lush green grasslands in the forest, or on the banks of the broad Yamuna river, wafted by the gentle cool wind, or on the peaks of the lofty Govardhana mountain. On one such occasion, Thou spotted a demon in the guise of a calf.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/050/050_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +97,14 @@ title: ०५०
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+As he was waiting for the opportunity to attack Thee, with his tail wagging fast and his neck slightly turned, and a sly look on his face, Thou, grabbed his feet and lifting him up, rapidly spun him round and round, until he was dead. Thou,flung his dead body on to a huge tree, closeby.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/050/050_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +124,14 @@ title: ०५०
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Hari ! That powerful demon, evilminded by birth, fell with a mighty crash (regaining his original huge form) on to the trees, squashing the trees by the momentum of his fall and ruining the forest region all round. At once the gods in heaven, gathered together and rained flowers on Thy head.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/050/050_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +149,14 @@ title: ०५०
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+The cowherd children were curious to know wherefrom this bunch of sweet-scented flowers fell on Thy head. Thou, jestingly told them that the impact of the demon's body on the treetops, when Thou threw him, had sent the flower bunches flying upward and that they were slowly coming down now.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/050/050_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +176,14 @@ title: ०५०
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Then, on one very hot day in the summer season, Thou, along with others, went to the river Yamuna, to quench Thy thirst. There, Thou espied the demon Baka in the form of a huge crane, flapping its wings and looking like another Mount Kailas, whose wings Indra had forgotten to clip, when he cut off the wings of mountains.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/050/050_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +201,14 @@ title: ०५०
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+As the cowherd children were drinking water, the crane rushed to Thy side and gobbled Thee whole; but instantly he threw Thee out as though he had swallowed fire. Then he tried to tear Thee apart, with his long beak; Oh Almighty Lord ! Thou, who art accomplished in destroying the cruel and evil, quickly caught hold of the two ends of his beak and split him apart.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/050/050_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +228,14 @@ title: ०५०
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Thus, that demon Baka, went to Yamaloka or the abode of death, as if eager to meet his dead sister Poothana, already there, or as if to look forward to welcoming his younger brother, Agha, (who would soon follow him in like manner). Then, while the gods were showering flowers on Thee from the sky, Thou returned home from Brindaavana.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/050/050_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -178,5 +250,11 @@ title: ०५०
 स्त्वरितमुपगम्यारादारूढमोदमुदीक्षितः ।  
 जनितजननीनन्दानन्दस्समीरणमन्दिर  
 प्रथितवसते शौरे दूरीकुरुष्व ममामयान् ॥ ५०१०॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Hearing the sweet, lilting notes of music from Thy flute, even while Thou wert still at a distance, the gopis came flocking to Thy side, full of delight. Oh Souri ! who resides at Guruvayur, May Thou who wert a source of joy to Thy mother Yasoda and Thy father Nanda, remove all my afflictions.
+
 </details>
 
