--- a/laxyam/padyam/purANam/nArAyaNIyam/054.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/054.md
@@ -16,6 +16,14 @@ title: ०५४
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Long ago, a sage called Soubhari, who wished to serve Thee, was doing penance, immersed in the waters of the river Kaalindi, for twelve years. During this time he became deeply attached to the shoals of fish, indulging in romantic sports, in the waters around him. Then, one day he saw Garuda, in person, in front of him.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/054/054_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -29,6 +37,14 @@ title: ०५४
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Thy vehicle, Garuda, the son of Triksha, started eating the fish as he was very hungry. Enraged by this sight, the sage cursed Garuda to lose his life, if he tried to eat any living creature again, in that region.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/054/054_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -44,6 +60,14 @@ title: ०५४
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Meanwhile, the serpent, Kaaliya, who was very vain of the deadly poison in his body, ate the portion of food allotted to the enemy of serpents (viz. Garuda). Overcome by anger, Garuda, who is a devotee of Thy lotus-like feet, attacked him with his wings and chased him. So Kaaliya took refuge in that part of the river Kaalindi, which was out of bounds for Garuda, due to the sage's curse.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/054/054_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -57,6 +81,14 @@ title: ०५४
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+The waters of the river Yamuna, in the portion inhabited by the dreadful Kaaliya, became contaminated by the viciousness of his deadly poison, destroying the trees on the river bank, and causing the flights of birds, overflying it, to fall down dead. By all these events, Thy mind was filled with mercy.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/054/054_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -72,6 +104,14 @@ title: ०५४
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Once, Thou had gone to the forest region, near the river Yamuna, without Balarama. The cows and cowherds, feeling intensely thirsty, due to the unbearable summer heat, drank the poisonous water of the river, Yamuna.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/054/054_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -85,6 +125,14 @@ title: ०५४
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Achyuta ! Seeing them all collapsing lifeless, on the ground, Thou, full of compassion, cast the nectar of Thy glances on them and resuscitated them at once.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/054/054_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -100,6 +148,14 @@ title: ०५४
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Revived thus, the hosts of cowherds, got up, and feeling thrills of rapture all over their body, marvelled at the turn of events. Seeing Thee in front of them, and, perceiving that it was another miracle of Thine, since they had witnessed many such before, they warmly embraced Thee.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/054/054_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -113,6 +169,14 @@ title: ०५४
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Similarly, the cows too, which had regained their lives, instantly, full of delight at seeing Thee in front of them, rallied round Thee, expressing their gratitude, by shedding tears of joy and mooing in soft tones.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/054/054_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +192,14 @@ title: ०५४
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Mukunda ! The cowherds, with their hairs standing on end and the thrills of ecstasy vibrating through their body, could not find words to express their feelings. They thought it was due to the strange effect of the poison. They praised and thanked Thee profusely, with joy.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/054/054_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -138,5 +210,11 @@ title: ०५४
 
 एवं भक्तान्मुक्तजीवानपि त्वं मुग्धापाङ्कैरस्तरोगांस्तनोषि ।  
 तादृग्भूतस्फीतकारुण्यभूमा रोगात्पाया वायुगेहाधिनाथ ॥ ५४१० ॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+In this manner, Thou art capable of reviving Thy devotees, even if they are dead, and nourishing them back to health, with Thy gracious glances. Oh Guruvayurappa of such boundless mercy ! May Thou guard me against illness.
+
 </details>
 
