--- a/laxyam/padyam/purANam/nArAyaNIyam/057.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/057.md
@@ -16,6 +16,14 @@ title: ०५७
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord who fulfils all our heart's desires ! One day Thou went to the forest, decked in all Thy brilliant finery, along with Balarama and the cows and the cowherd children.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/057/057_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -29,6 +37,14 @@ title: ०५७
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Revealing to Balarama, the pure, scenic beauty of Brindaavana, of Thy own will, and sporting with the children, carrying sticks, Thou came near the banyan tree, called Bhaandeeraka.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/057/057_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -44,6 +60,14 @@ title: ०५७
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Then the wicked, ruthless demon Pralamba, possessed of long hands, came towards Thee, in the form of a cowherd, with the intention of killing Thee.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/057/057_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -57,6 +81,14 @@ title: ०५७
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Pretending to be ignorant of his evil intention and his disguise to cheat Thee, Thou befriended him and began to play the game of duel fight, organised by the smart cowherd boys, near the banyan tree.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/057/057_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -72,6 +104,14 @@ title: ०५७
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! Dividing the cowherd boys into two teams, one captained by Balarama and the other by Thee, Thou, allowed the demon, who was afraid of Thy strength, to play in Thy team.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/057/057_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -85,6 +125,14 @@ title: ०५७
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+In accordance with the rules of the game, that the winner should be carried on the back of the loser, Thou, who lost the fight, carried Thy best friend, Sridaama, (who was in the winning team), on Thy back, thus demonstrating Thy affection for Thy devotees.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/057/057_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -100,6 +148,14 @@ title: ०५७
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord of Infinite Glory ! As the game progressed, those boys who lost were the bearers and those who won were borne by them. Pralamba, who was defeated by Balarama, carried him a long way off, being afraid of Thee.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/057/057_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -113,6 +169,14 @@ title: ०५७
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Seeing that he had been carried a long distance away from Thee, Balarama, increased the weight of his body as much as he could. The demon, (unable to bear the weight), donned his real form, seeing which, even the powerful Balarama, was alarmed.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/057/057_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +192,14 @@ title: ०५७
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+As the demon was very tall, Balarama, seated on his shoulders, saw Thy face clearly, even from that distance and with his fear gone, by sighting Thee, he struck that most cruel of demons with his sturdy fist and crushed him, instantly.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/057/057_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -142,6 +214,14 @@ title: ०५७
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Thou embraced Balarama, who came back after killing that demon fighter, most affectionately. The gods in heaven, poured a shower of flowers on both Thy heads, as Thou stood together.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/057/057_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -152,5 +232,11 @@ title: ०५७
 
 आलम्बो भुवनानां प्रालम्बं निधनमेवमारचयन् ।  
 कालं विहाय सद्यो लोलम्बरुचे हरे हरेः क्लेशान् ॥ ५७११॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Hari ! Oh Lord, who art the Support of the Worlds, shining with the lustre of black bees ! Oh Guruvayurappa who destroyed Pralamba thus ! May Thou, soon remove my afflictions, without further loss of time.
+
 </details>
 
