--- a/laxyam/padyam/purANam/nArAyaNIyam/058.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/058.md
@@ -20,6 +20,14 @@ title: ०५८
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Whilst Thou wert preoccupied in sports activities with the cowherd boys and the killing of Pralamba, which followed, the cows, wandering at will, and going in search of greener pastures, came to the forest called Isheeka.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/058/058_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +45,14 @@ title: ०५८
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Venturing out of Brindaavana, where the intensity of summer had not yet become unbearable, those cows wandered into the forestland outside and became extremely thirsty, due to the scorching heat of the summer season. Added to that, being separated from Thee, made them feel desolate and forlorn and so they stood paralysed and numb.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/058/058_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +72,14 @@ title: ०५८
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Souri ! Thou, searching far and wide, with Thy companions for the cows, espied them in the Munja forest, wandering aimlessly, having lost their way. When Thou, hastened Thy steps to retrieve them, a forest fire broke out, engulfing them all round, spreading very fast. How unfortunate, indeed.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/058/058_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +97,14 @@ title: ०५८
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+As the forest fire raged furiously, with the terrible sound of cracking timber,all round, the cows found their escape route blocked on all sides and were in agony,as if half burnt. Bellowing piteously, to be saved, they sought refuge in Thee, Oh Lord, who art the sole remover of distress, and who art the friend of all the world.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/058/058_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +124,14 @@ title: ०५८
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Asking them not to be afraid and to shut their eyes, Thou pacified them. Complying with Thy request, they closed their eyes and an instant later, to their great amazement (when they opened their eyes again), they found themselves in the Bhaandeera region, with no sign of the forest fire or the Munja forest.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/058/058_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +149,14 @@ title: ०५८
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Expressing great wonder at this Maya, of Thine and praying ardently for Thy ever growing glory, the cowherds praised Thee. Accepting their praises with a gracious smile, Thou, indulging in various charming sports, roamed about in that pleasant forest region, where the summer season could be recognised only by the blossoming of the Patala trees and suchlike (as the intensity of heat could not be felt there).
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/058/058_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +176,14 @@ title: ०५८
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Thou spent the summer season, which is intensely hot like the agony of those who hate Thee, and which, like Thy devotion, dries up the mud of sin, within the heart, and which like Thy long-reaching arm is capable of emitting the lustre of heat, in the vicinity of the river Yamuna.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/058/058_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +201,14 @@ title: ०५८
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Then Thou spent the rainy season, which brings joy to the whole world, with its cluster of clouds, glowing like Thy form and its brilliant lightning sparks, dazzling like Thy yellow robe, in the caves of the mountains, in comfort and happiness.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/058/058_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +228,14 @@ title: ०५८
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord of Lords ! Thou, Almighty, who wert living in those caves, wert worshipped daily by the king of mountains, Govardhana, with songs of praise in the form of the joyous calls of peacocks and with bunches of flowers, blossoming on the Kutaja and Kadamba trees.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/058/058_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -178,5 +250,11 @@ title: ०५८
 विमलसलिलपूरां मानयन्काननेषु ।  
 तृणाममलवनान्ते चारु सञ्चारयन् गाः  
 पवनपुरपते त्वं देहि मे देहसौख्यम् ॥ ५८१०॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Then Thou enjoyed the Sarath season, with its copious flow of water, crystal clear, like the minds of Thy devotees, tending the cows in the fertile grasslands of the forest, allowing them to graze happily all over. Oh Guruvayurappa of such sports ! May Thou bless me with good health.
+
 </details>
 
