--- a/laxyam/padyam/purANam/nArAyaNIyam/060.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/060.md
@@ -16,6 +16,14 @@ title: ०६०
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+The twinkle-eyed Gopikas, with their minds, overcome with love for Thee, wished to serve Thy two feet. To achieve this desire, they prayed daily to an image of Devi Parvathi, made out of sand on the banks of the river Yamuna.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/060/060_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -29,6 +37,14 @@ title: ०६०
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Their minds intent on chanting Thy names and stories, these charming maidens, would congregate on the river bank at dawn, and worshipping the goddess with hundreds of offerings, pray earnestly to her for obtaining the son of Nanda, as their husband.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/060/060_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -44,6 +60,14 @@ title: ०६०
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+When these beautiful maidens, had kept this vow for a whole month, Thou, taking pity on them, went to the riverbank, in order to bless them.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/060/060_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -57,6 +81,14 @@ title: ०६०
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Having fulfilled the vow, those damsels, removing their clothes and leaving them on the riverbank, indulged in water sports in the Yamuna. Seeing Thee in front of them, they felt extremely ashamed.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/060/060_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -72,6 +104,14 @@ title: ०६०
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+As they stood with their faces bent down in shame, Thou, quickly gathered the pile of clothes lying nearby and climbed on to the branch of a tree.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/060/060_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -85,6 +125,14 @@ title: ०६०
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+With a gentle, teasing smile, Thou, invited them to come to Thee and take the garments which belonged to each one of them, without any mix-up. Hearing Thy words, the maidens were extremely embarassed.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/060/060_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -100,6 +148,14 @@ title: ०६०
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Those helpless damsels, praying for Thy long life and declaring themselves to be Thy slaves, beseeched Thee, the lotus-eyed, pet son of Nanda, to return their garments. Entreated thus by them, Thou, gave them only a beatific smile instead of their clothes.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/060/060_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -113,6 +169,14 @@ title: ०६०
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Having no other way, they came up the bank, with hands folded in supplication and minds purified, and took refuge in Thee. Thou, happily, returned their clothes and blessed them with the following words.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/060/060_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +192,14 @@ title: ०६०
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Thou, assuring those maidens that Thou wert aware of their heart's desires, promised them that, very shortly, they would get an appropriate answer, on a moonlit night on the sand banks of the Yamuna.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/060/060_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -142,6 +214,14 @@ title: ०६०
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! Hearing from Thy mouth, these words dripping with honey, the doe-eyed damsels, went homeward, at a slow pace, repeatedly turning round to see Thy lotus-like face, full of love for Thee.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/060/060_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -152,5 +232,11 @@ title: ०६०
 
 इति नन्वनुगृह्य बल्लवीर्विपिनान्तेषु पुरेव सञ्चरन् ।  
 करुणाशिशिरो हरे हर त्वरया मे सकलामयावलिम् ॥ ६०११॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Hari ! Having blessed the Gopis thus, Thou wandered round in the forest as before. Oh Lord, who art pervaded by the coolness of mercy ! May Thou, soon remove all my maladies.
+
 </details>
 
