--- a/laxyam/padyam/purANam/nArAyaNIyam/064.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/064.md
@@ -16,6 +16,15 @@ title: ०६४
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Considering Thy superhuman deeds, such as the lifting of the Govardhana mountain, the Gopas were convinced about Thy being the Lord of the Universe Himself, and, hence, they asked Nanda repeatedly about Thy horoscope.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/064/064_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -29,6 +38,15 @@ title: ०६४
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Being apprised by Thy father (Nanda) of what Sage Garga had narrated to him earlier about Thy greatness, the Gopas' respect and devotion to Thee increased manifold.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/064/064_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -44,6 +62,15 @@ title: ०६४
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Then Indra, having realised the truth about Thee after his utter humiliation and being purged of his pride, approached Thee with reverence, bringing the divine cow, Kamadhenu (as an offering to Thee) and touching Thy lotus-feet with his jewelled crown, extolled Thy greatness.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/064/064_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -57,6 +84,15 @@ title: ०६४
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+The divine cow, Surabhi, then bathed Thee with the milk gushing out of her udders, due to her deep love for Thee, and anointed Thee with the name "Govinda ". Indra too, with great enthusiasm, bathed Thee in the waters of the celestial Ganga, brought by his elephant, Airavata.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/064/064_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -72,6 +108,15 @@ title: ०६४
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+On Thee, the Lord of the Three Worlds, being crowned as Lord of the Cows (Lord of Gokula), that land of Gokula did, on account of Thy glory, attain prosperity and status, unattainable even in heaven or Vaikunttha itself.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/064/064_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -85,6 +130,15 @@ title: ०६४
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Once, going for a bath in the river Yamuna at a very early hour (which is against the code), Thy father, Nanda, was led away to Varuna's abode by an attendant of his, for this transgression. Thereupon, Thou didst pay a visit to the abode of that Lord of the Waters, to redeem Thy father, as Thy incarnation in human form had a definite purpose behind it, namely, to uphold Dharma.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/064/064_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -100,6 +154,15 @@ title: ०६४
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Being welcomed with great respect by Varuna (who was taken aback by Thy unexpected visit) and duly honoured by him, Thou didst reclaim Thy father and bring him home. This incident was, then, narrated by Nanda to his people.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/064/064_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -113,6 +176,15 @@ title: ०६४
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+The Gopas, being firmly assured in their heart of hearts that Thou wert Hari Himself, thirsted for experiencing Thy state of Supreme Bliss. Thereupon, O All-pervading Lord ! Thou didst reveal to them that Supreme abode of Thine, unattainable to others.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/064/064_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +200,15 @@ title: ०६४
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Infinite One ! That family of Gopas did, indeed, remain submerged for a long time in the ocean of Sat-Chit-Anand (Existence-Consciousness-Bliss-Absolute), and was, then, restored to their normal worldly state by Thyself alone.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/064/064_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -142,5 +223,12 @@ title: ०६४
 निजपदमनवाप्यं दर्शितं भक्तिभाजाम् ।  
 तदिह पशुपरूपी त्वं हि साक्षात्परात्मा  
 पवनपुरनिवासिन् पाहि मामामयेभ्यः ॥ ६४१०॥
+</details>
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+In which other incarnation, O Lord! Have Thy devotees been granted a vision of Thy unattainable Supreme Abode, as clearly as if it were a badara fruit (berry) in one's palm? Without doubt, in Thy manifestation as a cowherd, Thou art, verily, the Supreme Soul. O Lord of Guruvayur!  Protect me from my ailments.
+
+
 </details>
 
