--- a/laxyam/padyam/purANam/nArAyaNIyam/065.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/065.md
@@ -20,6 +20,15 @@ title: ०६५
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+In order to redeem the word given to the Gopis at the conclusion of their austerities and vows, known as Katyayani Vrata (Dasakam 60), Thou didst decide to perform the festival to the God of Love (Mara) on a bright, cool, moonlit night of the Sharad season, in the wooded precincts of the river Yamuna, and initiate the same by playing on Thy flute in a charmingly resounding manner.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/065/065_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +46,15 @@ title: ०६५
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+The enchanting notes emerging from Thy flute, with their ascending and descending cadences, hypnotised the entire world and the Gopis, on hearing these, were transported into an indescribable trance.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/065/065_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +74,15 @@ title: ०६५
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Enchanting One ! Maddened by the irresistible music, these lotus-eyed maidens, who were engaged in their household occupations, such as, tending their children, or serving their husbands, forsook everything and rushed out to the forest.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/065/065_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +100,15 @@ title: ०६५
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Hearing the melodies flowing from Thy flute, some of them who were in the process of adorning themselves, rushed out in a half-adorned state, which is more pleasing to Thee than their fully adorned forms.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/065/065_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +128,15 @@ title: ०६५
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+One of them, with a charming countenance, O Mukunda, came with her necklace wound round her waist, and her girdle around her neck, as if to demonstrate to Thee the superior attractiveness of her hips.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/065/065_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +154,15 @@ title: ०६५
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Another, in her excitement, forgetting to cover her breasts with any garment, but not noticed by the other women, who were equally excited, approached Thee, as though she was bringing two pitchers of water (in the form of her breasts), to bathe Thee for Thy coronation as the King of the Kingdom of her intense, unmatched love.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/065/065_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +182,15 @@ title: ०६५
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Some others, O Lord, being unable (for whatever reason) to leave their houses, meditated on Thee with intense devotion and concentration, and, abandoning their physical bodies, it is said, became one with Thee, the Supreme Consciousness-Bliss-Absolute. They are, indeed, the most blessed among the blessed.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/065/065_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -146,6 +209,15 @@ title: ०६५
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+These simple women attained the state of one-ness with Thee in an instant, despite their visualising Thee as a paramour and not the Supreme Brahman. Fixing my mind constantly on Thy effulgent form, with firmness and devotion, one way or the other, may I also attain liberation without effort.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/065/065_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -160,5 +232,12 @@ title: ०६५
 र्मुग्धस्मितार्द्रवदनः करुणावलोकी ।  
 निस्सीमकान्तिजलधिस्त्वमवेक्ष्यमाणो  
 विश्वैकहृद्य हर मे परमेश रोगान् ॥ ६५९॥
+</details>
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Those lovely maidens, who were gazing steadily at Thee, wert bathed by Thee with Thy compassionate glance from Thy face lit up by an enchanting smile. O Sole Charmer of the Universe ! O Lord of Guruvayur ! May Thou eradicate all my maladies.
+
+
 </details>
 
