--- a/laxyam/padyam/purANam/nArAyaNIyam/066.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/066.md
@@ -16,6 +16,15 @@ title: ०६६
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Despite being inwardly intent on gratifying the wishes of those love-struck maidens, Thou didst, outwardly, give the appearance of frowning upon them for their conduct and spoke to them in an admonitory vein.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/066/066_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -29,6 +38,15 @@ title: ०६६
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Listened to by the Sages assembled in the heavens, and through them, for the edification of the world at large, Thou didst expatiate upon the Dharma (virtues, duties, etc) of wives and mothers. Thy advice was, indeed, in the highest traditions of Dharma Shastra, but Thy deeds are not meant for emulation by mere mortals, as Thou art immaculate and free from the taint of attachments.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/066/066_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -44,6 +62,15 @@ title: ०६६
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Taken aback by Thy adverse counsel, those doe-eyed ones were overwhelmed with grief and earnestly implored Thee not to forsake them.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/066/066_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -57,6 +84,15 @@ title: ०६६
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Moved by their lamentations and entreaties, O Slayer of Mura ! Thou didst, out of compassion, deign to engage without reserve in amorous sports with them, on the sandy stretches on the banks of  the Yamuna river.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/066/066_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -72,6 +108,15 @@ title: ०६६
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+On those sandy stretches, illumined by the moon's rays, Thou didst, then, sit on a cushion fashioned out of the upper garments of those Gopis.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/066/066_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -85,6 +130,15 @@ title: ०६६
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+With sweet, playful conversation, linking of hands, amorous kisses and warm embraces, Thou didst make those maidens ecstatic.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/066/066_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -100,6 +154,15 @@ title: ०६६
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+To those pretty damsels, whose minds were steeped in bliss, O Lord of Charming Aspect ! Thou didst, on that occasion, redeem Thy promise made when taking their clothes away, by erasing their sense of "I" and "Mine".
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/066/066_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -113,6 +176,15 @@ title: ०६६
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Son of Nanda ! Embracing Thee, the most beautiful in all the three worlds, with a lotus-like face beaming with a soft, jasmine-like smile, and drops of sweat glistening on Thy body, those damsels were transported to heights of ecstasy.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/066/066_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +200,15 @@ title: ०६६
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Thou, who, in separation, art like burning embers (unbearably hot), and, in union, the very personification of amorousness, wert, to the Gopis, immensely delighting in union, too. O, How marvellous !
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/066/066_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -138,5 +219,12 @@ title: ०६६
 
 राधातुङ्गपयोधरसाधुपरिरम्भलोलुपात्मानम् ।  
 आराधये भवन्तं पवनपुराधीश शमय सकलगदान् ॥ ६६१०॥
+</details>
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Lord of Guruvayur ! I worship Thee, who does thirst for the warm embraces of Radha's bulging breasts; may Thou eradicate all my diseases.
+
+
 </details>
 
