--- a/laxyam/padyam/purANam/nArAyaNIyam/069.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/069.md
@@ -20,6 +20,15 @@ title: ०६९
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Lord ! We contemplate that reputed form of Thine specially decorated for the performance of the Rasa Leela dance, with an array of peacock feathers aligned over Thy tresses; fish-shaped ear-rings dangling from Thy ears; beautiful necklaces and garlands of sylvan blossoms around Thy neck; Thy body profusely fragrant with sandal paste and other scented unguents; a golden girdle circling Thy yellow silk robe; and gem-studded anklets emitting bright rays of light.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/069/069_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +46,15 @@ title: ०६९
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Padmanabha ! Amidst those damsels, dressed properly, with garments covering their bosoms and jewelled ear-rings brushing their cheeks, and standing in a circle, Thou, O Lord of Lakshmi, gliding smoothly between pairs of those charming maidens, didst, duly execute  the fascinating Rasa Leela dance.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/069/069_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +74,15 @@ title: ०६९
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Apprised by Narada of the wonderful flavour (fragrance) of Thy resplendent Rasa Leela being enacted here (on the banks of the Yamuna), hordes of celestials, rushing from far and wide, speedily assembled in the sky, accompanied by hundreds of women adept at adorning themselves and in amorous display of their charms, all extremely eager to witness that spectacle.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/069/069_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +100,15 @@ title: ०६९
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O, come all ye, observe, savour and share in the grandeur and majesty of the rasa dance, characterised by the harmonious intertwining and blending of the melodious notes flowing from Krishna's flute with the lyrics, and music in a variety of tunes and ragas, the rhythmical pace and beat of the soft footfalls and handclaps of the dancers and jingling of their bracelets, with Krishna's arms (hands) brushing the shoulders of the Gopis again and again, and their garments fluttering around their hips.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/069/069_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +128,15 @@ title: ०६९
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+While the dancers (Gopikas) sang, by turns, loudly and in sweet voices, with confidence and fervour, while performing the dance, and their necklaces and other ornaments were often disarranged owing to the graceful movements of their limbs, the hosts of celestials with their womenfolk watched from above with wonder and delight, showering down flowers on the dancers and were totally entranced, as if they had attained complete union with Thee, the Pure Consciousness-Absolute.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/069/069_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +154,15 @@ title: ०६९
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+One of the damsels, whose slender, creeper-like body was exhausted and perspiring, and whose eyes were half-closed due to fatigue, leaned on Thy lovely shoulder. Another, with locks dishevelled and hairs standing on end all over her body due to the sprouting thrill of joy, profusely kissed Thy arm, which was fragrant with fresh sandal paste, on the pretext of smelling it.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/069/069_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +182,15 @@ title: ०६९
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Another Gopika, out of her wealth of good fortune (merit), imbibed the nectarine juice of the betel being chewed by Thee, by pressing her cheek, with her ear-rings dangling over it, against Thine. Having, in the course of the Rasa Krida, attained Thee, Lakshmi's playground, and the most charming in all the worlds, what heights of intoxication and ecstasy did those maidens not experience ?
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/069/069_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +208,15 @@ title: ०६९
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Lord ! Gradually, the singing came to a stop, and the instruments too fell silent. Only the Gopikas, immersed in the Bliss Supreme (Brahmananda) continued to dance, on the dance-floor, even unaware and unmindful of their dishevelled tresses and loosened blouses. Why, the constellations of stars too stood still in the sky! What more need I say ?
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/069/069_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +236,15 @@ title: ०६९
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Lord ! Celebrating thus the great festival of Manmatha (God of Love), wherein Thou didst assume as many forms as there were Gopikas, on account of their accumulated merits of past lives, and during which the charm of the Gopikas was enhanced by the fresh beads of perspiration sprouting on their bodies owing to their exertions while executing the Rasa dance, and who were completely overwhelmed by pangs of love, Thou didst submerge the entire world in Supreme Bliss, as the dance gradually drew to a close.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/069/069_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -182,6 +263,15 @@ title: ०६९
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Lord ! Thereafter, Thou didst engage at will in sporting in the waters of the Yamuna in the company of those Gopikas, who had been exhausted by the various sports and were fondled and caressed by Thee to their hearts content. Further, Thou didst engage in amorous dalliance with them in the sylvan glades where gentle, cool breezes were blowing and which were filled with the wafting fragrance of blossoms, thereby transporting those hundreds of maidens to unprecedented heights of ecstasy.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/069/069_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -196,5 +286,12 @@ title: ०६९
 पूर्णसम्मदरसार्णवं कमपि योगिगम्यमनुभावयन् ।  
 ब्रह्मशङ्करमुखानपीह पशुपाङ्गनासु बहुमानयन्  
 भक्तलोकगमनीयरूप कमनीय कृष्ण परिपाहि माम् ॥ ६९११॥
+</details>
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O treasure-house of Beauty ! Thou didst, during those nights of Rasa Leela, thus bestow on those maidens the ecstatic experience of Infinite Bliss, which is attainable only by Yogis, and also inculcate esteem for these mere cowherd women, in the minds of Brahma, Sankara and other Gods. O Lord of the Most Captivating Form ! Accessible only to the devout ! O Krishna ! deign to protect me.
+
+
 </details>
 
