--- a/laxyam/padyam/purANam/nArAyaNIyam/070.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/070.md
@@ -20,6 +20,15 @@ title: ०७०
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+As Thou wert passing the days engaging in various sports and making the Gopi maidens immensely happy, their menfolk (Gopas), one night, visited the temple of Lord Siva in the Ambika forest, along with Thee. After celebrating the worship and festivities there, they were sleeping soundly, when a fierce python swallowed Nandagopa.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/070/070_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +46,15 @@ title: ०७०
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+When the snake did not loosen its hold even after being severely beaten with burning logs of wood, the Gopas appealed to Thee for help. As Thou approached the snake, which was all the time looking towards Thee, and placed Thy foot on it, immediately, it (the snake) regained its original form of a Vidyadhara and glistened.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/070/070_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +74,15 @@ title: ०७०
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Praising Thee, saying: "O Wielder of the Sudarshana, my name, indeed, is Sudarshana, and I got changed to this form of a python through the curse of some Seers whom I mocked at; now, with the contact of Thy foot, I have been purified.", the Vidyadhara returned to his abode. The Gopas, too, went back to Vraja happily.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/070/070_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +100,15 @@ title: ०७०
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Once, while Thou wert sporting with Balarama and some women, an emissary of Kubera, by name Sankhachuda, kidnapped the women. Thou didst pursue him fast and when he let go of the women for fear of Thee, Thou didst kill him and, taking away his crest jewel, give it to Balarama.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/070/070_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +128,15 @@ title: ०७०
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+The Gopikas suffered pangs of separation from Thee during the day time, when Thou were away in the woods, playing with friends. They were all the time thinking about Thee, who art more captivating than the God of Love himself, who wert Thyself engrossed in the ambrosially sweet music flowing from Thy flute, and who wert providing to the eyes of the celestial damsels the food of nectar to break their fast, as it were.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/070/070_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -106,6 +151,15 @@ title: ०७०
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+One day, there appeared before Thee, in the forest, a fierce-looking and loudly bellowing bull, which was none other than a servant of Kamsa, a demon by name Arishta, who had assumed this guise and was bent upon mischief.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/070/070_07.mp3"></div>
 
 
@@ -113,6 +167,15 @@ title: ०७०
 पङ्क्तिमाशु परिघूर्ण्य पशूनां छन्दसां निधिमवाप भवन्तम् ॥ ७०७  
 तुङ्गशृङ्गमुखमाश्वभियन्तं ससंगृहय्य रभसादभियं तम् ।  
 भद्ररूपमपि दैत्यमभद्रं मर्दयन्नमदयः सुरलोकम् ॥ ७०८॥
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+That demon in the guise of a bull, assuming a huge form and frightening the whole world, after putting the herds of cows to flight, charged at Thee, the repository of all Vedas.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/070/070_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +191,15 @@ title: ०७०
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Taking firm hold of that evil, destructive demon (though in the auspicious form of a bull), who was rushing towards Thee, without fear, horns and head raised high, Thou didst crush him to death, and thereby delight the celestials.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/070/070_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -138,5 +210,12 @@ title: ०७०
 
 औक्षकाणि परिधावत दूरं वीक्ष्यतामयमिहोक्षविभेदी ।  
 इत्थमात्तहसितैः सह गोपैर्गेहगस्त्वमव वातपुरेश ॥ ७०१०॥
+</details>
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Thou wert then praised by the celestials, saying "O Lord, by the killing of this bull (Vrisha), the rule of Dharma (Vrisha) has been firmly established on the earth, and great joy prevails in the mind of Indra (Vrishaa) too. How wonderful, indeed !"[Pun on the word Vrisha in three senses of Bull, Dharma and Indra (Vrishaa)]
+
+
 </details>
 
