--- a/laxyam/padyam/purANam/nArAyaNIyam/072.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/072.md
@@ -16,6 +16,15 @@ title: ०७२
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Lord reclining on Adisesha, King of Serpents ! On learning from Narada about Thy residing in Vraja, Kamsa, with heart trembling in fear, summoned Akrura, (son of Gaandini ) and deputed him to fetch Thee to Mathura, on the pretext of inviting Thee to a 'Bow Sacrifice'.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/072/072_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -33,6 +42,15 @@ title: ०७२
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Akrura, who was devoted to Thee since long, but was not able to see Thee owing to fear of Kamsa, now felt immense joy on being sent to see Thee by Kamsa himself.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/072/072_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -52,6 +70,15 @@ title: ०७२
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Akrura, who had accumulated merits by good deeds, was wholly oblivious of the external world and his surroundings while proceeding to Vraja in a chariot, due to his mind being totally absorbed in anticipation of the forthcoming meeting with Thee, and repeatedly going over his pleasant thoughts about Thee and praying to God all the time to remove all obstacles to the coming meeting.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/072/072_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -69,6 +96,15 @@ title: ०७२
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+All through the journey, Akrura's thoughts were centred on Thee, such as: "Shall I be able to see That Supreme Being who has been sung about by numerous vedic hymns, and is the goal of all Vedas ? Shall I be able to touch Him and embrace Him ? What will He say to me ? Where, indeed, am I likely to see Him ? ", etc.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/072/072_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -88,6 +124,15 @@ title: ०७२
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Thereafter, as he gradually entered Brindavan, sanctified by Thy lotus feet, and worshipped by even Siva, Brahma and other gods, he was, as it were, completely immersed in Bliss, or under a spell. O Lotus-eyed Lord ! What states of ecstasy did he not experience then !
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/072/072_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -105,6 +150,15 @@ title: ०७२
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+He saluted the spots where Thou didst sport; he rolled in the dust which bore the imprints of Thy feet. O Supreme Being ! What shall I say ? In those days too, there were many people on the earth, but very few, indeed, whose devotion was comparable in intensity with that of Akrura.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/072/072_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -124,6 +178,15 @@ title: ०७२
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Akrura approached Thy abode towards dusk, as if borne on the flood of ecstasy welling up within him on seeing the houses of the Gopas, from which flowed nectarine music of songs describing Thy sportive deeds, which was elixir to his ears.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/072/072_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -142,6 +205,15 @@ title: ०७२
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Akrura, then, sighted Thee, O All-pervading One, in the company of Balarama, watching with deep interest the milking of the cows, and looking as if Thou wert awaiting the coming of Thy great devotee. Thy form seemed to infuse his mind with the ecstatic experience of Bliss Absolute.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/072/072_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -155,6 +227,15 @@ title: ०७२
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Akrura beheld you two, very clean after the evening bath, fetchingly dressed in garments of yellow and blue, charming with the few ornaments you were wearing and your face beaming with a gentle smile.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/072/072_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -170,6 +251,15 @@ title: ०७२
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Espying from a distance that foremost devotee of Thine, alighting from his chariot and prostrating before Thee, Thou didst lift him up and embrace him with great pleasure; and, enquiring about his welfare with a few words, Thou didst lead him by the hand to Thy residence, accompanied by Balarama. 
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/072/072_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -183,6 +273,15 @@ title: ०७२
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+After doing the honours to that Yadava (Akrura), along with Nandagopa, and being apprised by him of the command of the King (Kamsa), which Thou didst communicate to the Gopas, Thou didst spend the night conversing with him on a variety of topics.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/072/072_12.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -198,5 +297,12 @@ title: ०७२
 राधागृहे नु भवने किमु मैत्रविन्दे ।  
 धूर्त्तो विलम्बत इति प्रमदाभिरुच्चै  
 राशङ्कितो निशि मरुत्पुरनाथ पायाः ॥ ७२१२॥
+</details>
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+In the meanwhile, the Gopika damsels imagined Thee of deceitfully spending the night with one or the other of Thy several beloveds, such as Chandra, Chandrabhaga, Radha, or Mitravinda. O Lord of Guruvayur, may Thou protect me.
+
+
 </details>
 
