--- a/laxyam/padyam/purANam/nArAyaNIyam/073.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/073.md
@@ -16,6 +16,15 @@ title: ०७३
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+On coming to know of your impending departure from Vraja, the Gopika women were greatly agitated and, gathering together, they wailed "What is happening and why ?"
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/073/073_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -29,6 +38,15 @@ title: ०७३
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+With their minds wholly centred on Thee, they lamented, saying "How can Krishna, Ocean of Mercy, abandon us, who have no other refuge ? Why are we fated thus ? "
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/073/073_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -44,6 +62,15 @@ title: ०७३
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Towards the small hours of the night (final Yama, or 3-hour period), while on the point of leaving with Thy father and a host of friends, Thou didst send a friend to console those women and assuage their deep grief.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/073/073_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -57,6 +84,15 @@ title: ०७३
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Thou didst comfort them, saying: "Ere long, I shall return to your midst and, in the pleasure of my company, you will soon be immersed in the Ocean of Bliss."
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/073/073_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -72,6 +108,15 @@ title: ०७३
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Pursued for a long distance by the looks of those grief-stricken maidens, loudly imploring Thee to return soon, and casting gentle side-long glances towards them, Thou didst set out in the chariot of Akrura, accompanied by Balarama.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/073/073_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -85,6 +130,15 @@ title: ०७३
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Accompanied by the Gopas in several carts and followed by the thoughts of the Gopikas, and traversing the forest, where the animals and trees were forlorn (at Thy departure), Thou didst, then, reach the banks of the Yamuna.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/073/073_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -100,6 +154,15 @@ title: ०७३
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+While bathing in the river for his morning ablutions, Akrura saw Thee in the water and (emerging from the water), seeing Thee seated in the chariot too, he was struck dumb, and perplexed at the strange phenomena. But, is there any wonder in Thy being seen simultaneously everywhere, when Thou art all-pervading ?
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/073/073_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -113,6 +176,15 @@ title: ०७३
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Plunging again into the river water, that blessed Akrura beheld Thee, the Supreme Lord, reclining on Ananta (King of Serpents), holding in Thy hands the discus, conch, mace and lotus and resplendent in the midst of a host of gods and Siddhas (realised ones) surrounding Thee.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/073/073_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +200,15 @@ title: ०७३
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Then being deeply immersed in the Ocean of Bliss, he extolled Thee in Thy Saguna as also Thy Nirguna aspects and, continuing in that state of absorption in Bliss (even though he did not see Thee again), and with hairs standing on end all over his body, he returned to Thee.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/073/073_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -138,5 +219,12 @@ title: ०७३
 
 किमु शीतलिमा महान्जले यत्पुलकोऽसाविति चोदितेन तेन ।  
 अतिहर्षनिरुत्तरेण सार्धं रथवासी पवनेश पाहि मां त्वम् ॥ ७३१० ॥
+</details>
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Asking Akrura (in jest) whether the water was so cold as to cause this horripilation on his body, to which Akrura was too much absorbed in Bliss to reply, Thou didst, then, sit in the chariot along with him. O Lord of Guruvayur, may Thou deign to protect me.
+
+
 </details>
 
