--- a/laxyam/padyam/purANam/nArAyaNIyam/074.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/074.md
@@ -20,6 +20,15 @@ title: ०७४
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Reaching Mathura around midday and halting in a garden outside the city, Thou hadst Thy meal there. Then, accompanied by Thy companions, Thou didst enter the main street of the city, as if dragged there by a chain made up of the accumulated merits of the men and women who had heard about Thee and were thirsting for long to see Thee.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/074/074_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +46,15 @@ title: ०७४
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Lord ! The women who gathered there were radiant with love for Thee, similar to the rosy and charming lustre of Thy feet; they were fetchingly lovely with their heaving breasts, just as Thy lustrous form resembling a rain-bearing cloud; they were attractive like Thy chest with necklaces adorning it; they were effulgent with purity arising from their bodily cleanliness and toilet, comparable to the grandeur of Thy dazzlingly pure, gentle smile; and they were bedecked with ornaments, even as Thy tresses were adorned with peacock feathers.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/074/074_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +74,15 @@ title: ०७४
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Delighting these women with Thy side-long glances, and in the throng of people rushing past Thee with great joy and wonder, Thou didst seek some clothes from a washerman who happened to be there. On being denied Thy request on the sneering excuse that the clothes belonged to the king and could not be given to Thee, Thou didst (in anger) instantly cut off his head with Thy hand, whereby he attained salvation.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/074/074_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +100,15 @@ title: ०७४
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Thereafter, O Lord of Lakshmi, Thou didst grant a place in Thy abode (Vaikunttha) to a large-hearted weaver who joyously presented suitable garments for Thee to wear. Who can gauge the merits of a jeeva ? To a garland-maker, who worshipped Thee with an offer of garlands and bouquets and hymns of praise, Thou didst grant deep devotion and prosperity as sought by him.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/074/074_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +128,15 @@ title: ०७४
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Being greeted and presented, on the way, with perfumed unguents by a lotus-eyed, but hunch-backed, woman, Thou didst imbue her heart with intense love for Thee. Then, O dear Lord, with the intention that her pure and straight heart should be reflected in her body too, Thou didst gently push her chin up with Thy hand and straighten her body, thereby changing her into a most beautiful woman.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/074/074_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +154,15 @@ title: ०७४
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Lord ! People who were not too sinful and, hence, had realised the magnitude of Thy glory and had full faith in Thee, offered to Thee, according to their capacities, something or the other, like betel, garlands, and so forth. O Lord ! How sad that I was not fated to be present there with palms joined in salutation and holding flowers, etc. to offer to Thee, because of which I am now experiencing all these afflictions.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/074/074_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +182,15 @@ title: ०७४
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+While that woman who gave Thee perfumed unguents, and who had been sent away by Thee with a promise to see her later, followed Thee with her eyes for a long distance (due to pain of separation from Thee), Thou didst enter the city through its outer gate. However, Thy fame had preceded Thee in the guise of the milk which flowed from Devaki's breasts out of the ecstasy experienced by her by inferring from the din and bustle of jubilation outside (her prison cell) that Thou hadst arrived.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/074/074_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +208,15 @@ title: ०७४
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Having entered the city which was in a festive mood, Thou didst proceed to the Hall of the Bow Sacrifice, to which the guards allowed Thee passage, either on account of Thy charm or Thy majestic appearance. Thou didst, there, lift up the great Bow, which had been decorated with garlands and worshipped, string it, draw it and break it, all before the guards could even say "No ! No !".
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/074/074_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +236,15 @@ title: ०७४
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+The thunderous noise produced by the breaking of the Bow by Thee sounded like the inaugural trumpet call heralding the impending festival of Kamsa's death the next day, and it caused immense thrill to the celestials. Further, the tremor of fright generated by it in Kamsa's mind was highly enhanced by the loud wails of the guards who were severely thrashed by Thee with the two pieces of the broken Bow.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/074/074_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -178,5 +259,12 @@ title: ०७४
 संपश्यन्पुरसम्पदं प्रविवरन्सायं गतो वाटिकाम् ।  
 श्रीदाम्ना सह राधिकाविरहजं खेदं वदन्प्रस्वप  
 न्नानन्दन्नवतारकार्यघटनाद्वातेश संरक्ष माम् ॥ ७४१०॥
+</details>
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+While the good and virtuous recognised Thy glory with delight and satisfaction, and the wicked with fear, Thou didst tour the city, admiring its prosperity and arrive at the pleasure-garden, towards the evening, where, conversing with Sridama about the sorrow of separation from Radha, Thou didst go to sleep, while feeling inwardly happy and expectant about the forthcoming culmination (in the morning) of the objective of Thy incarnation. O Lord of Guruvayur, may Thou deign to protect me.
+
+
 </details>
 
