--- a/laxyam/padyam/purANam/nArAyaNIyam/076.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/076.md
@@ -20,6 +20,15 @@ title: ०७६
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Thereafter, Thou, though being omniscient, didst enter into tutelage of Sage Sandipani, along with Balarama, and master, in just 64 days, all knowledge (in order to set an example to all, that learning under a preceptor is essential for everyone). By way of Guru Dakshina, Thou didst recover the Guru's son from the abode of Yama and restore him to his parents, in the process, acquiring the conch, Panchajanya, from the demon (who had kidnapped the Guru's son and swallowed him) after killing him, and then, return to Thy city, Mathura, sounding the Panchajanya.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/076/076_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +46,15 @@ title: ०७६
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Repeatedly thinking of the Gopikas who were pining for Thee out of their deep love, and also being full of compassion for them, besides being desirous of showing to Thy great devotee and friend, Uddhava, the intensity of their devotion to Thee, which was rare in all three worlds, Thou didst depute him to Gokula as Thy emissary.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/076/076_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +74,15 @@ title: ०७६
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Arriving towards evening at Gokula, which bore testimony to the magnitude of Thy glory, Uddhava conveyed the news about Thee to Nanda and Yasoda, to their immense delight. In the morning, the Gopikas, on seeing the bejewelled chariot, mistook it for Thine, but on learning about the arrival of Thy emissary, they soon assembled at the house of Nandagopa, abandoning all their household chores.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/076/076_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +100,15 @@ title: ०७६
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+At the sight of Uddhava, who was shining in his dress and ornaments very similar to Thine, these maidens recalled to mind all Thy sportive deeds in great detail and with their throats almost choked with emotion (at the thought), they forgot their natural shyness and sense of decorum usual while dealing with strangers, and started to speak falteringly to him.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/076/076_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +128,15 @@ title: ०७६
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Sir, were you sent (by that heartless Krishna) to comfort his parents ? Where is he, the beloved of the city beauties ? O Lord Hari. may Thou protect us. Which woman can ever forget Thy sweet (nectarine) form, Thy embraces, kisses and maddeningly sly words ?
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/076/076_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +154,15 @@ title: ०७६
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+These beloved Gopikas of Thine, out of their intense love for Thee, lamented their separation from Thee and implored Thee thus : "O Ocean of compassion ! Please do take pity on us and show us just once that enchanting form of Thine, which was well-pressed in the course of the Rasa Leela, with Thy lovely locks loose and dishevelled, on which drops of perspiration glistened and captivated the viewers, so that we may embrace it ! "
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/076/076_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +182,15 @@ title: ०७६
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Imparting Thy message, which was pregnant with spiritual wisdom, Uddhava restored equanimity of mind to those lamenting, despairing Gopikas. Afterwards, he spent a few days with them, who were totally immersed in Thee out of deep devotion, joyfully recounting Thy multifarious sportive exploits.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/076/076_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +208,15 @@ title: ०७६
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Uddhava was struck dumb with wonder on seeing these maidens singing songs about Thee while engaged in their household duties; all their mutual exchanges were about Thee alone; even in their dreams, they would talk about Thee only; in fact, all their actions were, most often, imitations of Thine, and everything about them was suffused with identification withThee.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/076/076_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +236,15 @@ title: ०७६
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Uddhava lifted the spirits of Thy beloved, lotus-eyed, Radha and gladdened her heart by telling her : "Your beloved Krishna, while we are alone, talks to me in this strain, namely; 'O friend, my Radha likes this immensely, my dear Radha speaks thus; why are you keeping silent, like my beloved, proud Radha ? ' and so forth."
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/076/076_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -182,6 +263,15 @@ title: ०७६
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Uddhava consoled and comforted those Gopikas and mitigated their grief with Thy words, such as : "I shall come back to you soon; only pressure of work has so far delayed my coming, grieve not even while I am away, since memory (of past association) is strong and firm; very soon, with the attainment of Brahmananda, meeting or separation will become one and the same to you."
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/076/076_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -196,5 +286,12 @@ title: ०७६
 किं शास्त्रौघैः किमिह तपसा गोपिकाभ्यो नमोऽस्तु ।  
 इत्यानन्दाकुलमुपगतं गोकुलादुद्धवं तं  
 दृष्ट्वा हृष्टो गुरुपुरपते पाहि मामामयौघात् ॥ ७६११॥
+</details>
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Lord of Guruvayur ! Thy heart was filled with delight on seeing Uddhava back from Gokula, overwhlemed by the devotion of the Gopikas to Thee, exclaiming : "Such devotion is, indeed, rare and unparalleled in all three worlds, and has neither been seen nor heard anywhere. What avails the study of the scriptures or doing penance ? My salutations to the Gopikas. " May Thou save me from all my afflictions.
+
+
 </details>
 
