--- a/laxyam/padyam/purANam/nArAyaNIyam/077.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/077.md
@@ -20,6 +20,15 @@ title: ०७७
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Thereafter, Thou, charmingly attired and accompanied by Uddhava, visited the house of that female attendant (who had given perfumed unguents to Thee while entering Mathura), who, ever since then, had been stricken with love for Thee and was always looking forward to Thy visit to her house and therefore adorning herself and decorating her house day after day, in anticipation of that great event.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/077/077_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +46,15 @@ title: ०७७
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+On Thy arrival, her breasts heaved out of immense delight and excitement, in fulfillment of her longing, and she welcomed Thee with great respect and honoured Thee in various ways. Thou didst give her great happiness in private.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/077/077_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +74,15 @@ title: ०७७
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+In response to Thy question (when Thou wert ready to leave), what boon she desired, that pitiable woman merely asked for similar enjoyment with Thee on some more occasions. Only the wise and discriminating person would seek liberation (union with Thee). But, what prevented her from wanting close proximity with Thee forever ?
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/077/077_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +100,15 @@ title: ०७७
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Then, O Lord ! Thou didst grant her the desired company on more occasions and begot a son by her, who attained fame as Upasloka, and became a shining exponent of Sattvata Samhita (secret of eternal reality) which he learnt from Narada.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/077/077_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +128,15 @@ title: ०७७
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Then, repairing to the house of Akrura, in the company of Balarama and Uddhava, and after being honoured and praised by him out of his great joy at Thy visit, deputing him to the Kurus, Thou didst learn from him the news about the Pandavas who had, by then, returned from the forest, and also about the activities of Dhritarashtra.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/077/077_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +154,15 @@ title: ०७७
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+On Jarasandha, out of his blinding rage over Thy slaying of his dear friend and son-in-law, Kamsa, laying seige to the city of Mathura, Thou, accompanied by Balarama, equipping Thyself with a chariot and a small army, requisitioned from the heavens, didst wipe out 23 Akshouhinis of Jarasandha's army. (Akshouhini is a large army comprised of 21,870 chariots, as many elephants, 65,610 cavalry and 1,09,350 infantry).
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/077/077_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +182,15 @@ title: ०७७
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+When the redoubtable Jarasandha was seized and bound by Balarama, Thou didst set him free, with the intention that he should resume the attack with more forces, as, in truth, there was, at that time, none more powerful than Jarasandha whose sway extended over all quarters, and his entire army was acquired by conquest.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/077/077_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +208,15 @@ title: ०७७
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Even after repeatedly suffering defeat at Thy hands and being overcome with shame, he continued to mount further attacks at the instigation of other kings, and, in 16 such attempts, he lost altogether 391 Akshouhinis, all destroyed by Thee. How wonderful, indeed !
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/077/077_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +236,15 @@ title: ०७७
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Nothing daunted, Jarasandha was preparing to attack Thy city for the 18th time with the support of a Yavana (King) with a 3-crore-strong army, on seeing which, Thou didst have a new city built quickly in mid-ocean by Vishwakarma (architect of the Devas) and transport all Thy people to it by Thy Yogic powers.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/077/077_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -181,6 +262,15 @@ title: ०७७
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Wearing a garland of lotuses and feigning to be frightened, Thou didst emerge on foot from the city and flee from it, with the Yavana King in hot pursuit. As he had not got enough merit to meet his end at Thy hands, Thou didst contrive to lead him into a mountain-cave, where, seeing a sleeping form, (and mistaking it for Thee), that Yavana kicked the sleeper with his foot, whereupon, the sleeper (who was King Muchukunda) opened his eyes and looked at the Yavana, who was instantly reduced to ashes by the fire emanating therefrom. Thou didst, then, reveal Thyself in Thy exceedingly charming form to that King Muchukunda, who was greatly devoted to Thee, in the cave.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/077/077_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -200,6 +290,15 @@ title: ०७७
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+King Muchukunda praised Thee, saying : " O Lord ! I am born in the Ishvaku race and, having renounced all royal pleasures, I seek Thy Grace alone." Immensely pleased at his disinterest in any boons, Thou didst bestow on him, devotion to Thee, which is equivalent to salvation and purges one of all sins and leads to deliverance at the end of one's life-span. Then, with a view to set an example to the entire world, Thou didst enjoin him to undertake penance for the atonement of injuries caused to others in the course of his reign as King.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/077/077_12.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -214,5 +313,12 @@ title: ०७७
 मगधपतिना मार्गे सैन्यैः पुरेव निवारितः ।  
 चरमविजयं दर्पायास्मै प्रदाय पलायितो  
 जलधिनगरीं यातो वातालयेश्वर पाहि माम् ॥ ७७१२॥
+</details>
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Returning to Mathura, and destroying the Yavana army, and being obstructed as before by Jarasandha and his army, Thou didst make a pretence of fleeing from him, thereby conceding him final victory, so as to increase his arrogance, and reach the mid-ocean city of Dwaraka. O Lord of Guruvayur, may Thou protect me.
+
+
 </details>
 
