--- a/laxyam/padyam/purANam/nArAyaNIyam/078.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/078.md
@@ -16,6 +16,15 @@ title: ०७८
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+With the radiance of Thy body, Thou didst brighten the city (Dwaraka), which was newly-built in the middle of the ocean, by the divine architect with consummate skill, and which was endowed with all prosperity by the gods.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/078/078_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -29,6 +38,15 @@ title: ०७८
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Thou, along with the assembled Yadavas, didst celebrate the wedding of Revati, daughter of King Revata, who, at the behest of Brahma, was given in marriage to Balarama.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/078/078_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -44,6 +62,15 @@ title: ०७८
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Then, O Lord, Rukmi, eldest son of the Vidarbha king, Bhishmaka, unilaterally, out of his ignorance, vouched to the wicked King of Chedi, Sisupala (on whom he was dependent), the hand of his sister, Rukmini, who was intent on union with Thee.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/078/078_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -57,6 +84,15 @@ title: ०७८
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+That maiden, Rukmini, who had long been yearning for Thee, getting desperate at the prospect of her desire being thwarted, sent a Brahmana as her emissary to apprise Thee of her predicament.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/078/078_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -72,6 +108,15 @@ title: ०७८
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Quickly reaching Thy city, which is inaccessible to the evil-minded, that young Brahmana was overjoyed by the warm personal reception accorded by Thee, Who doth dispel sorrows of worldly existence.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/078/078_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -85,6 +130,15 @@ title: ०७८
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+"I have been sent here by the princess Rukmini of Kundina, who is deeply devoted to Thee, but is constrained by circumstances to act on her own.", so said that Brahmana to Thee.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/078/078_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -100,6 +154,15 @@ title: ०७८
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+"O Fountainhead of mercy ! Save me, who long since, has lost her heart to Thee, and who is about to be taken away by Sisupala", so she prayed to Thee, O Sole Lord of the Universe.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/078/078_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -113,6 +176,15 @@ title: ०७८
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+The Brahmana caused disquiet in Thy mind by telling Thee that if forsaken by Thee, having no other refuge, Rukmini would give up her life at once.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/078/078_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +200,15 @@ title: ०७८
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Thou didst then tell him that, being even more afflicted by pangs of love for Rukmini, Thou would go there and bring her away from the midst of the assembled Kings.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/078/078_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -138,5 +219,12 @@ title: ०७८
 
 प्रमुदितेन च तेन समं तदा रथगतो लघु कुण्डिनमेयिवान् ।  
 गुरुमरुत्पुरनायक मे भवान्वितनुतां तनुतामखिलापदाम् ॥ ७८१०॥
+</details>
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Then, to the great delight of the Brahmana, Thou didst proceed with him to Kundina in Thy chariot. O Lord of Guruvayur, relieve me of my sorrows.
+
+
 </details>
 
