--- a/laxyam/padyam/purANam/nArAyaNIyam/080.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/080.md
@@ -20,6 +20,15 @@ title: ०८०
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Lord, Thou didst beg of Satrajit to give to Thee the Syamantaka jewel (that he had procured from the Sun-god), as if covetous for it. The real reason for Thy action, to my mind, was to create an occasion for winning the hand of his daughter, Satyabhama, who had lost her heart to Thee.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/080/080_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +46,15 @@ title: ०८०
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Declining Thy request, out of his pettiness, Satrajit permitted his brother Prasena to wear it round his neck while out hunting. Mistaking the glittering jewel for a piece of meat, a lion killed Prasena, and, in turn, it was killed by the monkey-King, Jambavan, who took the jewel and gave it to his child as a toy.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/080/080_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +74,15 @@ title: ०८०
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+When the people, believing Satrajit's allegation of Thy stealing the gem, and following the human proclivity to seize upon the slightest blemish to revile the noble and virtuous, began to talk about it, Thou (though omniscient), didst undertake a search for the jewel, along with Thy attendants. Coming upon the corpse of Prasena and, then, the lion in the forest, Thou didst, eventually, enter Jambavan's cave.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/080/080_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -74,6 +101,15 @@ title: ०८०
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+That aged Jambavan, foremost devotee of Thine, not recognising Thy identity, kept raining fist-blows at Thee (tantamount to worship) for a long time, muttering all the while "Who dares oppose me who has Mukunda as his refuge ? O Rama, O Hari, may Thou be ever victorious."
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/080/080_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -87,6 +123,15 @@ title: ०८०
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+When, in due course, recognition of Thee dawned on him, Jambavan presented to Thee his daughter, Jambavati, as Thy bride, together with the gem. Accepting both, Thou didst, soon, return home, and, immediately, hand over the gem to Satrajit.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/080/080_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -106,6 +151,15 @@ title: ०८०
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Profoundly abashed (at his earlier attitude) and coming to his senses, Satrajit, then gave his daughter, Satyabhama, (who had earlier been pledged to another, Satadhanva, by word of mouth only), along with the Syamantaka jewel, to Thee of inscrutable mind, who didst accept what was sought by Thee, Satyabhama's hand, while returning the gem to Satrajit.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/080/080_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -123,6 +177,15 @@ title: ०८०
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+While sporting with the bashful Satyabhama, and making her happy, Thou didst learn about the burning down of the Pandavas in the wax palace and hurry to Hastinapua. Alas, during Thy absence, Satadhanva, at the instigation of Akrura and Kritavarma, killed Satrajit and took the jewel away.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/080/080_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -142,6 +205,15 @@ title: ०८०
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+On Thy beloved, Satyabhama's arrival in Hastinapura, grief-stricken at the loss of her father, Thou didst kill Satadhanva without delay, and console her. In the meantime, Balarama, who had some misgivings about the jewel's whereabouts, repaired to the Mithila court, where he trained Duryodhana in fighting with the mace.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/080/080_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -159,6 +231,15 @@ title: ०८०
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Lord, it is generally believed that the evil-natured Satrajit's death was engineered by this Akrura in conformity with Thy wish alone and that Thou left the jewel in the possession of Akrura (to whom it had been entrusted by Satadhanva), with a view to bring him prosperity.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/080/080_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -178,6 +259,15 @@ title: ०८०
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Lord ! How did Akrura, an undoubtedly ardent devotee of Thine, come to entertain such evil thoughts ? Surely, it must have been brought about by Thee with a view to purging his mind of his growing vanity of having attained wisdom, detachment and mental poise.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/080/080_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -192,5 +282,12 @@ title: ०८०
 माहूय तद्विनिहितं च मणिं प्रकाश्य ।  
 तत्रैव सुव्रतधरे विनिधाय तुष्यन्  
 भामाकुचान्तरशयः पवनेश पायाः ॥ ८०११॥
+</details>
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Then, summoning Akrura, who had fled the city in fear, along with Kritavarma, and exposing the truth about the jewel which had been entrusted to him by Satadhanva, Thou didst permit him (Akrura) to retain it as a reward for his good deeds. O Lord of Guruvayur, may Thou protect me.
+
+
 </details>
 
