--- a/laxyam/padyam/purANam/nArAyaNIyam/081.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/081.md
@@ -20,6 +20,15 @@ title: ०८१
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Thereafter, accompanied by the lovely and charming Satyabhama, whom Thou didst always fondle and indulge, Thou didst attend the wedding of Draupadi and, following upon that, stay in Hastinapura to please the Pandavas. Then, O Lord, having founded the city of Indraprastha for the Pandavas, Thou didst return to Dwaraka.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/081/081_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +46,15 @@ title: ०८१
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Encouraging (inducing) Arjuna (in the guise of an ascetic) to abduct Thy gracious and lovely younger sister, Subhadra, to foil Duryodhana who had sought her hand, and getting round the enraged Balarama to consent to her marriage to Arjuna, Thou didst proceed, along with Satyabhama and Balarama, to Indraprastha, to the great delight of Thy dear friend, Arjuna.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/081/081_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +74,15 @@ title: ०८१
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Having accepted as Thy wife, Kalindi, the presiding deity of river Yamuna, whom Thou didst see while sporting on its banks, and after permitting Agni, the god of fire, to consume the forest of Khandava in order to satisfy him, Thou didst return to Dwaraka. Then, O Lord, Thou didst seize, from amidst the assembled kings, and take away, Mitravinda (princess of Avanti and the daughter of Thy father's sister) who was in love with Thee, but was too scared of her brothers to declare this openly.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/081/081_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +100,15 @@ title: ०८१
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Thereafter, going to Kosala (Ayodhya) and subduing in an instant the seven illustrious bulls (by assuming multiple forms simultaneously), Thou didst marry Satya, daughter of King Nagnajit. Then, Thou didst accept the hand of Bhadra, pricess of Kekaya, who was given to Thee in marriage by her  brothers, Santardana and others. O Bestower of Boons ! She too is the daughter of Thy father's sister, Srutakirti.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/081/081_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +128,15 @@ title: ०८१
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Having successfully hit the target of a fish, by looking at its reflection in water (which even Arjuna and others failed to do), Thou didst take, for Thy eighth wife, Lakshmana  (also known as Lakshana), daughter of the King of Madra. In the meantime, Thou didst come to learn from Indra about the evil deeds of Narakasura, son of Bhumi (Earth).
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/081/081_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +154,15 @@ title: ०८१
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Riding on Garuda, (King of Birds), who had arrived on Thy mere thought, with Satyabhama on Thy lap, Thou didst proceed to Thy enemy's abode, as if going to a pleasure garden. After destroying the fortifications of that city, Pragjyotisha, Thou didst convert it into "Sonitapura" - city of blood - with the blood of the slaughtered army of Thy enemy.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/081/081_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +182,15 @@ title: ०८१
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+After dispatching the five-faced demon, Mura, who was rushing towards Thee from the middle of the ocean, by severing his heads with Thy Sudarshana disc, Thou didst mow down (with the same disc) Narakasura who fought fiercely with Thee with the help of mighty four-tusked elephants, and, thus, took him across Hell (gave him liberation).
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/081/081_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +208,15 @@ title: ०८१
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Being promptly praised by Goddess Earth (for Thy deed), and after giving the kingdom along with a solitary elephant to Narakasura's son Bhagadatta, Thou didst despatch to Thy own city of Dwaraka, the remaining elephants, as also the 16000 maidens who had been imprisoned by the wicked Narakasura (and who were totally devoted to Thee), along with the booty of considerable wealth.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/081/081_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +236,15 @@ title: ०८१
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+On Thy proceeding to the heavens with Thy beloved, Satyabhama (whose beauty humbled the celestial damsels), and restoring to Aditi her earring which had been snatched from her by Narakasura, Thou wert worshipped by Indra and other gods. Then, as Thou uprooted the Kalpaka tree to take it with Thee to Thy city), the enraged Indra gave fight to Thee and suffered defeat at Thy hands, whereafter Thou returned to Dwaraka. This was done by Thee to demonstrate to the world the evil consequence of arrogance born out of prosperity.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/081/081_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -178,5 +259,12 @@ title: ०८१
 स्वीकृत्य प्रत्यगारं विहितबहुवपुर्लालयन्केलिभेदैः ।  
 आश्चर्यान्नारदालोकितविविधगतिस्तत्र तत्रापि गेहे  
 भूयः सर्वासु कुर्वन् दश दश तनयान् पाहि वातालयेश ॥ ८११०॥
+</details>
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Having planted the Kalpaka tree in Satyabhama's  palace grounds, and having accepted as wives, the 16000 maidens (rescued from Narakasura's clutches), Thou didst assume multiple forms and delight them with diverse amorous sports in their respective houses, witnessed with astonishment by Sage Narada, and did beget ten sons through each of them. O Lord of Guruvayur, may Thou protect me.
+
+
 </details>
 
