--- a/laxyam/padyam/purANam/nArAyaNIyam/082.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/082.md
@@ -20,6 +20,15 @@ title: ०८२
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Rukmini's (and Thy) son, Pradyumna, returned to Dwaraka with Rati, after killing the demon Sambara, who had kidnapped him as soon as  he was born. (Pradyumna  was Kamadeva, reborn after being burnt to ashes by Lord Siva in anger. After kidnapping him on birth, Sambara  threw him into the sea, where he was swallowed by a fish, which was caught by a fisherman and brought to Sambara's house. When cut open by Sambara's cook for making a dish for Sambara, Pradyumna came out of the belly of the fish and was secretly brought up by Rati who was then staying in Sambara's household and had recognised him as Kamadeva reborn.) Pradyumna also carried away Rukmi's daughter, Rukmavati, (by her good fortune), who later bore him a son, Aniruddha, the virtuous. Thou didst attend the wedding of Aniruddha with Rochana, grand-daughter of Rukmi, soon after which, Rukmi was killed by Balarama in a quarrel arising from a game of dice.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/082/082_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -33,6 +42,15 @@ title: ०८२
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+The demon, Bana, of a thousand arms, son of Bali (devotee of Siva), had a daughter, Usha, who was esteemed by all. O Lord, that Usha, having enjoyed, in a dream, the company of Thy grandson, Aniruddha (whom she had never seen), fell in love with him and suffered the pangs of separation.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/082/082_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -52,6 +70,15 @@ title: ०८२
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Usha recognised Aniruddha (as her dream companion) from the pictures drawn by her companion, Chitralekha, (daughter of Kumbhanda), who possessed Yogic powers and was a good artist besides. At her behest, Aniruddha was spirited away from Thy house at night by Chitralekha (by use of her Yogic powers) and brought to Usha's apartments.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/082/082_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -65,6 +92,15 @@ title: ०८२
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Aniruddha, who was having a joyous time with Usha in the latter's quarters, was spotted by Bana who, promptly, managed with some difficulty, to seize and imprison him. Incensed on learning of Aniruddha's imprisonment, through Narada, Thou didst lay seige to Bana's city, Sonitapura with the Yadava army.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/082/082_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -84,6 +120,15 @@ title: ०८२
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Lord Siva, the guardian deity of Bana's city, confronted Thee with his Bhoota hordes. The mighty Bana fought with Satyaki, and Skanda (Subramania) with Pradyumna, while Thou didst engage Siva, (the destroyer of the three Puras).
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/082/082_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -101,6 +146,15 @@ title: ०८२
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+As Siva, with all his weapons neutralised, was rendered unconscious by Thy Mohana missile, the Bhoota hordes fled in fear, and the leaders of Pramathaganas (Siva's attendants) were all crushed. Pradyumna's arrows made short work of Skanda, while Balarama smashed Kumbhanda, as if he were a pot.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/082/082_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -120,6 +174,15 @@ title: ०८२
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Bana who, then, mounted a massive attack on Thee with 500 bows, soon fell back with all his bows shattered. The Saiva fever (Lord of fevers) was overwhelmed by Thy (Vaishnava) fever, whereupon, that Saiva fever, in a chastened mood, extolled Thy greatness and, after conferring immunity from it on all Thy devotees, retreated. Rudra's followers, although innately wise, are generally seen to be violent owing to excess of Tamas (darkness).
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/082/082_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -137,6 +200,15 @@ title: ०८२
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Bana, who, out of arrogance, resumed the assault on Thee with many weapons, soon had all his arms, barring two on each side of his body, severed. Immediately, Thou wert praised by Sankara (Lord Siva) on realising that he and Thee were, in essence, the same, and, at his plea, Thou didst spare Bana. After being honoured by Bana, Thou didst return to Thy abode, Dwaraka, along with Aniruddha and Usha.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/082/082_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -156,6 +228,15 @@ title: ०८२
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Thy repeated victories over Indra, over Varuna (when Nandagopa was kidnapped by him while bathing), over Yama (by reclaiming from him the son of Thy preceptor, Sandeepani), over Agni  (by Thy devouring the wild forest fire), over Brahma (when he stole the calves) and over Siva here in the battle with Bana, O Lord, amply prove that this incarnation of Thine as Krishna surpasses all other incarnations and is most superior.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/082/082_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -166,5 +247,12 @@ title: ०८२
 
 द्विजरुषा कृकलासवपुर्धरं नृगनृपं त्रिदिवालयमापयन् ।  
 निजजने द्विजभक्तिमनुत्तमामुपदिशन् पवनेश्वर पाहि माम् ॥ ८२१० ॥
+</details>
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Thou didst send to heaven King Nriga, who had been turned into a chameleon by the curse of a holy man, and also didst instruct Thy own people on the greatness and efficacy of devotion to holy men (Brahmins).  O Lord of Guruvayur, may Thou protect me.
+
+
 </details>
 
