--- a/laxyam/padyam/purANam/nArAyaNIyam/083.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/083.md
@@ -16,6 +16,15 @@ title: ०८३
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Balarama had gone to Gokula and was engaged in amorous sports with the damsels there, in a state of intoxication, and had changed the course of the Yamuna out of rage at her not responding to his call. At that juncture, one Paundraka, holding himself out as an incarnation of Narayana, on being ill-advised by his courtiers, deputed a messenger to Thee.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/083/083_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -33,6 +42,15 @@ title: ०८३
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+The messenger, in Thy open court, to the amusement of all those present, delivered the message from Paundraka claiming himself to be an incarnation of Narayana, and calling upon Thee to discard Thy emblems, like conch, discus, etc. and seek his refuge.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/083/083_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -52,6 +70,15 @@ title: ०८३
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+On the departure of the messenger, Thou didst proceed to Paundraka's capital city, along with the Yadava army and, there, didst see Paundraka with a Srivatsa-like mark branded on his chest with a hot iron rod, a Kaustubha-like valuable gem round his neck, fish-shaped ear-ornaments, and clad in yellow garment.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/083/083_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -69,6 +96,15 @@ title: ०८३
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+When Paundraka threw at Thee his own disc of iron, Thou didst sever his head with Thy Sudarshana, emitting sparks of the fire of cosmic destruction. Further, Thou didst decimate his army and hurl into Kasi, the head of his friend, the King of Kasi. 
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/083/083_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -88,6 +124,15 @@ title: ०८३
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Imagining himself to be Vaasudeva all the time, although through foolishness and on the advice of immature courtiers, he had developed a feeling of oneness with Thee and, thereby, attained salvation. Who can, indeed, divine anyone's merit and what would ensue from it ?
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/083/083_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -101,6 +146,15 @@ title: ०८३
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Sudakshina, son of the King of Kasi, who had acquired magical powers by propitiating Lord Siva, through deeds of black magic, despatched towards Thee, a fire-emitting evil spirit, named Kritya, accompanied by some Bhootas who had fled in fright during Thy battle with Bana, but had been persuaded by Sudakshina, with great difficulty, to fight on his side.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/083/083_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -120,6 +174,15 @@ title: ०८३
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Terrified at the havoc wrought by Kritya, (with legs as stout as Palmyra trees), and burning down everything in its path, the citizens rushed to Thee for succour. Without in the least interrupting the game of dice, which Thou wert playing, Thou didst immediately despatch Thy Sudarshana, which was near at hand.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/083/083_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -133,6 +196,15 @@ title: ०८३
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Unable to withstand the might of the Sudarshana advancing towards it with immeasurable lustre, the Kritya fled, wailing in distress, and vented its rage on Sudakshina for using it for an improper, evil purpose (in violation of the code laid down by Lord Siva for its use) and burnt him (Sudakshina) down and also reduced the city of Kasi to ashes.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/083/083_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -152,6 +224,15 @@ title: ०८३
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Vivida , who had, in Thy incarnation as Rama, served Thee and helped in destroying the Rakshasas, being desirous of meeting with death at the hands of a part incarnation of Thine, took birth as a wicked person, and, as minister of Narakasura, wrought havoc in the country. He fought with Balarama in the vicinity of Dwaraka and was easily killed by the latter, by a blow with the palm of his hand.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/083/083_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -166,5 +247,12 @@ title: ०८३
 यातस्तद्वाक्यरोषोद्धृतकरिनगरो मोचयामास रामः ।  
 ते घात्याः पाण्डवेयैरिति यदुपृतनां नामुचस्त्वं तदानीं  
 तं त्वां दुर्बोधलीलं पवनपुरपते तापशान्त्यै निषेवे ॥ ८३१० ॥
+</details>
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Balarama went to Hastinapura to conciliate the Kauravas who held in captivity, Samba, (son of Jambavati) for his abduction of Duryodhana's daughter, Lakshana. Infuriated by their unyielding attitude, Balarama shook the city of Hastinapura and released Samba. Deciding that the Kauravas should meet their end at the hands of the Pandavas, Thou didst not send the Yadava army there. O Lord of Guruvayur, whose divine sports are hard to understand, may Thou alleviate my sufferings.
+
+
 </details>
 
