--- a/laxyam/padyam/purANam/nArAyaNIyam/084.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/084.md
@@ -16,6 +16,15 @@ title: ०८४
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Once, on the occasion of a solar eclipse, entrusting Dwaraka to the care of Kritavarma and Aniruddha, Thou didst visit the sacred spot named Samantapanchaka, along with the Yadavas and their womenfolk.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/084/084_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -29,6 +38,15 @@ title: ०८४
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+After performing ablutions in the holy waters, and, thereby, sanctifying them, for the good of the world at large, Thou didst give away lavish gifts, in cash and kind, to saintly persons, and also mix with Thy friends, the Kauravas, Pandavas, and others.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/084/084_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -44,6 +62,15 @@ title: ०८४
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Draupadi, an intense devotee of Thine, spent a happy time with Thy wives, listening with great delight to their narration of the diverse ways in which each of them was carried away by Thee as Thy consort.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/084/084_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -57,6 +84,15 @@ title: ०८४
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Then, O Lord, on seeing the Gopas who too had come there, Thou didst approach them with joy and honour them as also their women, who had become emaciated due to pangs of long separation from Thee.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/084/084_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -72,6 +108,15 @@ title: ०८४
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+On account of the intense delight felt by those women on meeting Thee, their annoyance at the long separation from Thee melted away, and their bosoms burst out of their blouses with the intensity of their love for Thee. Thou didst then, recline on those bosoms, which were extremely dear to Thee due to old familiarity.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/084/084_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -85,6 +130,15 @@ title: ०८४
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+On Thy explaining to Radha that, owing to frequent conflicts and quarrels with enemies, there was long delay in Thy coming, and embracing her, she was overwhelmed and became totally absorbed in Thee.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/084/084_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -100,6 +154,15 @@ title: ०८४
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Then, in privacy, Thou didst impart to the Gopis the knowledge of Thy being the Supreme Consciousness Bliss, the Brahman, the Self of all beings and the Reality Absolute, and didst instill this true knowledge and understanding clearly in their hearts, whereby, they became free from the pangs of separation.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/084/084_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -113,6 +176,15 @@ title: ०८४
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Earlier, owing to the advice of Thy friend and messenger, Uddhava, they had developed mixed feelings of joy and sorrow in separation from Thee. After this instruction from Thee in person, their minds were cleansed of all sorrow, and they experienced the Supreme Bliss of union with Thee at the mere thought about Thee.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/084/084_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +200,15 @@ title: ०८४
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Thy father, Vasudeva, sought the advice of the great saints assembled there on the auspicious rites to be performed to atone for one's sins, to which the saints laughingly responded, saying where was the need for such rites when Thou wert born as his son.  Nevertheless, they were prevailed upon to perform the sacrificial rites on his behalf.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/084/084_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -142,6 +223,15 @@ title: ०८४
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+When these great yajnas were in progress, wherein Thy friends joyously participated, the Gopas, honoured by the Yadavas, spent three months in Thy company with great rejoicing, as in the olden days..
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/084/084_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -152,5 +242,12 @@ title: ०८४
 
 व्यपगमसमये समेत्य राधां दृढमुपगूह्य निरीक्ष्य वीतखेदाम् ।  
 प्रमुदितहृदयः पुरं प्रयातः पवनपुरेश्वर पाहि मां गदेभ्यः ॥ ८४११॥
+</details>
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+When the time for departure came, Thou didst go to Radha and hold her in a tight embrace, and seeing that she was free from sorrow, Thou didst leave for Dwaraka with a joyous heart. O Lord of Guruvayur, save me from all my ailments.
+
+
 </details>
 
