--- a/laxyam/padyam/purANam/nArAyaNIyam/086.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/086.md
@@ -20,6 +20,15 @@ title: ०८६
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+During Thy sojourn in Indraprastha, Thy city, Dwaraka, was invaded by Salva, who after tasting defeat by the Yadava army during the wedding of Rukmini, had obtained from Lord Siva, an aerial vehicle by name Saubha, and was also endowed with magical powers. Pradyumna, with the entire Yadava army, repelled the attack and, in the ensuing battle that lasted for 27 days, killed his (Salva's) powerful minister, Dyuman.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/086/086_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +46,15 @@ title: ०८६
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Returning quickly to Dwaraka along with Balarama, Thou didst join battle with Salva. In that battle, when Salva knocked down Thy bow, Sarnga, with his mace, and, further, staged an illusive killing of Thy father, by killing a likeness of his, created by his magical powers, it is held by some that Thou wert, for a monment, taken aback; but, Sage Vyasa, has refuted this canard.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/086/086_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +74,15 @@ title: ०८६
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+When, after pulverising the aerial vehicle, Saubha, with Thy mace and consigning the pieces to the sea, Thou didst quickly behead Salva with Thy disc, Dantavaktra attacked Thee by hitting Thee violently with his mace. Then, Thou didst, with Thy mace, kill him too, that repository of good deeds, and like Sisupala, he too attained union with Thee. The purpose of this incarnation of Thine as Krishna was the final deliverance of all those whose minds were set on Thee for long.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/086/086_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +100,15 @@ title: ०८६
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+During Thy absence, (when Thou wert away in Dwaraka), a fraudulent game of dice took place in the Kaurava court, to which Draupadi was dragged by her tresses, weeping and wailing loudly. Then, Thou didst, out of great compassion, endow her with an endless garment (to foil her disrobing by Dussasana). Again, when Draupadi, finding herself in a predicament of being unable to provide food to Sage Durvasa (a part incarnation of Siva) who had arrived when the food had been exhausted, and fearing his curse, prayed to Thee for succour, Thou didst promptly reach her side and, by eating a bit of leaf left in the cooking vessel, assuage the hunger of Durvasa and the sages accompanying him.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/086/086_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +128,15 @@ title: ०८६
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Soon after, when consultations and preparations for the impending war were under way, granting Arjuna's prayer for Thy assistance, Thou didst entrust the Yadava army to Duryodhana, and decide to steer Arjuna's chariot without Thyself taking up arms. When, on Thy peace mission on behalf of the Pandavas to Hastinapura, Thy words were listened to with respect by Bhishma, Drona and others, but were spurned by Duryodhana, Thou didst reveal Thy Cosmic Form in that assembly of sages, and, thus, shaking the whole city, return to the Pandavas.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/086/086_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +154,15 @@ title: ०८६
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Then, O Krishna, in the capacity of Arjuna's charioteer, seeing that warrior grief-stricken and dejected at the prospect of having to kill all these relations in the impending war, Thou didst impart to him the knowledge of the Ultimate Reality or Truth, in these words: "O friend, what are you grieving for ? This Soul is Eternal, One without a Second; it has neither birth nor death. That being the Reality, who is the slayer and who is the slain ? Hence, abandoning the notion of your killing your relations, and with your mind totally dedicated to me, get up and fight this righteous war and do your duty as a Kshatriya." Thou didst, then, reveal to him Thy Cosmic Form, and thereby restored his equipoise.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/086/086_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +182,15 @@ title: ०८६
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+When Bhishma, the foremost of Thy devotees, who was also desirous of executing Thy mission of mitigating the burden (of evil and injustice) on this earth, was killing more than 10,000 soldiers day by day, and when Arjuna had also become exhausted by the ferocity of the fighting, Thou didst charge towards Bhishma with Thy Sudarshana disc in hand, as if enraged, and at the sight of Bhishma standing with his head bowed and palms folded in submission to Thee, Thou didst withdraw in great joy. Thy happiness was due to the fact that, even though Thy vow (not to take up arms in the war between the Pandavas and Kauravas) was broken, Thou didst fulfil Thy devotee's resolution that he would compel Thee to break Thy vow.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/086/086_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +208,15 @@ title: ०८६
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+In the battle with Drona, Thou didst receive on Thy chest, the Narayana missile discharged by Bhagadatta (son of Narakasura, who was fighting on the Kaurava's side firmly seated on the only four-tusked elephant that was allowed to remain with him in Thy battle against Narakasura) and thereby didst save Arjuna. By masking the sun's rays with Thy disc (before sunset) Thou didst create the opportunity for Arjuna to kill Jayadratha (and, thereby, fulfil his vow). Again, when the Naga (serpent) missile, discharged by Karna, was speeding towards Arjuna's head, Thou didst save Arjuna by pressing down with Thy foot Arjuna's chariot, whereby Arjuna's head was lowered below the path of the missile, which merely broke Arjuna's crown, and his head was left unharmed. What, indeed, hast Thou not done for the Pandavas ?
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/086/086_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +236,15 @@ title: ०८६
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Balarama, who had left on a pilgrimage at the commencement of the hostilities, visited the holy place of Naimisaranya, and, after killing a bard, (Suta) for failing to rise on his approach and show due respect to him, and installing his son in his place, he also killed the demon, Valkala, who used to hinder sacrifices every full moon and new moon day. After completing his pilgrimage, Balarama arrived in Kurukshetra towards the end of the war. The fight between Bhima and Duryodhana showing no signs of an early end, he repaired to Thy city, Dwaraka.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/086/086_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -182,6 +263,15 @@ title: ०८६
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Confronting the wicked Aswatthama, who appeared to have lost his reason, because of the enormity of his dastardly act of massacre of Draupadi's sons when they were asleep, Arjuna, in obedience to Thy command, checked and neutralised the Brahmastra discharged by Aswatthama, and, further, scooped out from his head, the jewel (with which he was born). When the powerful missile again discharged by Aswatthama, with the object of exterminating the Pandava clan, approached Uttara (who was carrying Abhimanyu's child in her womb), Thou didst, with discus in hand, enter the womb of Uttara, assuming the size of a thumb, and protect the foetus.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/086/086_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -196,5 +286,12 @@ title: ०८६
 स्त्वां पश्यन्भक्तिभूम्नैव हि सपदि ययौ निष्कलब्रह्मभूयम् ।  
 संयाज्याथाश्वमेधैस्त्रिभिरतिमहितैर्धर्मजं पूर्णकामं  
 सम्प्राप्तो द्वारकां त्वं पवनपुरपते पाहि मां सर्वरोगात् ॥ ८६११॥
+</details>
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Bhishma (who had been vested  by his father, Santanu with the power to choose the moment of his death) instructed Yudhishtira in all the Dharmas (virtues, duties, etc) from his bed of arrows. Then, on beholding Thee before him, that great devotee of Thine attained the state of identity with the Supreme Brahman, through the intensity of his devotion to Thee. Thereafter, Thou didst cause Yudhishtira to perform three very exalted Aswamedha sacrifices, without any desire to reap the fruits thereof. Thou didst, then, return to Dwaraka. O Lord of Guruvayur, may Thou save me from all my ailments.
+
+
 </details>
 
