--- a/laxyam/padyam/purANam/nArAyaNIyam/089.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/089.md
@@ -20,6 +20,15 @@ title: ०८९
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+According to my understanding, O Consort of Lakshmi, in this world, prosperity is hard to come by for Thy devotees because of its propensity to generate pride. To those whose minds have not become calm, Thou dost fulfil their desires only after bringing mental tranquillity, whereas, to those who have already attained that state of mind, Thou dost grant their wishes without delay. For Thy devotees, there can never be any fall.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/089/089_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -38,6 +47,15 @@ title: ०८९
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Lord, in accordance with their inborn inclinations, people often worship Brahma, Siva and other gods, who are easily gratified and equally easily irritated. Due to lack of foresight, such persons soon come to grief, alas. The tale of the demon Vrikasura, is indeed, a clear instance of this.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/089/089_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -51,6 +69,15 @@ title: ०८९
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Vrikasura, son of Sakuni, once sought the advice of Sage Narada as to which god is quickly propitiated, and was directed by the latter to do penance to Siva, and not to Thee, who art not favourably inclined to the evil-minded.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/089/089_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -70,6 +97,15 @@ title: ०८९
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Getting no response after doing severe penance to Siva, (for six days), Vrikasura lost his temper on the seventh day and, by threatening to cut off his own head, he compelled Siva to appear before him, immediately. Vrikasura asked, of that Lord of the universe, Siva, for the very trivial, but pernicious, boon of being able to cause the death of anyone  by placing his (Vrikasura's) hand on the head of the other. How can anyone who has no devotion to Thee, possess wisdom or discrimination ?
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/089/089_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -87,6 +123,15 @@ title: ०८९
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+On being granted the boon he sought, that Asura charged at Siva, in the like manner as a lion released from confinement rushes to attack its saviour. Siva, thereupon took to his heels out of fear of the Asura and ran about in all directions, all the time looking back at his pursuer. While the entire world watched silently, Thou, espying Siva from a distance making for Thy abode, didst assume the guise of a clever celibate (Brahmachari) and confronted that demon, before he reached Vaikunttha.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/089/089_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -106,6 +151,15 @@ title: ०८९
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Accosting the Asura with the words: "Hail to you, O son of Sakuni, why are you running about now relying on the words of that ghost ? In case you doubt my words, why not place your fingers on your head ? " Completely taken in by these words of Thine, he placed his hand on his own head and immediately fell down dead, like an uprooted tree. This is what becomes of the devotees of other deities. However, Thou alone art, indeed, the refuge, even of Siva.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/089/089_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -123,6 +177,15 @@ title: ०८९
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Once, the sages residing on the banks of the river, Saraswati, wanting to find out who among the Trinity (Brahma, Vishnu, Siva) was most Sattvik in disposition, deputed Bhrigu (son of Brahma) on this quest. Brahma was greatly angered by Bhrigu's lack of due respect to him, when he approached him, but controlled his temper, while Siva, to whom, too, Bhrigu showed similar disrespect, rushed to kill him, but was prevented by Parvati. Bhrigu, then approached Thee.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/089/089_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -142,6 +205,15 @@ title: ०८९
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+When the sage Bhrigu kicked Thee, O Lotus-eyed One, Thou, who wert sleeping on Lakshmi Devi's lap, didst rise with joy and address him thus: " O noblest of Sages, please forgive me for everything; your footprint on my chest shall, forever, remain as a decoration (ornament) to me (the famed Srivatsa). 
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/089/089_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -160,6 +232,15 @@ title: ०८९
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Having thus identified Thee as possessing the Sattvic quality to the highest degree, those sages residing on the banks of the Saraswati worshipped Thee with steady devotion and attained salvation. We too, O Changeless One, worship Thee alone, who art the sole embodiment of Sattwa Guna  to the most exalted degree, and art totally untainted by the fault of subsequent degeneration or decay.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/089/089_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -174,5 +255,12 @@ title: ०८९
 स्तुतं विष्णो सच्चित्परमरसनिर्द्वैतवपुषम् ।  
 परात्मानं भूमन् पशुपविनताभाग्यनिवहं  
 परीतपश्रान्त्यै पवनपुरवासिन् परिभजे ॥ ८९१०॥
+</details>
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O All-pervading Infinite One, O Lord of Guruvayur, for the eradication of all my sorrows, I worship Thee, the Supreme Being, the non-dual (One without a Second) Existence-Consciousness-Bliss, who wert, at the commencement of Creation, extolled by all the Vedas, like bards, as it were, and who art the embodiment of the aggregate merits of the Gopa maidens.
+
+
 </details>
 
