--- a/laxyam/padyam/purANam/nArAyaNIyam/090.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/090.md
@@ -20,6 +20,15 @@ title: ०९०
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Supreme Being ! From the episodes of Vrikasura, Sage Bhrigu, the Mohini incarnation, King Ambarisha and others, it is here firmly established that Thy glory is superior to, and transcends, that of Siva and all other gods. Thou art none other than the Nishkala (attribute-less) Supreme Brahman, as also all the Sakala (qualified, attributive) forms like Brahma, Siva, etc. and art that Indefinable One who doth shine as the essence of all.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/090/090_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -33,6 +42,15 @@ title: ०९०
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Of the five-fold aspects of the Trinity, namely Brahma, Vishnu, Siva (Rudra),  along with Sadasiva and Ishwara, which are spoken about by Saivas (followers of Siva), Thou, the Supreme One is, verily, Sadasiva; and Ishwara is Thyself too, the Lord of Vaikunttha. Thou alone dost manifest as the Trinity (Brahma, Vishnu, Siva), in the Satyaloka of three divisions.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/090/090_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -52,6 +70,15 @@ title: ०९०
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Among the Trinity, Thy pure Sattvik form is known as Vishnu. In Thy Brahma aspect, there is a preponderance of Rajas, with only a little of Sattva. In Thy form called Sankara, along with an abundance of Sattva, Tamoguna also expresses itself in its activities.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/090/090_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -69,6 +96,15 @@ title: ०९०
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Thou art, indeed, that Supreme Being, that pure Consciousness, transcending the Trinity, and Thou alone art the Sarva (Siva) whom the Saivas worship, due to Thy being the soul (essence) of all. There are many definite proofs that, that Sarva is also Thy form only.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/090/090_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -88,6 +124,15 @@ title: ०९०
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Sri Sankara Bhagavadpada, who is reputedly free from bias and sectarianism, worshipped Thee particularly among all Sakala forms (those having attributes) of Thine. He wrote Commentatries only on Vishnu Sahasranama, Bhagavadgita  and other works depicting Thee. In the end, he also attained salvation singing Thy praises.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/090/090_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -106,6 +151,15 @@ title: ०९०
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+At the commencement of his Treatise on Mantra Sastra (known as Prapanchasara), Sri Sankara has described Thee as the Lord of all, transcending the Trinity of Gods, and possessing the lustre of the Kalaya flower. While dealing with Pranava, too, after describing meditation on Thy Nishkala aspect, he has mentioned Thee alone as the object of Sakala meditation, too, and not any other deity.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/090/090_07.mp3"></div>
 
 
@@ -115,6 +169,15 @@ title: ०९०
 स्कन्धोदितं वपुरनावृतमीश धात्रे ।  
 तस्यैव नाम हरिशर्वमुखं जगाद  
 श्रीमाधवः शिवपरोऽपि पुराणसारे ॥ ९०८॥
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+In the Puranasangraha, which gives the gist of all the Puranas, Thy glory is described without any room for doubt. Thy abode, Vaikunttha, is mentioned as being above the three divisions of Satyaloka occupied by the Trinity. No such mention is made in relation to Siva.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/090/090_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -134,6 +197,15 @@ title: ०९०
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Lord ! That form of Thine which was revealed to Brahma here in the Brahma Kalpa, and which is described in the Second Canto of the Bhagavata, has been assigned the appellations of Hari (Vishnu), Sarva (Siva), etc. in the Puranasara of Sri Vidyaranya (though he was a devotee of Siva).
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/090/090_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -152,6 +224,15 @@ title: ०९०
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Those who, in conformity with their natural inclinations, or tendencies (Vasanas), worship Siva, do obtain the desired ends by firm devotion to him (Siva) only. It is with a view to encourage and motivate such persons that Sage Vyasa has eulogised Siva in his works like Skanda Purana, and made statements deprecating Thee.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/090/090_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -166,5 +247,12 @@ title: ०९०
 तन्मन्त्रशास्त्रवचनाद्यभिदृष्टमेव ।  
 व्यासोक्तिसारमयभागवतोपगीत  
 क्लेशान्विधूय कुरु भक्तिभरं परात्मन् ॥ ९०११॥
+</details>
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Arthavadas, or exaggeratory declarations, are of three kinds, namely, those which are neither contrary to available pramanas (proofs or authority) nor verifiable by experience; those which are verifiable by experience; and those which are contrary to experience, bordering on perverted interpretations. These are all devices employed by their proponents with a definite objective in view, or to score debating points, and are not to be taken in the literal sense. Statements in the Skanda and other Puranas attributing Tamoguna or defeat to Thee etc fall in this category and are motivated by the objective of intensifying devotion to one's chosen deity, and are not to be understood as belittling Thee.
+
+
 </details>
 
