--- a/laxyam/padyam/purANam/nArAyaNIyam/091.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/091.md
@@ -20,6 +20,15 @@ title: ०९१
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O, Sri Krishna, Lord of Lords ! The worship of Thy feet is, in my estimation, the most effective means of release from the fear that the soul is prey to, owing to its attachment to unreal objects (body etc.) and ego-centric thoughts of "I" and "mine", which leads to its mortal nature and to distress and affliction of various kinds. By such worship (of Thy Feet), this fear is wholly annihilated.  The mortal one who faithfully observes and follows the modes of worship, ordained by Thee, never falters or loses his way, even if he may be running with eyes closed due to the power of Maya.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/091/091_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +46,15 @@ title: ०९१
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O, Supreme Lord ! I dedicate to Thee, here and now, all that I do, again and again and from time to time, with my body, words (speech) and mind, actuated and instigated by Thy Supreme Power. One who has offered to Thee and concentrated in Thee his entire equipment of mind, deeds, speech, organs of sense and action, their objects and prana (vital breath) does thereby sanctify the Universe, even if he happens to be a Chandala (low caste), but not the one who is averse (indifferent) to Thy Feet, even if he happens to be a high born Brahmin.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/091/091_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +74,15 @@ title: ०९१
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+The thing that causes fear is, indeed, a mental projection of something different from one's own self. Hence, I shall, to the best of my ability, attempt to rein in this mental activity by conscious, intense practice of oneness with Thee. Nevertheless this attempt is often frustrated by the overwhelming power of Maya. Hence, O Lord, I shall gain victory over fear through constant meditation, with intense devotion, upon Thee, who is overlord of Maya itself.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/091/091_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +100,15 @@ title: ०९१
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Association with Thy devotees leads to the birth of devotion as also its development, in those who have accumulated Punya by performance of good deeds in past lives, even as association with the prosperous leads one to prosperity. Therefore, O Lord, I pray for association with Thy devotees, so that, by constantly listening to their recounting of Thy glories, my devotion to Thee (which drives away all sins) may become firm too.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/091/091_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +128,15 @@ title: ०९१
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+While following the path of devotion which I prefer (over other paths) for the attainment of salvation, I shall unremittingly recite Thy names, incarnations and sportive deeds, whereby my mind soon melts and leads me to behave as one possessed - sometimes weeping or roaring, singing loudly or dancing, and wander about without attachment to this world of objects. O Lord, may Thee in Thy infinite mercy, ordain me thus.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/091/091_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +154,15 @@ title: ०९१
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+May I pay obeisance to the five primordial elements (Earth, Water, Fire, Air and Ether) and to the entire universe of objects, moving and stationary, embodied out of these elements, be they birds, fish, beasts, etc., or human beings, friends or foes, with a mind disciplined to the concept that all these are manifestations of Thine Own Self.O Lord of the Universe, is it not true that by service to Thee and out of Thy infinite mercy alone, without any other effort, I shall attain intense devotion to Thee, non- attachment (to material objects) and realisation of Thy ultimate truth?
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/091/091_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +182,15 @@ title: ०९१
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+With my mind absorbed in Thee, not being overwhelmed by bondage-induced feelings of hunger, thirst, etc., constantly engaged in Thy meditation, never deviating even for a fraction of a moment from Thy feet, overcoming feelings of joy and sorrow, respectively, in things pleasant and unpleasant through understanding and realising that these are born out of Maya or delusion, may I wander around with a mind well-cooled by the radiance emanating from Thy moon-like toe nails.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/091/091_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +208,15 @@ title: ०९१
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+In case I am at present not mature enough to realise Thy oneness with these different elements, may I at least develop love towards Thee, friendliness towards Thy devotees, tolerance towards the dull-witted and ignorant and indifference towards enemies. Further may eagerness to worship Thy image with steady faith grow in me. Indeed one who serves Thee thus also soon reaches a position of superiority among Thy devotees.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/091/091_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +236,15 @@ title: ०९१
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Lord of the Universe, may Thou save me from being overpowered by Thy Maya (delusive power) which conceals Thy true nature and projects this world made up of the five elements (Earth, Water, Fire, Air, Ether) and consigns all creatures to the web of sufferings caused by their past actions. As the Sage Prabuddha did tell Videha, worship of Thy Lotus Feet alone can conquer that Maya.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/091/091_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -178,5 +259,12 @@ title: ०९१
 ल्लब्ध्वा त्वद्रूपतत्त्वं गुणचरितकथाद्युद्भवत्भक्तिभूमा ।  
 मायामेनां तरित्वा परमसुखमये त्वत्पदे मोदिताहे  
 तस्यायं पूर्वरङ्गः पवनपुरपते नाशयाशेषरोगान् ॥ ९११०॥
+</details>
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Having acquired discrimination (between the real and unreal) through observation of the sufferings of all creatures, I may gain knowledge of Thy true nature from a great preceptor, and by means of intense devotion generated by my constantly listening to the accounts of Thy glories and deeds, I shall cross the (ocean of) Maya and experience supreme bliss at Thy Feet. However this is but a preliminary step to the attainment of devotional love towards Thee. O Lord of Guruvayur, may Thou deign to destroy all my afflictions.
+
+
 </details>
 
