--- a/laxyam/padyam/purANam/nArAyaNIyam/094.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/094.md
@@ -20,6 +20,15 @@ title: ०९४
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+The Supreme, all-pervasive, pure and immaculate (untainted by Maya) aspect of the Lord, which is distinct from the body, sense organs etc, is realised by those who, with minds cleansed by unmotivated and disinterested actions, receive advice and guidance from the best of preceptors. Attributes such as stoutness, thinness, diversity, subtlety etc, are superimpositions on Thee, the Supreme Brahman, arising out of association with the three Gunas (inherent nature or qualities) namely, Satthva, Rajas and Tamas, similar to descriptions of fire as big, small, bright or dim, according to the nature of the wood that is being burnt.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/094/094_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +46,15 @@ title: ०९४
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+The fire of clear knowledge, produced by rubbing the lower fire-stick (preceptor) against the upper one (disciple) consumes the forest of delusions and misconceptions caused by one's past deeds and tendencies and the resultant attachments to one's body, kith and kin, possessions, etc. Eventually, on completion of the burning through exhaustion of the fuel, the flame of knowledge dies down, and total unification with the Supreme Brahman ensues.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/094/094_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +74,15 @@ title: ०९४
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Total dissolution (merger) in Thee is the sole and unique means for the annihilation of distress and sorrows. Other means, such as cultivation of crops, imbibing of medicines, six-fold tactics adopted by kings for dealing with enemies, the six karmas (enjoined on a Brahmana by Manusmriti), or the eight-limbed Yoga (of Patanjali), are not quite effective in eradicating these, nor in preventing their recurrence. The rituals prescribed in the Vedas are hard to perform or practice, due to unavoidable and insurmountable obstacles and inadequacies, such as, lack of time, constraints on resources, capacity of the performer, etc. Indeed, one who manages to perform these successfully, and get results, often becomes proud of his achievement and forgets Thee, which brings about his decline and endless misery.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/094/094_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +100,15 @@ title: ०९४
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Padmanabha ! Where indeed, is there any world other than Vaikuntha, which is free from fear ? Even Brahma feels insecure in Satyaloka due to fear of being engulfed in Thee in the form of Time at the end of the cycle of creation and dissolution. What then to speak of mere humans passing through the trials and tribulations of Hell in this world itself, as the outcome of the sins accumulated by their heinous and evil deeds ?May Thou, O Bestower of Boons, Friend of the miserable, and Ocean of Compassion, deign to sever all my bonds.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/094/094_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +128,15 @@ title: ०९४
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+In truth and essence, I am a part of Thyself and, hence, I am neither "bound" nor "liberated". Concepts of bondage and emancipation are delusions created by Thy subtle powers of Maya and Knowledge, in the same way as the (imaginary) distinction between the "dream" and "waking" states. The only difference between these two is that the one who is bound experiences the joys and sorrows resulting from indulgence in worldly pursuits, while the jeevan-mukta (liberated one), having been purged of all desires, is free from such sorrows and sufferings.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/094/094_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -110,6 +155,15 @@ title: ०९४
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+For one of sullied intellect, description of the liberated state as "this" or "that" carries neither meaning nor conviction. Nothing else but devotion to Thee purifies the mind. O all-pervasive Lord ! May Thou, therefore, foster in me intense devotion characterized by total surrender to Thee, whereby I may soon attain identification with Thee, with a little help, instruction and advice from a preceptor.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/094/094_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -125,6 +179,15 @@ title: ०९४
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+People who are totally engrossed in scriptural rituals (futile and sterile pursuits as these are) neither know (nor even try to know) Thee. They are alas, no different from one who rears a cow that is incapable of bearing a calf. May I never utter any word that does not recount Thy glorious incarnations, charming, sportive activities that delight the listeners and purge the mind of impurities, and Thy form which is pure Existence-Consciousness-Bliss.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/094/094_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -144,6 +207,15 @@ title: ०९४
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Omnipresent One, Emancipator of Shishupala (despite his constant and repetitive vilification of Thee) ! Even though I am ignorant of Thy true nature, Thy glories etc, I shall, with single-minded devotion, incessantly engage myself in service to Thee. May I be blessed with opportunities of seeing, touching the feet (and so on) of Thy images, and contact with conclaves of Thy devotees, as also indulge in Thy worship and adoration, prostration at Thy feet, and continuous chanting of hymns on Thy virtues, glories and deeds.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/094/094_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -162,6 +234,15 @@ title: ०९४
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Self-Effulgent One ! I am Thy slave. I dedicate to Thee all that I may get. Let me be unostentatiously engaged in service to Thee, such as, cleaning of Thy abodes (temples), and the like. I worship Thy resplendent four-armed form in the Sun, the holy Fire, the Brahmana, etc. May I, forever, practise devotion to Thee in the form of melting of the heart in a torrential flow of love for Thee.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/094/094_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -176,5 +257,12 @@ title: ०९४
 त्वत्सङ्गेनैव गोप्यः किल सुकृतितमाः प्रापुरानन्दसान्द्रम् ।  
 भक्तेष्वन्येषु भूयस्स्वपि बहुमनुषे भक्तिमेव त्वमासां  
 तन्मे त्वद्भक्तिमेव दृढय हर गदान्कृष्ण वातालयेश ॥ ९४१०॥
+</details>
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+The Gopis (milkmaids inhabiting Brindavan) were truly blessed, in that, by their whole-hearted devotion, they attained supreme bliss and one-ness with Thee, which is unattainable by other means, such as, charity, sacrifice, penance, austerities, etc or the methods prescribed in the Sankhya and Yoga systems (of philosophy). Amongst Thy innumerable devotees, the Gopis occupy a unique position and esteem in Thine eyes. O Krishna, Lord of Guruvayur ! May Thou strengthen my devotion to Thee and cure all my ailments.
+
+
 </details>
 
