--- a/laxyam/padyam/purANam/nArAyaNIyam/095.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/095.md
@@ -20,6 +20,15 @@ title: ०९५
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Lord, the very source and root cause of the universe ! At the commencement of creation, Thou didst abide in the form of Hiranyagarbha (Brahman or Vishnu, born out of a golden egg), adumbrating within Thyself the massed collection of all undifferentiated, subtle, individual souls. Later these evolved into myriad separate and individual entities, on being infused with the three Gunas (natural qualities, attributes or characteristics) - Satthva, Rajas, and Tamas, sprung out of Maya (delusion). Out of these, Satthva (goodness, virtuousness) develops and manifests as devotion, overpowering and eliminating the other two, Rajas and Tamas, in the process. In due course, when Satthva effaces itself and fades away, the individual soul (jeeva), myself being one, attains the state of identity with Thee, unencumbered by Maya-induced burdens and adjuncts.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/095/095_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +46,15 @@ title: ०९५
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Omnipotent One ! Even when Satthva Guna holds sway, at times, owing to the ascendancy of Rajas and Tamas (energy, passion, aggressiveness, sloth, ignorance and the like), despite being conscious of the perniciousness of worldly pursuits, the attraction of such activities becomes irresistible, on account of the intermeshing of the mind with the three Gunas. On such occasions, the sole means of resisting such pulls and firming up the mind is to resort to Thee in the "fourth state" (beyond the three states of wakefulness, dream and deep slumber) which is identical with Thee. This indeed was the advice vouchsafed by Thee to Sages, Sanaka and his brothers, assuming the form of a Swan, (which signifies whiteness, purity and wisdom).
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/095/095_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +74,15 @@ title: ०९५
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+For action-oriented (ritual-minded) individuals, several means of fulfillment have been enjoined, suited to their different tastes and preferences, most of which, however, yield only trivial joys and ephemeral results. As Thou firmly declared to Thy friend, Uddhava, devotion to Thee is the most efficacious means (superior to all others) for attaining lasting happiness. Indeed, for the worldly, can there be any Bliss to equal that flowing from devotion to Thee ?
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/095/095_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +100,15 @@ title: ०९५
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+The devotee who is content with devotion to Thee, and roams about happily everywhere, being rid of all desires, finds nothing but joy all round, similar to the animal living in the depth of the ocean seeing only water all round. Such a devotee craves not for Indraloka (heaven), Satyaloka (abode of Brahma) nor Yogic accomplishments, so much so, that he has no desire even for the bliss of salvation (Moksha) which comes to him unsought.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/095/095_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +128,15 @@ title: ०९५
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Thy devotee who is, momentarily, overcome by the pull of worldly pleasures owing to the restlessness (due to non-fulfillment of desires) of his sense organs, soon, however, becomes invincible by them due to their having been debilitated by the onslaught of devotion. When, like huge quantities of wood (fuel) being consumed by a blazing fire, all his sins and sinful tendencies are burnt away by intense devotion, can the sense organs wield their influence ?
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/095/095_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +154,15 @@ title: ०९५
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+How can one's mind attain purity except through the melting of the heart, thrill all over the body and flow of tears of ecstasy (all being indicative of the depth of devotional love) ? This certainly does not come about through great learning or austerities, to one who is devoid of devotion. When the soul is purified by being incessantly washed by the divine collyrium in the form of imbibing the stories of Thy glorious deeds, it is able to realise the inner truth, just as the visual clarity gained by the application of (medicinal) collyrium to the eyes. Such a result can never ensue by the study of Tarkasastra, multiple argumentation, etc.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/095/095_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +182,15 @@ title: ०९५
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+I shall practice meditation upon Thee with my body held erect, firmly seated in a comfortable posture, fixing the gaze of my eyes on the tip of the nose, controlling and regulating the breath by the three-stepped Pranayama (Puraka or inhalation of breath through the left nostril, Kumbhaka or retention of the in-drawn breath with both nostrils closed, and Rechaka or exhalation through the right nostril, the mouth being kept shut throughout), conceiving the naturally down-facing lotus of the heart in an up-turned mode, visualising the Sun, Moon and fire as seated above it, and above all these, Thy charming form, dark-blue complexioned as a moisture-laden cloud.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/095/095_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +208,15 @@ title: ०९५
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+I shall meditate upon Thee, possessing the features or attributes of:*  glossy, dark-blue tresses;* charmingly resplendent fish-shaped ear-ornaments;* a gentle smile on Thy lips, moist with compassion;* bedecked in garlands of wild flowers and pearly necklaces, all illumined by the radiance of the Kaustubha jewel;* the stamp of the Srivatsa mark on the chest;* beautiful, well-shaped arms;* soft, lustrous abdomen;* a golden-hued, silken robe round the waist;* lovely, fleshy thighs;* charming, tender, lotus-like feet.Note: This verse, verily, the piece-de-resistance of this Dasakam, sets out an encapsulated head-to-foot description of the Lord's form, which is eminently suitable for meditation. Being set to the Sragdhara metre, one of the most balanced and easy-flowing of several metres employed in this work, this verse is easy to memorise and equally easy to recall for chanting. Repeated chanting of this verse, preferably, in the silence of the heart, facilitates concentration of the mind on the Lord's complete form, by visualising the ten features or attributes sequentially in the mind's eye, and effectively stills the mind and bars the entry of all mundane thoughts and images into it.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/095/095_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +236,15 @@ title: ०९५
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O beloved Lord ! With my mind ranging over and over again with increasing zeal on Thy several limbs and eventually fixing it on Thy gently-smiling, charming lotus-like face, I shall dissolve my mind in the non-dual Supreme Consciousness-Bliss (Brahman) and banish all other thoughts from it. By constant practice, I shall thereby attain the steadfast, advanced state of one-ness with Thee.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/095/095_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -178,5 +259,12 @@ title: ०९५
 दूरश्रुत्यादयोऽपि ह्यहमहमिकया सम्पतेयुर्मुरारे ।  
 त्वत्सम्प्राप्तौ विलम्बावहमखिलमिदं नाद्रिये कामयेऽहं  
 त्वामेवानन्दपूर्णं पवनपुरपते पाहि मां सर्वतापात् ॥ ९५१०॥
+</details>
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O destroyer of Mura ! On my attaining in this manner, the state of concentrated devotion to Thee, the eight Siddhies (superhuman powers or faculties) shall vie with one another in approaching me, even from far off; they shall, however, merely delay my union with Thee and, hence, I shall ignore them. I long only for Thee, with plenitude of Bliss. O Lord of Guruvayur ! May Thou save me from all afflictions.
+
+
 </details>
 
