--- a/laxyam/padyam/purANam/nArAyaNIyam/003.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/003.md
@@ -20,6 +20,14 @@ title: ००३
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Varada ! Those Bhakthas who constantly chant Thy names and worship Thy divine form have all their righteous wishes fulfilled by Thee and are indeed the most blessed souls.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/003/003_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +45,14 @@ title: ००३
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord Vishnu ! Plagued as I am by diseases both physical and mental I am unable to turn my mind towards Thee.Please have pity on me and help me to sit peacefully in some quiet place chanting Thy innumerable names and worshipping Thy lotus feet.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/003/003_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +72,14 @@ title: ००३
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Nothing is impossible for one who has been blessed by Thee. Innumerable devotees of Thine have been liberated from their sorrows and worldly ties by Thy mercy. Can I not be one such fortunate devotee of Thine?
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/003/003_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +97,14 @@ title: ००३
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Many great sages like Narada have attained Supreme Bliss by meditating on Thy lotus feet and are now free to wander at will drowned in the complete state of conscious Bliss beyond all limits of time and space. Is there anything more for them to attain?
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/003/003_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +124,14 @@ title: ००३
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Please help me to become more and more devoted to Thee as that is the only remedy for all my woes. There is no doubt at all in my mind about this. For otherwise, all of Vyasa's teachings, Thy divine sayings and even the Vedas will become meaningless like the utterances of a street wanderer.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/003/003_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +149,14 @@ title: ००३
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Chanting Thy names and singing Thy praises is a sweet pleasure from the start. As devotion becomes more intense it eliminates all suffering and ultimately it leads the mind to the path of supreme knowledge and bliss. What more can a Bhaktha crave for?
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/003/003_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +176,14 @@ title: ००३
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! Rid me of all sorrows. May my feet walk joyfully to Thy temple; may my hands serve Thee with fervour; may my eyes be eager to feast on Thy divine image; may my nostrils be pervaded with the scent of the holy Tulsi leaves at Thy feet and may my ears drink in Thy delightful stories.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/003/003_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +201,14 @@ title: ००३
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+May Thy divine form embodying the Supreme Bliss envelop my mind and heart so completely that I am forced to forget all my physical maladies and experience only the thrill of shedding tears of joy in this state.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/003/003_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +228,14 @@ title: ००३
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Kamsanthaka !  Those who have no love or regard for Thee are thriving all round me. But in spite of my devotion to Thee, I am drowned in sorrow. Oh Varada ! Is not Thy reputation of mercy to Thy devotees at stake here ? Oh Lord ! Please remove my afflictions and make me a worthy devotee of Thee.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/003/003_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -178,5 +250,11 @@ title: ००३
 दहं तावद्देव प्रहितविविधार्तप्रलपितः ।  
 पुरः क्लृप्ते पादे वरद तव नेष्यामि दिवसान्  
 यथाशक्ति व्यक्तं नतिनुतिनिषेवा विरचयन् ॥ ३१०॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+What else is there for me to pray for ? I shall stop lamenting and spend my time doing pooja and singing hymns of praise to Thy lotus feet until Thou doth take pity on me and bless me.
+
 </details>
 
