--- a/laxyam/padyam/purANam/nArAyaNIyam/012.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/012.md
@@ -20,6 +20,14 @@ title: ०१२
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Swayambhuva Manu, who was busy with the creation of human beings, saw the earth being drowned in water at an inappropriate time (other than the deluge). He went to Satyaloka along with the sages and met Brahma who was serene and happy owing to his devotion to Thee.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/012/012_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +45,14 @@ title: ०१२
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Swayambhuva Manu told Brahma, the lotus-born, that while he was engaged in the creation of human beings, the earth had, unfortunately been drowned in water; and hence a place had to be arranged for those beings to live in. Thus entreated by Manu, Brahma prayed to Thy feet, Oh Lotus-Eyed Lord, for guidance.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/012/012_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +72,14 @@ title: ०१२
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Brahma took refuge at Thy feet, lamenting that he had already drunk the waters of the deluge and yet the earth was sinking. Feeling helpless, he knew not what to do. At that moment, Thou, who art omnipresent, came out of Brahma's nostril as a tiny boar.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/012/012_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +97,14 @@ title: ०१२
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Thou, whose boar form was only the size of a thumb while emerging, grew rapidly to the size of an elephant, spanning the skies. Seeing Thy phenomenal form, Brahma and his sons were filled with amazement.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/012/012_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +124,14 @@ title: ०१२
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+While Brahma was wondering who this tiny boar, which emerged from his nose and had attained this unimaginably great form could be and whether it was the Maya of Vishnu, The Unconquerable, Thou instantly grew to the size of a mountain and roared repeatedly in a terrifying manner.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/012/012_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +149,14 @@ title: ०१२
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Hearing Thy thunderous roar, sages in Janaloka, Tapaloka and Satyaloka began to sing Thy praises. Overjoyed by their salutations, Thou, dived into the ocean with this mighty form, roaring again.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/012/012_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +176,14 @@ title: ०१२
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Thy erect smoke-coloured hair, twitching upward, Thy tail held aloft, Thy snout pointing downward and Thy eyes rolling, Thou plunged into the ocean, rapidly penetrating the clouds, delighting the sages who were singing Thy praises.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/012/012_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +201,14 @@ title: ०१२
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Then, diving into the swirling waters, where hosts of crocodiles and whales whirled and rolled around, agitated by the surging waves, Thou searched frantically for Goddess Earth, terrifying the inhabitants of Rasathala, with Thy mighty roar.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/012/012_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +228,14 @@ title: ०१२
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Espying the Earth laid at the bottom of Rasathala by that cruel demon, Thou, Oh Lord, who came in the guise of a boar, quickly and playfully lifted her by the end of Thy tusk, unmindful of the demons who came rushing towards Thee.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/012/012_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -178,5 +250,11 @@ title: ०१२
 मुस्ताङ्कुराङ्कित इवाधिकपीवरात्मा ।  
 उद्धातघोरसलिलाज्जलधेरुदञ्चन्  
 क्तीडावराहवपुरीश्वर पाहि रोगात् ॥ १०॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! May Thou who came in the guise of a playful boar, emerging from the swirling waters of the ocean with that mighty form, carrying the Earth on the tip of Thy tusk like a twig of grass, save me from my ills.
+
 </details>
 
