--- a/laxyam/padyam/purANam/nArAyaNIyam/019.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/019.md
@@ -16,6 +16,14 @@ title: ०१९
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+The great-grandson of Prithu, Pracheenabarhis, by name, who was noble and virtuous and ever intent on the path of righteousness and duty, begot by his young wife, Satadruti, a set of ten good sons (collectively called Prachetas), who looked as if they were young sprigs of Thy mercy.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/019/019_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -29,6 +37,14 @@ title: ०१९
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+In accordance with the wish of their father, who was engaged in the task of creation, the ten sons, eager to do penance to Thee, came to the shore of the western ocean, where they found a beautiful lake.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/019/019_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -44,6 +60,14 @@ title: ०१९
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+At that time, Thy most ardent devotee, Siva, also known as Srirudra, who is ever eager to see Thy devotees, arrived at this sanctified water spot. Siva appeared before Prachetas and taught them the Rudrageetha, a set of hymns praising Thy glory.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/019/019_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -57,6 +81,14 @@ title: ०१९
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Standing in the water, these devotees chanted those hymns of Thy glory, worshipping Thee for ten thousand years. As they were drowned in the nectar of Thy supreme bliss, they took a very long time to see Thee in person, unlike Dhruva, (who was blessed with Thy revelation after five months of penance).
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/019/019_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -72,6 +104,14 @@ title: ०१९
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Due to the ever-increasing power of their penance, even their wicked ancestor, Vena, who obstructed all sacrifices to Thee, was cleansed of his sins. Their father, Pracheenabarhis, who attained the knowledge of self-revelation from sage Narada, who visited his abode, also merged in Thee.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/019/019_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -85,6 +125,14 @@ title: ०१९
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Owing to Thy boundless mercy, Thou appeared before Prachetas, seated aloft the Garuda Vahana, of glowing lustre, Thy eight arms radiant with the glittering light of those divine weapons, the conch etc. adorning them.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/019/019_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -100,6 +148,14 @@ title: ०१९
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Although Prachetas did not beg Thee for any favours, Thou granted them boons, due to Thy intense compassion, of Thine own will. Thy meditation alone is enough to give all good things to living creatures, and the chanting of Rudrageetha will grant all their rightful wishes.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/019/019_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -113,6 +169,14 @@ title: ०१९
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Thou blessed Prachetas with the boon of marrying Marisha, the daughter of trees, and enjoying life with her for a period of ten lakh years and begetting a son, named Daksha. Then they would attain Thee. Thus, Thou blessed them, joyfully.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/019/019_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +192,14 @@ title: ०१९
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Seeing the dense growth of trees covering the earth, Prachetas started burning those trees in anger but God Brahma stopped them. They married the daughter given by the trees and spent their specified lifetime with her in happiness as foretold by Thee.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/019/019_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -138,5 +210,11 @@ title: ०१९
 
 अवाप्य दक्षं च सुतं कृताध्वराः प्रचेतसो नारदलब्धयाधिया ।  
 अवापुरानन्दपदं तथाविधस्त्वमीश वातालयनाथ पाहिमाम् ॥ १९१० ॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+After begetting Daksha as their son, Prachetas observed numerous sacrifices to Thee. With the spiritual knowledge taught by sage Narada, they attained salvation in the abode of Supreme Bliss. Oh Guruvayurappa ! The Supreme Lord ! May Thou protect me.
+
 </details>
 
