--- a/laxyam/padyam/purANam/nArAyaNIyam/021.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/021.md
@@ -20,6 +20,14 @@ title: ०२१
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord !There is a place called Ilavrita, in the centre of the earth, which is inhabited only by members of the fair sex, amongst whom, Gauri, (Parvati) is the most notable one. Lord Siva, the only exception here, is worshipping Thee, with sacred mantras and hymns of praise. I take refuge in Thee, who art the Supreme  Lord of all.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/021/021_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +45,14 @@ title: ०२१
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! To the east of Ilavrita, is the region of Bhadraswa, where the sages called Bhadrasravas, are praising Thee, in the form of Hayagreeva, who was competent to retrieve the vedas, from concealment, at the end of the Kalpa, during the deluge. I meditate on that Hayagreeva form of Thee, the embodiment of knowledge.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/021/021_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +72,14 @@ title: ०२१
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! To the south of Ilavrita is the region of Harivarsha, where noble devotees, amongst whom is Prahlada, Thy most exalted devotee, are serving Thee, in the form of Narahari, which is sublime, peaceful and white, bestowing that pure, matchless, supreme knowledge on devotees. I meditate, Oh Lord, on this Narahari form of Thine.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/021/021_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +97,14 @@ title: ०२१
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! To the west of Ilavrita, is the beautiful region of Ketumala, where Thy body radiates loveliness with Thy divine sports and bewitching smile, where Goddess Lakshmi and the sons of Prajapati are serving Thee, and where Thou hast taken the form of the god of love, (Kama), to please Thy beloved, Lakshmi. I worship Thee, Oh Lord, in this form of Kamadeva.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/021/021_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +124,14 @@ title: ०२१
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord of the earth ! To the north of Ilavrita, is the wellknown region of Ramyaka, where the lord of that place, the noble Vaivaswata Manu, worships Thee, where Thou, in the form of a fish, shines graciously in the hearts of pure devotees, who are free from jealousy. I meditate on Thee, Oh Lord who art ever loving and affectionate to Thy devotees.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/021/021_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +149,14 @@ title: ०२१
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord of Knowledge Supreme ! Thou ruleth over the northern region called Hiranmaya, in the form of the Tortoise, that was capable of lifting the Mandhara mountain, and art worshipped here by Aryama, the foremost among the ancestors. I worship Thee, Oh Lord, who incarnated in this Tortoise form.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/021/021_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +176,14 @@ title: ०२१
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Yajnavarahamurthi ! Thou who took the form of the divine boar and art the embodiment of sacrifice, Thou who art praised by the wise and learned, Thou who art worshipped in the Uttara (northern) Kuru province by Thy beloved, the Goddess Earth with sacred salutations (mahamantras) and hymns of praise, Oh Thou of such a gigantic form that Thy tusk is long enough to touch the bottom of the clouds, I bow down to this divine Varaha form of Thine and beg Thee to save me.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/021/021_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +201,14 @@ title: ०२१
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Vishnu ! In the region of Kimpurusha, situated in the south, Thou hast taken the most magnificent and beautiful form of Rama, so charming to Sita, and art being worshipped by Hanuman with singleminded devotion here. May Thou in the form of that wonderful Rama, protect me.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/021/021_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +228,14 @@ title: ०२१
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Thou of Absolute Form !Thou who art praised and worshipped by sage Narada and all other prominent devotees of the Bharatakhanda region with hymns of glory in the Sankhya and yoga methods, Thou who art the protector of the good and virtuous till the deluge, and Thou who incarnated as Narayana with Thy companion Nara, May Thou, Oh Lord save me.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/021/021_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -181,6 +253,14 @@ title: ०२१
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+People worship Thee in the form of the sun in the Plaksha region, In the form of the moon in Salmala, as fire in Kusa, in the form of water in Krouncha, as air in Saka and as Brahma in the region called Pushkara.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/021/021_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -200,6 +280,14 @@ title: ०२१
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord who reclines on the ocean bed ! Thou art meditated upon by the great during the three twilight periods of dawn, noon and dusk, in the form of Simsumara, the enormous fish, with the hosts of stars like Dhruva and others and all the planets located in the tail portion and other such limbs. Oh Thou of this huge fish form save me from hell.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/021/021_12.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -214,5 +302,11 @@ title: ०२१
 लोकैककुण्डलविराजिसहस्रशीर्षम् ।  
 नीलाम्बरं धृतहलं भुजगाङ्गनाभिर्  
 जुष्टं भजे हर गदान्गुरुगेहनाथ ॥ २११२॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Guruvayurappa ! I pray to Thee in the form of the serpent Sesha, in the heart of the nether world, with his thousand heads radiant with the brilliant single earring, dressed in the blue garment, holding the weapon hala, (the plough) and surrounded by serpent maidens. May Thou of Adisesha form remove all my sorrows.
+
 </details>
 
