--- a/laxyam/padyam/purANam/nArAyaNIyam/023.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/023.md
@@ -20,6 +20,14 @@ title: ०२३
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! Apart from the famous Daksha,,son of Prachetas,there was yet another Daksha, who propitiated Thee to fulfil his desire of multiplying creation. Thou appeared before him in Thy divine form, radiant with Thy eight arms and granted him his wish along with Asikni as his bride.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/023/023_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +45,14 @@ title: ०२३
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! Ten thousand sons were born to him first and then yet another thousand were born, but all of them adopted the path to salvation instead of creation, owing to the advice of the great Narada. Being enraged at this, Daksha cursed Narada to become a wandering minstrel, without any permanent abode; but Sage Narada, Thy most exalted devotee welcomed this curse as a blessing.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/023/023_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +72,14 @@ title: ०२३
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Then Daksha, begetting sixty daughters, proceeded to multiply mankind through them, creating the various groups of dynasties. His grandson, Twashta, had a son called Viswarupa, who composed the Narayana Kavacha, a hymn of praise to Thee. Using this hymn as an armour to protect Indra in his battle with the asuras, he made Indra win the war. Oh Lord ! Thy glory is indeed all conquering. 
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/023/023_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +97,14 @@ title: ०२३
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Long ago, Chitraketu, the ruler of the country of Surasena, who wished for a son was blessed with a son in his eldest wife, through the yogic power of Sage Angiras. But the other jealous wives of the king, killed the child. The king was grief stricken and lost control over himself due to Thy Maya, causing him great agony.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/023/023_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +124,14 @@ title: ०२३
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Sage Narada, who was filled with pity for the king, came along with Sage Angiras and showed him his dead son's soul. When that soul showed no recognition of the king as his father, Chitraketu was awakened from the Maya of grief into which he had fallen and as advised by Narada turned his mind toward Thy worship.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/023/023_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +149,14 @@ title: ०२३
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Then being initiated into Thy worship, by sage Narada, who taught him the appropriate hymn of praise and mantras to propitiate Thee, he performed penance to Thy Adisesha form, to please Thee. Within seven nights he attained the Lordship of Vidyadharas; yet he continued to worship Thee as ardently as ever for Thy grace and pleasure.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/023/023_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +176,14 @@ title: ०२३
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Pleased by his devotional rendering of Thy hymns of praise, Thou soon appeared before him, in the form of Adisesha, with a thousand hoods as white as lotus stalks and encircled by numerous Siddhaganas singing Thy glory. After educating him on the philosophy of self-knowledge, and blessing him, Thou disappeared.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/023/023_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +201,14 @@ title: ०२३
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Then Chitraketu, the crest jewel among Thy devotees, immersed in divine bliss, compiling all Thy hymns of praise, extolling Thy virtues, had them sung melodiously by beautiful maidens and roamed at will in all the worlds, for lakhs and lakhs of years, with a contented and happy mind, yet without any craving for worldly pleasures.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/023/023_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +228,14 @@ title: ०२३
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+To help Chitraketu  get rid of any remnants of attachment to worldly desires, Thou conspired to send him to Kailasa, the abode of Siva, (enemy of Cupid). Here Chitraketu laughed at Siva for seating his beloved (Uma), unashamedly on his lap, amidst that august gathering of the great, and was cursed by Uma for his derision.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/023/023_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -182,6 +254,14 @@ title: ०२३
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Unfazed by this curse, Chitraketu did not beg to be saved from it. He took birth as the demon Vritra and encountered Indra in the battlefield. Here he dispelled even his enemy's ignorance, by his discourse on devotion and philosophy of self-knowledge and then attained Thy feet, which is truly amazing.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/023/023_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -196,5 +276,11 @@ title: ०२३
 तान्प्रत्युतेन्द्रसुहृदो मरुतोऽभिलेभे ।  
 दुष्टाशयेऽपि शुभदैव भवन्निषेवा  
 तत्तादृशस्त्वमव मां पवनालयेश ॥ २३११॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Diti, mother of the demon clan, prayed to Thee for a son to destroy Indra, But contrary to her wishes, she gave birth to the Maruts, who were Indra's wellwishers. Thy worship showers blessings even on the wicked hearted. Oh Guruvayurappa ! May Thou of such immense glory, save me.
+
 </details>
 
