--- a/laxyam/padyam/purANam/nArAyaNIyam/024.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/024.md
@@ -20,6 +20,14 @@ title: ०२४
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! Enemy of Madhu ! When Hiranyaksha was killed by Thee in Thy incarnation as an enormous boar, his brother, Hiranyakasipu, filled with grief and rage, and although inwardly afraid of Thee, took a pledge in the assembly of demons to kill Thee.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/024/024_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +45,14 @@ title: ०२४
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+He undertook a severe penance to Brahmadeva, and soon Brahma appeared in front of him and granted him the boon of not being killed by gods, men, animals etc. Having obtained such a boon, he became very arrogant and with total disregard for Thee, tormented this world of which Thou art the Lord, and took the heaven by force from Indra.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/024/024_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +72,14 @@ title: ०२४
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+He then came in search of Thee, to Thy abode Vaikunta to kill Thee, but Thou assuming a subtle form, invisible to his naked eye, entered his heart and lay hidden there. Looking all round Vaikunta and the whole world, and not finding Thee, he came back to his own abode confident that he had conquered Thee and crowing aloud arrogantly that Thou had run away in fear.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/024/024_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +97,14 @@ title: ०२४
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Varada, Grantor of boons !To Hiranyakasipu was born a son named Prahlada, who while still in his mother's womb, had come to know about the power of Thy devotion, from sage Narada. In spite of being born in the demon race, and although only an infant, he developed extreme love for Thee and became a prime example to all Thy devotees.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/024/024_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +124,14 @@ title: ०२४
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+The evilhearted Hiranyakasipu, enraged at his son's slavish devotion to Thy feet, which is scorned by the demons, engaged teachers for a long time, to brainwash him of his beliefs, but Prahlada brushed aside all the teachings of these tutors, as evil, and grew up with staunch devotion to Thy feet.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/024/024_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +149,14 @@ title: ०२४
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Once when the son was asked to tell which was the best lesson he had learnt, he replied promptly that devotion to the Lord was the greatest of all. Disconcerted by this answer, the father became angry with the teachers; coming to know from them that this was his natural inclination, he contrived to kill Prahlada, who had taken refuge at Thy feet, by various devices.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/024/024_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +176,14 @@ title: ०२४
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord Supreme ! Prahlada was pierced by sharp weapons; he was trampled upon by hosts of elephants of the quarters, many a time; he was bitten by huge poisonous snakes; he was starved at times and given poison to eat; he was even pushed down from the highest mountaintops. But as he had placed his full faith in Thee, who art omnipresent, he came to no harm at all.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/024/024_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +201,14 @@ title: ०२४
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Alarmed at seeing Prahlada's indestructible state, his evilminded father, following his tutor's advice, had Prahlada tied up with the ropes of Varuna, and kept a prisoner in his preceptor's house. Here in the absence of his teachers, Prahlada taught his classmates, the sons of demons, the basic lessons of devotion to Thee and that divine philosophy of Supreme Knowledge.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/024/024_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +228,14 @@ title: ०२४
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Coming to know that all the demon children had been induced by Prahlada into praising Thee, Hiranyakasipu blinded by rage, called him the bane of the demon race and asked him who his supporter was. To this the courageous boy replied that Vishnu, the lord of Vaikunta, was his support and that he was the support of even his father and the whole world; in fact Vishnu, himself was the three worlds.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/024/024_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -178,5 +250,11 @@ title: ०२४
 प्रभिन्ते स्म स्तम्भं चलितकरवालो दितिसुतः ।  
 अतः पश्चाद्विष्णो न हि वदितुमीशोऽस्मि सहसा  
 कृपात्मन् विश्वात्मन् पवनपुरवासिन् मृडय माम् ॥ २४१०॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Then, Diti's son, Hiranyakasipu, overcome by rage, shouting repeatedly, where was that Hari, who was said to be the soul of the whole Universe, swung his sword and struck the pillar in front of him, breaking it in two. Oh Thou Soul of Mercy ! Oh Thou Soul of the Whole World ! Oh Thou Omnipresent enshrined in Guruvayur ! I am unable to continue with this narration. Please bear with me and give me solace.
+
 </details>
 
