--- a/laxyam/padyam/purANam/nArAyaNIyam/034.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/034.md
@@ -20,6 +20,14 @@ title: ०३४
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+The sage Rishyasringa, performed the Putrakameshti sacrifice in Kosala, on behalf of king Dasaratha, who desired to have children, and offered the king that potent payasa, or milk preparation arising from the sacrificial fire. The king's three wives shared and ate it all between themselves and all three became pregnant at the same time. Thou, who had been entreated by the gods to destroy Ravana, Thyself incarnated as Rama, and along with Lakshmana, Bharata and Satrugna, took birth there.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/034/034_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +45,14 @@ title: ०३४
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! Upholding Thy father's word, Thou, carrying the bow Kodanda, went along with Lakshmana, to guard the noble sacrifice of sage Viswamitra. The sage taught Thee two mantras to remove Thy fatigue. At the sage's behest, Thou tore apart the demoness Tataka with arrows for the protection of the people. Having acquired from the sage, the host of divine missiles, Thou reached Siddhasrama, the hermitage of the sage.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/034/034_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +72,14 @@ title: ०३४
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+When the sacrifice began, Thou drove away Mareecha with Thy arrows and killed other Rakshasas. On the way to Videha, from there, Thou liberated Ahalya, (who had been cursed to become a stone by her husband, sage Gautama), with the dust of Thy feet and blessed her. Reaching the palace of Videha, and breaking the bow of Lord Siva there, Thou won the hand of Sita, daughter of the earth, (and in reality the incarnation of Goddess Lakshmi), and married her. Then along with Thy three brothers, who were married to the three sisters of Sita, Thou set out to Thy kingdom, accompanied by the four new brides.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/034/034_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +97,14 @@ title: ०३४
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord of Lustrous Form ! On the way home, Thou encountered Parasurama, the jewel of the Bhrigu clan, who blinded by anger, waged a battle with Thee; losing the battle he surrendered his lustre to Thee. Thou reached Ayodhya and lived happily with Thy dear wife. Then once, when Bharata had gone to his uncle's house, along with Satrugna, Thy father made arrangements for Thy coronation but was stopped by Thy step-mother, Kaikeyi (daughter of the king of Kekayas).
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/034/034_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +124,14 @@ title: ०३४
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+In accordance with Thy father's orders, Thou, taking bow and arrow in hand, and in the company of Thy brother and Thy wife, set out to the forest. Restraining the citizens of Ayodhya from following Thee to the forest, and sending them back home, Thou came to the house of Guha. (the boatman). Here donning matted hair and garments made of bark, Thou wert ferried across the river Ganges by Guha, and meeting Sage Bharadwaja nearby, paid Thy respects to him. Following his advice, Thou lived very happily on the lofty Chitrakuta. Mountains.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/034/034_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +149,14 @@ title: ०३४
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! From Bharata, (who came there to beg Thee to return home), Thou came to know that Thy father had passed away, heartbroken by Thy separation. Full of sorrow Thou offered libations of water to his departed soul and pacifying Bharata, entrusted Thy sandals and Thy kingdom to him to rule over till Thy return. Then after paying obeisance to Sage Atri, Thou entered the wide, dense forest of Dandaka, killed the ferocious demon Viradha there, and granted salvation to Sage Sarabhanga, witnessing his peaceful and happy end.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/034/034_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +176,14 @@ title: ०३४
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Thou, who wished to protect the sages, took a pledge to annihilate the entire host of rakshasas, and then bowing down to sage Agastya, Thou received from him the divine bow of Vishnu, the missile of Brahma and other weapons. On setting out from there, Thou wert happy to meet on the way, Thy father's friend, Jatayu, the eagle. From then on, Thou lived happily with Thy wife at Panchavati, on the banks of the river, Godavari.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/034/034_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +201,14 @@ title: ०३४
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord of Indestructible Might ! Unable to tolerate the harassment of the love-sick demoness Surpanaka, who besought Thee, frequently, Thou instructed Lakshmana to deal with her suitably, and he, overcome by anger, cut off her nose. Seeing her disfigured face, the demons, Khara, Dooshana and Trisiras, filled with rage, came to attack Thee, but Thou destroyed them along with more than a ten thousand demons, instantly.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/034/034_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +228,14 @@ title: ०३४
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Coming to know from his sister, Surpanaka, all that had transpired, Ravana, full of rage for his sister's condition and filled with lust for Sita, on hearing of her beauty from his sister, wished to abduct her. So he ordered Mareecha, to assume the form of a golden deer, and wander near the hermitage of Rama. The lotus-eyed Sita, wished to have that deer and Thou went in pursuit and killed it with Thy arrows. At that time, Mareecha, let out a painful cry, imitating Thy voice, and calling out to Lakshmana and Sita, as if Thou wert in danger. Hearing Thy pitiful cry and not realising that this was a deception, Sita, forced Lakshmana, to go to Thy help, leaving her alone in the hermitage. Ravana, using this opportunity, abducted Sita and took her away. Though unhappy, Thou wert secretly glad to have got a motive for Ravana's destruction.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/034/034_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -178,5 +250,11 @@ title: ०३४
 त्युक्त्वा याते जटायौ दिवमथ सुहृदः प्रातनोः प्रेतकार्यम् ।  
 गृह्णानं तं कबन्धं जघनिथ शबरीं प्रेक्ष्य पम्पातटे त्वं  
 सम्प्राप्तो वातसूनुं भृशमुदितमनाः पाहि वातालयेश ॥ ३४१०॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Then, going in search of the slim and delicate Sita, Thou met the dying Jatayu, whose wings had been cut off by Ravana, when he tried to save her, from the latter's clutches. After informing Thee, of this, he died and Thou cremated him and performed his funeral rites as he had been Thy father's friend. Then Thou killed demon Kabandha, who attacked Thee on the way. Later meeting Thy devotee, Sabari, on the banks of the river Pampa, Thou granted her salvation. Then coming across, Thy greatest devotee, Hanuman, the son of Vayu, Thou wert overjoyed. Oh Guruvayurappa ! May thou of such great exploits, protect me.
+
 </details>
 
