--- a/laxyam/padyam/purANam/nArAyaNIyam/036.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/036.md
@@ -20,6 +20,14 @@ title: ०३६
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+In olden times, Thou took birth in Anasuya, as the son of sage Atri, with the name of Datta. Owing to the constant harassment of Thy disciples, seeking guidance, Thou became mentally disturbed. Thou wandered around at will with Thy wife, full of self-bliss. Thy ardent devotee, the lord of Hehayas (Kartaveeryarjuna), saw Thee and Thou granted him the boon of the eight-fold form of wealth (Ashtaishwarya), and more and also the boon of meeting his death at Thy own hands in the end.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/036/036_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +45,14 @@ title: ०३६
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Hari ! To honour the boon given to Kartaveeryarjuna, (of death at Thine own hands) and to annihilate the entire race of Kshatriya kings, who oppressed Brahmins and had become a burden on earth, and were restrained only by Arjuna's might, Thou took birth in the Bhrigu dynasty as the youngest son of sage Jamadagni and his wife Renuka, with the name of Parasurama, causing great delight to Thy parents.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/036/036_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +72,14 @@ title: ०३६
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+By the age of fourteen years, Thou mastered all the scriptures. Once, when Thy mother was momentarily attracted by the Gandharva king, Thy father, full of rage towards her, ordered Thee to cut off her head along with those of Thy brothers too, for disobeying him. Thou obeyed his command and later, when he had calmed down, Thou obtained from Thy father the boon of bringing them all back to life. Then Thy mother too conferred some boons on Thee.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/036/036_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +97,14 @@ title: ०३६
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+To please Thy mother, Thy father, through worship, brought the celestial cow, (Kamadhenu) to his hermitage. At the behest of sage Bhrigu, Thou went to the Himalayas and by propitiating Lord Siva there, obtained from him the axe (Parasu) and also killed the demon referred to by him. Then Thou received all the powerful missiles and weapons from him. On the way back to Thy own hermitage, Thou befriended the sage Akritavrana.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/036/036_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +124,14 @@ title: ०३६
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Once, when Kartaveeryarjuna had come hunting to the forest, Thy father welcomed him as his guest and showered on him the various treasures given by the celestial cow. On returning to his capital, he was wrongly advised by his evilminded minister and he sent a minister to purchase the cow, but Thy father did not agree to sell it. So he tried to take her away by force and killed the sage when he tried to stop him. Kamadhenu, overcome by rage, produced hosts of warriors from her body, who destroyed the minister's army, but in the confusion the minister abducted her calf.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/036/036_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +149,14 @@ title: ०३६
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Hearing what had happened from Thy father, who had been resuscitated by Sukracharya, Thou, overcome by rage, prayed to Lord Siva. He sent through Mahodara, a chariot equipped with horses and charioteers and also the bow, axe and arrows. Armed with these weapons, Thou mounted the chariot along with Thy friend (sage Akritavrana), and arriving at the capital city of Mahishmati, calmly requested the king to return the calf. As he spurned Thy pleas, Thou started a war with him.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/036/036_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +176,14 @@ title: ०३६
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+The lord of Hehayas, Kartaveeryarjuna, encountered Thee on the battlefield with his ten thousand sons, seventeen divisions of army, powerful army chiefs and numerous friends, but Thou destoyed them all in no time, with Thy axe and arrows. Many ran away in fear and many others were killed; the king then attacked Thee with his remaining sons.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/036/036_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +201,14 @@ title: ०३६
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Kartaveeryarjuna, who had a thousand powerful arms was well known for his mighty feats. Once while sporting in the waters of the river Narmada, he had stopped the flow of water by using his thousand hands to form a dam; he had even curbed the pride of Ravana, who was performing a worship on the banks of the Narmada, by immersing him in the waters, making him breathless. Now with these thousand mighty hands, he fired numerous missiles and weapons on Thee. When all these and even the disc of Vishnu, that he sent turned out to be futile against Thy strength, he realised that Thou wert none other than Hari himself and he was overjoyed. He meditated on Thee and was at once liberated from all his sins. Thou killed him and he attained salvation in Thy supreme abode, Vaikunta.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/036/036_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +228,14 @@ title: ०३६
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Overcome by rage at the killing of their father by Thee, the remaining sons of Kartaveeryarjuna killed Thy father in revenge. Unable to bear the sight of Thy mother Renuka, beating her breast and weeping for Thy father, Thou took a terrible oath to kill all Kshatriyas, who hated Brahmins. Through meditation, Thou acquired a chariot and weapons, and massacred all Kshatriyas with axe and arrows, clearing the earth of their presence in all directions.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/036/036_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -182,6 +254,14 @@ title: ०३६
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Bringing Thy father back to life, Thou fought and defeated twenty-one generations of the Kshatriya race. Thou offered libations to the ancestors in the holy place of Samantapanchaka, in huge tanks of blood. Performing sacrifice there, Thou presented the earth to sage Kasyapa and others. Then Thou waged a terrible war against king Salwa. But sage Sanatkumara restrained Thee by saying that Lord Krishna would kill him and hence Thou withdrew from the fight.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/036/036_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -196,5 +276,11 @@ title: ०३६
 गोकर्णावधि सागरेण धरणीं दृष्ट्वार्थितस्तापसैः ।  
 ध्यातेष्वासघृतानलास्त्रचकितं सिन्धुं सृवक्षेपणा  
 दुत्सार्योद्धृतकेरलो भृगुपते वातेश संरक्ष माम् ॥ ३६११॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord of the Bhrigu dynasty ! Then throwing away all missiles, Thou did penance on the Mahendra mountain. The earth was submerged upto Gokarna in the ocean; so the sages entreated Thee for help. Through Thy power of meditation, Thou acquired bow and arrow and aimed the missile of fire at the ocean; the lord of the ocean shaken by fear, started to withdraw; Thou threw the sacrificial ladle, the Sruva, into the ocean and brought up the land of Kerala, beyond which the waters of the ocean receded. Oh Lord Guruvayurappa ! May Thou of such wonderful exploits, protect me.
+
 </details>
 
