--- a/laxyam/padyam/purANam/nArAyaNIyam/037.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/037.md
@@ -20,6 +20,14 @@ title: ०३७
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord of Complete Bliss ! Oh Hari ! In the war between the gods and demons which took place earlier, the demons were destroyed by Thee; yet, those demons who did not attain salvation, owing to their remaining merits and demerits, were born again on earth as demons and the earth became terribly afflicted by their burden; so Goddess Earth took refuge at Brahma's feet, where the gods had already assembled.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/037/037_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +45,14 @@ title: ०३७
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Hari ! Goddess Earth, lamenting pitiably on the growing oppression of the wicked demons on her surface, slowly drowning her in the ocean of sorrow, called the gods as witnesses to her pathetic state; Brahma, perceiving this, looked at the forlorn faces of the gods round him and began to pray to Thee.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/037/037_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +72,14 @@ title: ०३७
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+God Brahma, agreeing with Goddess Earth, about her sorrowful condition, told the gods that the Lord of Lakshmi alone could save them all. So, by his advice, all of them headed by Lord Siva, approached Thy abode in the milky ocean to worship Thee.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/037/037_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +97,14 @@ title: ०३७
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+On the shores of the milky ocean, fanned by the gentle breeze, they engaged in single-minded meditation of Thy feet. Thou revealed Thy wish to Brahma, from within his heart and he informed the delighted gathering all about Thy personal speech to him.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/037/037_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +124,14 @@ title: ०३७
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Thou told Brahma, that Thou wert fully aware of the pathetic condition of the gods and Goddess Earth, brought on by the evil demons, to destoy whom Thou would be born with Thy full divine spirit in the Yadava race. The gods and goddesses would also likewise be born with their divine partial spirit, in the clan of Vrishnis (cowherds), to serve Thee on earth. This speech of Thine was conveyed to the gods by Brahma.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/037/037_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +149,14 @@ title: ०३७
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! Thy speech was like nectar to their ears and they left with a peaceful mind, contented by Thy flow of kindness. The famous city of Mathura, purified by Thy divine presence, was ruled by King Surasena. His son Vasudeva, married the blessed daughter of Devaka.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/037/037_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +176,14 @@ title: ०३७
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+After the marriage ceremonies were over, Devaki's brother Kamsa, wishing to honour the bridal couple, took the reins of the chariot in his hands, driving it himself. On the way, by Thy impulsion, he was addressed by a disembodied voice from the sky, portending that the eighth son of this girl would kill him for his wicked deeds. Overcome by fear, he lifted his sword to kill Devaki, who was sitting next to him, at once.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/037/037_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +201,14 @@ title: ०३७
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+The evil-minded Kamsa, caught hold of Devaki by her tresses and would not let her go even after Vasudeva pleaded with him for along time; finally he released her only after Vasudeva promised to give the children who would be born to him; he went home, appeased by Vasudeva's words. As promised by Vasudeva, Thy first brother was duly given to him but Kamsa did not kill the child out of love. Oh Lord ! It is really strange that even the cruel-hearted are sometimes ovrecome with mercy.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/037/037_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +228,14 @@ title: ०३७
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Then, sage Narada, in keeping with Thy wishes, went to the lord of Bhojas, Kamsa, and apprised him of the fact that he (Kamsa), belonged to the demon race and the Yadavas were gods; that, owing to the pleas of the gods, Lord Hari, with delusive motive, was going to take birth to detroy him. Hearing these words, Kamsa killed Vasudeva's children, including the first one and drove away the Yadavas from their houses.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/037/037_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -178,5 +250,11 @@ title: ०३७
 नीते माधव रोहिणीं त्वमपि भोः सच्चित्सुखैकात्मकः ।  
 देवक्या जठरं विवेशिथ विभो संस्तूयमानस्सुरैः  
 स त्वं कृष्ण विधूय रोगपटलीं भक्तिं परां देहि मे ॥ ३७१० ॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord Madhava ! The lord of serpents, Adisesha, entered the seventh pregnancy of Devaki . Through Thy Maya, put into action by Thy will, the foetus was ensconced in the womb of Rohini . Oh Lord Omnipresent ! Thou, who art the sole embodiment of Satchitananda, (which is Existence, Energy and Absolute Bliss), entered the womb of Devaki . The gods sang Thy praises. Oh Lord Krishna ! May Thou of such glory, remove my numerous maladies and grant me supreme devotion.
+
 </details>
 
