--- a/laxyam/padyam/purANam/nArAyaNIyam/038.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/038.md
@@ -20,6 +20,14 @@ title: ०३८
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord of Absolute Bliss ! When Thy hour of incarnation approached, it was the rainy season, with dark clouds covering the sky. The rays of light emanating from Thy divine, dark blue form, seemed to light up the entire atmosphere.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/038/038_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +45,14 @@ title: ०३८
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! Healer of the distress of three worlds ! The rainwater pouring from the clouds cooled the earth in all directions and the good and virtuous souls were happy with the fulfilment of their wishes, when Thou wert born here on earth, at midnight, with the moon just rising.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/038/038_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +72,14 @@ title: ०३८
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Though Thou wert in the form of an infant in the room where Thy birth took place, Thou, by Thy divine powers, radiated the resplendent form of Vishnu, adorned with the dazzling crown, bangles, shoulder ornaments, bracelets, pearl necklaces and the like along with the shining conch, disc, lotus and mace in Thy arms and Thy compiexion of dark blue, like that of a rain-cloud.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/038/038_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +97,14 @@ title: ०३८
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Vaasudeva ! The inauspicious atmosphere of the house, brought about by the wicked Kamsa, seemed to have been swept away by the shy sidelong glances of Goddess Lakshmi, resting happily on Thy breast, with her eyes half open and Thou shone with that brilliant lustre.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/038/038_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +124,14 @@ title: ०३८
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Thy divine form which is unattainable even to the minds of self-controlled, great sages, was revealed to Souri (Thy father, Vasudeva), and he, overwhelmed by tears of joy, his whole body thrilled by the sight of Thee, his voice choking with emotion, praised Thee who looked like the nectar of flowers.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/038/038_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +149,14 @@ title: ०३८
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Vasudeva praised Thee for a long time thus: "Oh Lord of Supreme Spirit ! Thou art the knife that cuts the root of sorrow; Thou art partial to none; Thou shines with the glory of Thy Maya; May Thou remove my sorrows with Thy compassionate glances."
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/038/038_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +176,14 @@ title: ०३८
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Thy mother, with tears of joy wetting her slender, creeper-like form, praised Thee. Thou, who art the abode of mercy, revealed to them (Thy parents), their previous two births, in which they had sung Thy praises; accepting Thy mother's prayer, Thou had taken the form of a human child.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/038/038_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +201,14 @@ title: ०३८
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Then impelled by Thee, Vasudeva, got ready to exchange Thee with the daughter of Nanda. Thou, who art conceivable only in the minds of revered sages, and Thou, who art pleasing like the young swan seated in a lotus, wert lifted by Vasudeva, in his hands.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/038/038_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +228,14 @@ title: ०३८
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+At that time, Thy Maya, Yoganidra, who had been born in the cowherd, Nanda's house, put all the city dwellers to sleep, through her yogic powers, activated by Thee. But what is more amazing is that the firmly locked inanimate (prison) doors opened of their own accord.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/038/038_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -178,5 +250,11 @@ title: ०३८
 स्वैरं प्रदर्शितपथो मणिदीपितेन ।  
 त्वां धारयन् स खलु धन्यतमः प्रतस्थे  
 सोऽयं त्वमीश मम नाशय रोगवेगान् ॥ ३८१०॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Then the most blessed, Vasudeva, set out, with his path lighted by the shining crest jewels of the serpent Sesha, who with his hoods held above Vasudeva's head, shielded him from the rain. Oh Lord of such great deeds ! May Thou destroy the severity of my ailments.
+
 </details>
 
