--- a/laxyam/padyam/purANam/nArAyaNIyam/041.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/041.md
@@ -16,6 +16,14 @@ title: ०४१
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+After listening to the ominous sayings of Vasudeva, the head of the cowherd clan, Nanda, was hurrying home with a heart full of apprehension. As he neared his house, he saw a huge apparition lying on the ground, with uprooted trees, fallen all round it. Fearing the worst, he took refuge in Thee.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/041/041_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -29,6 +37,14 @@ title: ०४१
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Hearing from their womenfolk, all that had happened, the cowherds were filled with amazement and fear. Then, chopping up the fearsome body, that Thou had flung down, they carried it far away and burnt it.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/041/041_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -44,6 +60,14 @@ title: ०४१
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+The fragrant fumes rising upward from her body, with its breast purified by Thy sucking, gave rise to doubt as to whether it was the perfume of agaru or sandal or guggulu . (Due to Thy divine touch, the smoke issuing from Poothana's body became fragrant).
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/041/041_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -57,6 +81,14 @@ title: ०४१
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+By imparting fragrance to Poothana's body, Thou hinted to the wise cowherds that the fruit of Thy touch, was not far away, but easily accessible and it would soon be theirs too.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/041/041_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -72,6 +104,14 @@ title: ०४१
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Marvelling that the infant was not killed by the demoness and that Vasudeva's prediction had come true, the cowherds were overcome by the joy of seeing Thy face.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/041/041_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -85,6 +125,14 @@ title: ०४१
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Vaasudeva ! Owing to Thy living there, Gokula, grew more and more prosperous everyday. The joy and virtues of the people there was boundless.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/041/041_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -100,6 +148,14 @@ title: ०४१
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+The Gopis, talked delightedly only of Thy charming beauty and smile even while doing their household chores. After the day's work was over, they came to see Thee and rejoiced greatly in Thy presence.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/041/041_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -113,6 +169,14 @@ title: ०४१
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! The gopis fondled and caressed Thee in numerous ways, vying with each other, claiming that the baby was looking or smiling only at each one of them in particular, and reaching out to lift Thee in their arms.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/041/041_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +192,14 @@ title: ०४१
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+The gopis, ever eager to hold Thee in their arms, passed Thee round from hand to hand. Thou resembled a black bee, flitting from one flower to the other in a garland of red lotuses.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/041/041_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -138,5 +210,11 @@ title: ०४१
 
 निपाययन्ती स्तनमङ्कगं त्वां विलोकयन्ती वदनं हसन्ती ।  
 दशां यशोदा कतमान्न्न भेजे स तादृशः पाहि हरे गदान्माम् ॥ ४११० ॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Hari ! What immeasurable state of happiness Yasoda must have experienced as she held Thee in her lap, suckling Thee, seeing Thy smiling face ! Oh Guruvayurappa ! of such glory, May Thou protect me from disease.
+
 </details>
 
