--- a/laxyam/padyam/purANam/nArAyaNIyam/042.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/042.md
@@ -16,6 +16,14 @@ title: ०४२
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! Once on Thy birth day, Yasoda, the queen of Vraja, had invited the womenfolk, relatives and Brahmins for a feast in her house. Leaving Thee near a big cart, she was busy in the kitchen, preparing the dishes and making arrangements to receive the guests.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/042/042_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -29,6 +37,14 @@ title: ०४२
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Then from Thy proximity, there came the grating sound of crashing wood mingled with the confused and frightened shouts of the children, engaged to take care of Thee.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/042/042_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -44,6 +60,14 @@ title: ०४२
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Hearing these deafening sounds the womenfolk came racing with breasts heaving, due to their agitation and found Thee lying amidst the shattered pieces of wood, strewn all round.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/042/042_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -57,6 +81,14 @@ title: ०४२
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Nanda, the cowherds and the Brahmins came rushing there, with tears flowing down their eyes, wailing loudly about the child's fate; seeing Thee safe in Yasoda's hands, they sighed happily in relief.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/042/042_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -72,6 +104,14 @@ title: ०४२
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Wonderstruck at who could have done this and what could have caused such a wide and big cart to shatter to pieces, they stood with fingers on their noses, looking at Thee.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/042/042_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -85,6 +125,14 @@ title: ०४२
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! The children who had been taking care of Thee, averred that the baby, crying for breast milk, had kicked the cart with its beautiful lotus feet and thus the cart was upset and fell down and that they had all seen it happen.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/042/042_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -100,6 +148,14 @@ title: ०४२
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+The people assembled there knew little of Thy greatness. So they treated the children's version of the episode as an outcome of their fear and ignorance, and dismissed it lightly as unlikely and unreliable. But those (like Nanda), who had seen Poothana, suspected that there may be something amiss.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/042/042_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -113,6 +169,14 @@ title: ०४२
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+The women of Vraja, full of solace, caressed Thy body, cooing softly, whether Thy coral-coloured red feet were hurt, or Thy lotus-like soft hands were bruised. 
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/042/042_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +192,14 @@ title: ०४२
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Thy father, requesting the Gopi to give him his son, who had been saved by the grace of the lord of the universe, embraced Thy little body repeatedly, with hairs standing on end, unable to control his emotions.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/042/042_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -142,6 +214,14 @@ title: ०४२
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+The demon who came in the disguise of a cart to kill Thee, was himself destroyed by Thee. How come even the dust of his body was not to be seen? Most certainly, he must have been absorbed in Thy Sublime Purity. 
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/042/042_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -152,5 +232,11 @@ title: ०४२
 
 प्रपूजितैस्तत्र ततो द्विजातिभिर्विशेषतो लम्भितमङ्गलाशिषः ।  
 व्रजं निजैर्बाल्यरसैर्विमोहयन्मरुत्पुराधीश रुजां जहीहि मे ॥ ४२११ ॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Guruvayurappa ! May Thou who wert then showered with special auspicious blessings by highly revered Brahmins and May Thou who delighted Vraja with Thy childhood pranks, remove all my sorrows.
+
 </details>
 
