--- a/laxyam/padyam/purANam/nArAyaNIyam/043.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/043.md
@@ -20,6 +20,14 @@ title: ०४३
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Guruvayurappa ! Once, Thy mother Yasoda, who was holding Thee on her lap, found Thy weight suddenly too heavy to bear. Putting Thee on the bed, she went about her household work, mind highly agitated as to how this was happening and praying to Thee.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/043/043_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +45,14 @@ title: ०४३
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+At that time, there came a deafening sound from a long distance and the atmosphere was enveloped in a huge cloud of dust rising upward. It was the demon chief Trinavarta, (an ally of Kamsa) who came in the form of a whirlwind and lifted Thee, who art the one who lifts the minds of people.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/043/043_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +72,14 @@ title: ०४३
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+The people of Gokula could see nothing due to the darkness caused by the thick cloud of dust everywhere. Thy mother, not finding Thee, where she had left Thee, cried bitterly and loudly.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/043/043_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +97,14 @@ title: ०४३
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+At the same time, the demon chief, unable to bear the weight of Thy body, became exhausted and with his speed gone, he came to a dead stop. Then the dust and uproar having subsided, Thy mother's piteous wails were heard all over the village.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/043/043_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +124,14 @@ title: ०४३
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Hearing Yasoda's cries, the cowherds headed by Nanda, came there rushing and not finding Thee, began to cry too. Meanwhile the tired demon wanted to let go of Thee, but Thou, who blesses Thy devotees with liberation, did not release him and he fell down from the sky.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/043/043_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +149,14 @@ title: ०४३
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Then the cowherds, tired of their own wails, saw a huge body fall on the rock outside. Thyself, smiling contentedly, wert lying on the chest of the demon's, body, with no sign of injury or exhaustion. It was a real miracle.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/043/043_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +176,14 @@ title: ०४३
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Owing to falling from a very great height on the rock, the demon's lifeless body had been shattered. Thou sat on that wicked demon's body smiling broadly and beating it with Thy lotuslike hand. The gopas came there and lifted Thee, like a blue gem from the mountain.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/043/043_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +201,14 @@ title: ०४३
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! I bow to Thee, who wert lifted, embraced and kissed by Nanda and other cowherds, one by one, overwhelmed with joy. Perceiving the ardent desire of the gopis, to do likewise, Thou leapt into their lotuslike hands.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/043/043_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +228,14 @@ title: ०४३
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Thy parents and other relatives prayed to Thee, Lord Govinda, to protect Thee, as he alone could remove the sorrows of his devotees. Thus they praised Thee, to protect Thyself.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/043/043_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -178,5 +250,11 @@ title: ०४३
 वातोद्भवान्मम गदान्किमु नो धुनोषि ।  
 किं वा करोमि पुरनप्यनिलालयेश  
 निश्शेषरोगशमनं मुहुरर्थये त्वाम् ॥ ४३१०॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Guruvayurappa ! Thou who destroyed the demon who came in the guise of the wind, Can Thou not destroy my disease caused by wind (rheumatism) ? I beg Thee, again and again to make me free of all ailments.
+
 </details>
 
