--- a/laxyam/padyam/purANam/nArAyaNIyam/047.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/047.md
@@ -16,6 +16,14 @@ title: ०४७
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Once, Thou, thirsting for breast milk from Thy mother, who was churning curds, stopped her halfway and climbed on to her lap and started sucking her breasts.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/047/047_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -29,6 +37,14 @@ title: ०४७
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! When Thou wert happily engaged in sucking her breasts, which were like lotus buds, with Thy lotus mouth, smiling contentedly, Thy mother, seeing the milk overflowing into the fire, got up hastily, to attend to it, leaving Thee in half feed.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/047/047_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -44,6 +60,14 @@ title: ०४७
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! Thy mind filled with anger, at being abandoned by her in the midst of Thy feed, Thou, took the churning rod and broke the pot of curds.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/047/047_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -57,6 +81,14 @@ title: ०४७
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Hearing the loud shattering sound (of the pot being broken), Thy mother, who came there running, found the curd spreading all over the floor, like Thy fame, which spreads everywhere.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/047/047_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -72,6 +104,14 @@ title: ०४७
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Thou, who art sought after through Vedic paths, could not be seen by her,though she searched for Thee in anger, all over. Finally, Thy blessed mother found Thee, sitting on the wooden mortar, giving butter to the cat.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/047/047_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -85,6 +125,14 @@ title: ०४७
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Then apprehending Thee, who had put on an expression of fake fear, on Thy radiant lotus-like face, she, red-faced with anger, took a rope to tie Thee, in front of her friends. Oh how foolish of her to think of tying Thee who unties the bonds of all !
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/047/047_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -100,6 +148,14 @@ title: ०४७
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Yasoda wanted to tie Thee with the ropes, physically, whereas (Thy devotees), the good and virtuous, wish to be bound to Thee, with the rope of love. Tying together numerous strands of rope, she still fell two inches short of the required length of rope to bind Thee. 
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/047/047_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -113,6 +169,14 @@ title: ०४७
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Hari ! As her efforts to bind Thee repeatedly failed, Yasoda, became tired and was sweating profusely all over, while her friends watched her with smiles of amusement on their faces. Taking pity on her, Thou, who art the embodiment of eternal freedom, permitted her to bind Thee. Oh wonder of wonders !
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/047/047_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +192,14 @@ title: ०४७
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Having achieved her aim at last, Yasoda, went back to the house, determined to leave Thee in that state for sometime. But Thou sat there happily eating the butter, Thou had earlier hidden in the hollow of the mortar.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/047/047_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -138,5 +210,11 @@ title: ०४७
 
 यद्यपाशसुगमो भवान्विभो संयतः किमु सपाशयानया ।  
 एवमादि दिविजैरभिष्टुतो वातनाथ परिपाहि मां गदात् ॥ ४७१०॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! who art Omnipresent, Only those who have cut the rope,(pasa), of material desire, are able to attain Thee easily; then how could Yasoda bind Thee with the rope (pasa) of worldly attachment? Oh Guruvayurappa ! May Thou who wert praised thus by the gods in heaven, save me from my maladies.
+
 </details>
 
