--- a/laxyam/padyam/purANam/nArAyaNIyam/048.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/048.md
@@ -16,6 +16,14 @@ title: ०४८
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+The gods in heaven were delighted to refer to Thee as Damodara, meaning the one with the rope around the stomach; Thou, with Thy supple midriff, remained at ease tied to the mortar, when Thy eyes lighted upon two Kakubha trees, closeby.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/048/048_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -29,6 +37,14 @@ title: ०४८
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Nalakoobera and Manigreeva, the two famous sons of Kubera, acquired great wealth and prosperity by worshipping Lord Siva.. Becoming very proud and arrogant, because of their immense wealth, they frittered away their time in sensual pleasures, with no thought of Thee.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/048/048_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -44,6 +60,14 @@ title: ०४८
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Once, while they were bathing naked in the holy Ganges, engaged in romantic interludes with some singing maidens, and were fully drunk with liquor and arrogance, they were seen by sage Narada, who worships only Thy feet.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/048/048_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -57,6 +81,14 @@ title: ०४८
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Seeing the sage, their beloved female companions, gathered up their clothes, in panic, and left the place. Even then these two sons of Kubera, still intoxicated by liquor, did not come to their senses. Sage Narada, therefore cursed them so that they would regain unmitigated devotion to Thee, and obtain peace of mind. Without a calm mind, happiness will be totally absent.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/048/048_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -72,6 +104,14 @@ title: ०४८
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Sage Narada, cursed them to turn into Kakubha trees and remain in that state for a long time, and to regain their original form only after seeing Lord Hari. Thus cursed, the two brothers appeared as two Kakubha trees in the vicinity of Vraja, and were eagerly waiting for Thy advent.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/048/048_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -85,6 +125,14 @@ title: ०४८
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Dragging the mortar, Thou moved steadily and purposefully toward those two trees, already worn out at the roots due to age; entering between them with the mortar behind Thee, Thou made them fall by the mortar getting entangled in their roots.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/048/048_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -100,6 +148,14 @@ title: ०४८
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Govinda ! No sooner were the two trees uprrooted, than there appeared from them two radiant Yakshas singing hymns of Thy glory.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/048/048_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -113,6 +169,14 @@ title: ०४८
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Here, (in Thy Krishna incarnation), even those who worship other deities, will eventually become devoted to Thee. Thus by the blessing of Sage Narada, these two devotees of Rudra, finally took shelter at Thy feet, and asking only for the boon of everlasting devotion to Thee, went back to their abode.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/048/048_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +192,14 @@ title: ०४८
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Hearing the shattering din of the uprooted trees, the entire Gopa community came rushing there in panic and Thou, the liberator of all from bondage, wert untied by Nanda, who looked (reprovingly) at Yasoda, appearing shamefaced (for her foolish act).
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/048/048_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -138,5 +210,11 @@ title: ०४८
 
 महीरुहोर्मध्यगतो बतार्भको हरेः प्रभावादपरिक्षतोऽधुना ।  
 इति ब्रवाणैर्गमितो गृहं भवान्मरुत्पुराधीश्वर पाहि मां गदात् ॥ ४८१० ॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Wondering aloud that the child was unharmed in the midst of the uprooted trees and thanking Lord Hari for his grace, Nanda carried Thee back into the house. Oh Guruvayurappa ! May Thou of such miracles, save me from my troubles.
+
 </details>
 
