--- a/laxyam/padyam/purANam/nArAyaNIyam/049.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/049.md
@@ -16,6 +16,14 @@ title: ०४९
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+The falling of the trees and other such incidents, which had no rational explanation, disturbed the minds of the Gopas, who felt these were bad omens, as they were not aware of Thy divine glory and power; so they decided to move out of Gokula.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/049/049_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -29,6 +37,14 @@ title: ०४९
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Then, an elderly, respected Gopa, known as Upananda, prompted by Thee from within, suggested migrating to the fertile and charming forest region of Brindaavana, situated to the west of their present homeland.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/049/049_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -44,6 +60,14 @@ title: ०४९
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Then Nanda and others, full of enthusiasm, abandoning their present dwelling place, set out for that dense forest region, trudging behind that big cart, in which Thou wert seated along with Thy mother.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/049/049_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -57,6 +81,14 @@ title: ०४९
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+The rhythmic sounds of the rolling carts and the clattering of the hooves of the cows, and Thy sweet incoherent baby prattle, made the journey so enjoyable that nobody knew how long the road to Brindaavana was. 
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/049/049_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -72,6 +104,14 @@ title: ०४९
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! Thou wert overjoyed to see Brindaavana with its bunches of jasmine creepers in full bloom and the abundance of blossoming Kunda trees. The lush green grassland looked like a floor paved with emeralds. 
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/049/049_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -85,6 +125,14 @@ title: ०४९
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Separate new houses were built in the shape of a half moon and the gopas settled down comfortably in their various homes. Then, Thou, along with the other gopa children, wandered leisurely around that forest, enraptured by its beautiful scenery.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/049/049_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -100,6 +148,14 @@ title: ०४९
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+The river Kaalindi, (daughter of Kalinda), (also known as Yamuna), with its crystal-clear water, flowing in and out in a winding zigzag path, vibrating with the chattering of the swans sounding like interesting discussions, and the dense growth of blooming lotuses, on its surface seeming to impart an ever smiling face to it, filled Thy heart with joy.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/049/049_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -113,6 +169,14 @@ title: ०४९
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+And Thy eyes feasted on the Govardhana mountain, resounding with the cries of numerous peacocks, and shining with a multitude of colours, due to the rays emanating from precious stones and its lofty peaks reaching to the sky, seeming to touch the world of Brahma.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/049/049_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +192,14 @@ title: ०४९
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Wherever Thou wandered with the gopa children, in and out of that forest, the winding river Kaalindi, appeared, like a love-smitten maiden, eagerly awaiting Thy coming.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/049/049_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -138,5 +210,11 @@ title: ०४९
 
 तथाविधेऽस्मिन्विपिने पशव्ये समुत्सुको वत्सगणप्रचारे ।  
 चरन्सरामोऽथ कुमारकैस्त्वं समीरगेहाधिप पाहि रोगात् ॥ ४९१० ॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Guruvayurappa ! May Thou who wandered in that forest, with a grassland most suitable for rearing cattle, along with Balarama and other gopa children, tending the calves, guard me against disease.
+
 </details>
 
