--- a/laxyam/padyam/purANam/nArAyaNIyam/051.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/051.md
@@ -16,6 +16,14 @@ title: ०५१
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Once, Oh Lord ! Thou decided to go on a picnic, along with the cowherd children, setting out very early in the morning, with the parcel of tasty dishes and snacks, all of Thee went, taking the calf herds of different kinds along.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/051/051_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -29,6 +37,14 @@ title: ०५१
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+As Thou walked toward the forest, the holy dust raised by Thy pair of lotus feet, which is sacred enough to purify the three worlds, was collected by the great sages, and was rubbed on their bodies with enthusiasm and ecstasy, and Thy appearance was celebrated by them as a grand, festive occasion.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/051/051_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -44,6 +60,14 @@ title: ०५१
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord Omnipotent ! While Thou, along with the other children, wert engaged in tending the calves grazing on the lush green grassland, the demon Agha, assuming the form of a deadly python, all of a sudden, waylaid Thee, with the intention of harming Thy person.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/051/051_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -57,6 +81,14 @@ title: ०५१
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+The python, with his huge mountainlike form and his mouth wide open like a cave was lying in wait on the path of the cowherd children, who, eager to play in the forest, entered the open hollow of its mouth, (unsuspectingly), whilst Thou wert still a short distance away from them.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/051/051_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -72,6 +104,14 @@ title: ०५१
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! The cowherd children, who, unthinkingly, entered the entrails of the snake, along with their calf herds began to get scorched by the unbearable heat inside. Thou, realising the gravity of the situation, entered the python's mouth at once, to save Thy friends in need.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/051/051_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -85,6 +125,14 @@ title: ०५१
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+On entering the serpent's mouth, Thou inflated Thy body in his throat, to such a great extent that he became breathless and started writhing in agony; instantly, Thou, wrenched open his thick neck, and emerged, along with the cowherds and their calves. 
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/051/051_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -100,6 +148,14 @@ title: ०५१
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Then, a brilliant ball of light which came out of the demon's body, remained suspended in the air momentarily, and as soon as Thou emerged from his body, quickly entered Thy form and was absorbed in Thee. This was a miracle indeed, which made the gods in heaven dance and sing (Thy praise).
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/051/051_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -113,6 +169,14 @@ title: ०५१
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Then, followed by the gods Brahma and others, who were full of amazement, Thou, and Thy friends, went to a different spot at noon, and celebrated the picnic, with all the tasty dishes and snacks.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/051/051_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +192,14 @@ title: ०५१
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Tucking the horn and flute in Thy waist, Thou holding the morsel of eatables in Thy lotus hand, regaled the children with funny jokes, making them laugh heartily; seeing this, the gods sang Thy praises in delight.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/051/051_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -138,5 +210,11 @@ title: ०५१
 
 सुखाशनं त्विह तव गोपमण्डले मखाशनात्प्रियमिव देवमण्डले ।  
 इति स्तुतस्त्रिदशवरैर्जगत्पते मरुत्पुरीनिलय गदात्प्रपाहि माम् ॥ ५११० ॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord of the Universe enshrined in Guruvayur ! The noble gods extolled Thee, expressing their wonder at the fact that eating a humble meal in the company of the cowherds, seemed to be more pleasing to Thee, than partaking the sacrificial offerings with the gods in heaven. Oh Lord of such virtues ! Please save me from my troubles.
+
 </details>
 
