--- a/laxyam/padyam/purANam/nArAyaNIyam/052.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/052.md
@@ -20,6 +20,14 @@ title: ०५२
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Witnessing the indisputable power of Thy glory, during the liberation of the demon Agha, hitherto not seen in any of Thy other incarnations, Brahma, with his mind determined to test Thee, used his power of delusion, (Maya), and caused the calf herds to disappear from view.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/052/052_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +45,14 @@ title: ०५२
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Seeing the agitation of the cowherd children at the disappearance of the calves, Thou, leaving Thy meal unfinished, went in search of the calves, as if to comply with Brahma's purpose. Brahma used this opportunity to hide also, the children who were in the midst of their meal, (with his same power of Maya).
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/052/052_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +72,14 @@ title: ०५२
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+In order to deal with this tricky situation, Thou, assumed the forms of all the calf herds, the various cowherd children, and even that of inanimate objects, like the utensils, curd pots and pans, the flute, horn etc. and as before frolicked and played in the forest the whole day, and returned to the village in the evening.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/052/052_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +97,14 @@ title: ०५२
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Thou, who wert in the form of calves and cowherd lads, carried Thy ownself in the forms of the various pots, pans, horn etc. and wert welcomed in great delight by the mothers of the cowherd boys and the mothercows of the calves, in these manifold forms.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/052/052_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +124,14 @@ title: ०५२
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+It is not at all surprising that these women and cows were filled with ecstasy on seeing these forms of Thee. Any human being who begets a certain soul as his own child, shows unlimited affection towards that child, owing to his egoistic pride. Then how much more joy and pride these women and cows would not have felt in acquiring the Supreme Soul as their own son or calf ?
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/052/052_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +149,14 @@ title: ०५२
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+With their rapture, growing every moment the cowherd clan, caressed and pampered Thee, in these manifold forms for a whole year, and even Thy brother Balarama, was able to detect the secret only after that. Undoubtedly, though both of Thee are manifestations of the Supreme Soul, there is a very great difference between Thou and him.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/052/052_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +176,14 @@ title: ०५२
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+At the close of one year, Brahma, was extremely perplexed to see the two sets of old and new calves and cowherd boys; more so as he could not tell the difference between the two sets. Thou, wishing to dispel his confusion, showed to him, each and everyone of Thy new forms, adorned with crown, shoulder ornaments etc. and having four arms and the radiance of the rainbearing clouds.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/052/052_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +201,14 @@ title: ०५२
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Moreover, Brahma had a vision of everyone of these forms of Thee being fondled and waited upon by Goddess Lakshmi; everyone of them reclining on the bed of the serpent Adisesha; each form with eyes shut in the trance of Yogic sleep; each form being worshipped by the sages Sanaka and others; seeing all these charming poses, Brahma was convinced of Thy identity.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/052/052_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +228,14 @@ title: ०५२
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Overwhelmed by seeing these countless forms of Narayana, and himself as an attendant of all these forms, Brahma was drowned in Maya. In order to dispel his delusion, Thou revealed Thy form of a year ago, standing alone with a half-eaten morsel of food in Thy hand.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/052/052_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -178,5 +250,11 @@ title: ०५२
 नत्वा च नूतवति धातरि धाम याते ।  
 पोतैः समं प्रमुदितैः प्रविशन्निकेतं  
 वातालयाधिप विभो परिपाहि रोगात् ॥ ५२१०॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! Then Brahma, with his pride, destroyed, bowed down to Thee, repeatedly,and singing Thy praises, heartily, left for his abode (Satyaloka). Thou came back to Brindaavana, with all the calves and cowherd lads, who were most happy. Oh Guruvayurappa ! May Thou save me from illness.
+
 </details>
 
