--- a/laxyam/padyam/purANam/nArAyaNIyam/053.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/053.md
@@ -16,6 +16,14 @@ title: ०५३
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord of the Universe ! With Thy childhood stage ending at five years of age, Thou came to the endearing stage of boyhood (from six to ten years of age) and started to rear cows instead of calves, with great enthusiasm.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/053/053_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -29,6 +37,14 @@ title: ०५३
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord of Guruvayur ! Thou, who incarnated for the protection of the earth (Gotra), most befittingly, took up the task of protecting the cows (Gotra), at this stage. (The word Gotra is used here in both senses.)
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/053/053_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -44,6 +60,14 @@ title: ०५३
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Once, while wandering leisurely in the forest, with Thy brother, Balarama, enjoying the beautiful scenery, Thy comrade Sridaama, wished to visit the forest spot of Dhenukavana. So Thou accompanied him there, with joy.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/053/053_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -57,6 +81,14 @@ title: ०५३
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Complying with Thy wishes, Balarama, forcefully shook the tall palm trees in that orchard, by which, clumps of fruits, both raw and ripe fell to the earth, scattering in all directions. Hearing that sound, the demon Dhenuka, in the form of an ass appeared there.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/053/053_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -72,6 +104,14 @@ title: ०५३
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Considering the fact that Thou art the protector of the cows, Thou felt that it would not be proper for Thee to kill the demon called Dhenuka, (meaning cow) and hence, Thou entrusted the task of destroying this demon, who was an enemy of the gods, to Thy elder brother, who accomplished this job.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/053/053_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -85,6 +125,14 @@ title: ०५३
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Immediately, the attendants of that demon came to attack Thee in the guise of jackals. Oh Lord ! Thou, along with Thy elder brother, lifted them playfully as if they were jambu fruits and effortlessly threw them on to the palm trees.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/053/053_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -100,6 +148,14 @@ title: ०५३
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+When Thou began to destroy that army of jackals or jambukas, Varuna, the rain-god was filled with fear, as he was also known by the name Jambuka. So he preferred to let that name remain only in the Vedas, and not to be used in customary speech.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/053/053_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -113,6 +169,14 @@ title: ०५३
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Murari ! The gods in heaven praised Thee, exulting that the fruit of Thy incarnation had been acquired. Thou, jestingly, agreed with them saying that the jambu fruits had fallen down and ate them with the children.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/053/053_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +192,14 @@ title: ०५३
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Eating those big, luscious fruits, dripping with sweet syrup, to their heart's content, the children gathered the remaining bunches of fruits to take home, feeling quite happy and proud. Accompanied by them, Thou reached home.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/053/053_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -138,5 +210,11 @@ title: ०५३
 
 हतो हतो धेनुक इत्युपेत्य फलान्यदद्भिर्मधुराणि लोकैः ।  
 जयेति जीवेति नुतो विभो त्वं मरुत्पुराधीश्वर पाहि रोगात् ॥ ५३१० ॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! Partaking the sweet fruits brought by the children, all the people (in the village), exulted over the killing of the demon, Dhenuka, by Thee, and wished Thee success, prosperity and a long life in loud tones. Oh Guruvayurappa ! May Thou who wert praised thus, protect me from afflictions.
+
 </details>
 
