--- a/laxyam/padyam/purANam/nArAyaNIyam/055.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/055.md
@@ -16,6 +16,14 @@ title: ०५५
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! Determined to drive away that deadly serpent from the river, Thou, quickly, climbed on to the Kadamba tree, on the river bank, with all its leaves dried up, owing to the poisonous air around it.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/055/055_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -29,6 +37,14 @@ title: ०५५
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Thou placed Thy feet, which had a pleasing radiance, akin to that of fresh, tender saplings, on the tree trunk and climbing to the top, plunged into the swirling, deep waters of the river, full of dreadful surging waves and went far down below.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/055/055_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -44,6 +60,14 @@ title: ०५५
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Owing to the fact that Thou support the weight of the three worlds, Thy body sank deep into the river, making the waters rise upward with a thunderous sound, submerging the land on both banks to a distance of a hundred bowlengths.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/055/055_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -57,6 +81,14 @@ title: ०५५
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+The deep whirling swells, generated in the agitated waters, in all directions, due to Thy plunging into it, and the deafening uproar, which accompanied it, enraged the serpent lord (Kaaliya), and he emerged from the waters, and approached Thee.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/055/055_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -72,6 +104,14 @@ title: ०५५
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+The serpent, with its thousand hoods, hissing in a deadly manner, producing fiery sparks and spewing out, its vicious, poisonous venom, appeared like a multi-peaked mountain of mascara (eye salve), in front of Thee.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/055/055_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -85,6 +125,14 @@ title: ०५५
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+With its eyes flaming and its breath emitting deadly poisonous fumes, generating intense heat all round, that serpent lord, bit Thee hard, but finding Thee unmoved, wrapped itself tightly around Thee, who hath unlimited power and strength. Quite amazing, indeed.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/055/055_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -100,6 +148,14 @@ title: ०५५
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+While the cowherd boys and cows, waitng on the banks were getting worried and restless, by Thy disappearance into the river, the grownups in the village, sighting many evil omens in their houses, came to the river Yamuna, in haste.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/055/055_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -113,6 +169,14 @@ title: ०५५
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord Omnipotent ! Seeing Thy condition, all of them, overcome by grief, decided to give up their life, when, all of a sudden, Thou, freeing Thyself from the deadly grip of the serpent, rose above the waters, smiling nonchalantly.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/055/055_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +192,14 @@ title: ०५५
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Then, stepping on to the hoods of the serpent lord, Thou, danced with Thy radiant delicate feet, to the tinkle of Thy anklet bells, rhyming with the sweet jingle of the bangles on Thy hands.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/055/055_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -138,5 +210,11 @@ title: ०५५
 
 जहृषुः पशुपास्तुतुषुर्मुनयो ववृषुः कुसुमानि सुरेन्द्रगणाः ।  
 त्वयि नृत्यति मारुतगेहपते परिपाहि स मां त्वमदान्तगदात् ॥ ५५१० ॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Seeing Thee dancing, the cowherds exulted; the sages were delighted; and the gods in heaven sent a shower of flowers. Oh Guruvayurappa of such glory ! May Thou save me from incurable diseases.
+
 </details>
 
