--- a/laxyam/padyam/purANam/nArAyaNIyam/056.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/056.md
@@ -16,6 +16,14 @@ title: ०५६
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! The celestial maidens sang melodiously and the gods beat the drums in tune to that, while Thou danced for a long long time, with Thy adorable ear rings, dangling back and forth, on the hoods of the serpent.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/056/056_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -29,6 +37,14 @@ title: ०५६
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Hari ! Letting off those hoods of Kaaliya, which bowed down and stepping vigorously with Thy lotus-like feet on those which were raised, Thou danced for long, to the musical rhythmic beat of Thy hands with utmost charm.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/056/056_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -44,6 +60,14 @@ title: ०५६
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Madhava ! When at long last, the serpent lord, with his array of hoods bent down and subdued by Thy rhythmic treading, was thoroughly worn out, and the waters round him had turned red by the blood flowing from his hoods, his wives came and prostrated at Thy feet.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/056/056_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -57,6 +81,14 @@ title: ०५६
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+The serpent women, who had in the remote past heard of Thy glory, and who had dedicated their minds to Thee, ever since then, now sang hymns of praise, which were full of devotion and knowledge, that could not be comprehended even by illustrious sages, and which came to them naturally, without any inhibition.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/056/056_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -72,6 +104,14 @@ title: ०५६
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Achyuta ! Seeing the outpouring of devotion from the serpent lord's wives, Thy mind was filled with pity and Thou, released him, granting him life. He showed his gratitude by prostrating at Thy feet, in total surrender.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/056/056_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -85,6 +125,14 @@ title: ०५६
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Thou advised him to go to the Ramanaka island, located in the central part of the ocean, where he would not be troubled by his enemy, Garuda. Following Thy advice, with due respect, the serpent lord, departed along with the other snakes.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/056/056_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -100,6 +148,14 @@ title: ०५६
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Adorned with the sets of precious stones, brilliant necklaces and silk garments, presented by the serpent king's wives, Thou, were reunited at dusk, with Thy own people, waiting on the banks (of the Yamuna), shedding tears of joy. 
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/056/056_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -113,6 +169,14 @@ title: ०५६
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Then as darkness fell, the Gopas could not return to their homes in the village. So they took refuge at Thy feet and spent the night in the forest nearby. Then, all of a sudden, a forest fire surrounded them. 
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/056/056_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +192,14 @@ title: ०५६
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Scorched by the intense heat, the cowherds, came awake and wailed pitifully, to be saved. Wishing to protect them, Thou, instantly, swallowed the raging fire in one gulp. What is so amazing about this ? Fire is indeed Thy mouth (in Thy cosmic Viratapurusha form).
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/056/056_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -138,5 +210,11 @@ title: ०५६
 
 शिखिन वर्णत एव हि पीतता परिलसत्युधना क्रिययाऽप्यसौ ।  
 इति नुतः पशुपैर्मुदितैर्विभो हर हरे दुरितैः सह मे गदान् ॥ ५६१० ॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Hari ! The cowherds, overcome with joy, praised Thee, marvelling that, yellowness (peethatha), which was an attribute of fire only as a colour till now, had now become an essence of it by the act of being drunk (peethatha) also by the lord. Oh Guruvayurappa ! May Thou who wert extolled thus, remove my diseases as also the sins which cause them.
+
 </details>
 
