--- a/laxyam/padyam/purANam/nArAyaNIyam/059.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/059.md
@@ -16,11 +16,27 @@ title: ०५९
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+The Gopis were extremely fascinated by Thy appearance, as beautiful as a fresh Kalaya flower, multiplying love and infatuating all and which is the integrated form of truth, intellect and bliss (sat, chit and ananda), or in other words the Supreme Truth, the Para Brahman. 
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/059/059_02.mp3"></div>
 
 
 मन्मथोन्मथितमानसाः क्रमात्त्वद्विलोकनरतास्ततस्ततः ।  
 गोपिकास्तव न सेहिरे हरे काननोपगतिमप्यहर्मुखे ।। ५९२ ॥
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Hari ! The Gopikas, with their minds invaded by Cupid, (Manmatha) the god of love, wishing to have a glimpse of Thee, at all times and places, could not bear Thy leaving for the forest at dawn.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/059/059_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -36,6 +52,14 @@ title: ०५९
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+After Thy departure, those deer-eyed lasses, with their eyes riveted in Thy direction and their mind following Thy path to the forest, were overjoyed to hear the melodious strains of Thy flute from a distance and passed the time talking of Thy divine sports.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/059/059_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -49,6 +73,14 @@ title: ०५९
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+On reaching the forest, Thou, standing under the pleasant shade of a tree, with Thy right foot, slightly elevated and placed across the left, started to play the flute.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/059/059_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -64,6 +96,14 @@ title: ०५९
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! The music from Thy flute, set the hearts of the celestial maidens fluttering, due to the piercing of Cupid's arrows, made the kingdom of beasts and birds to come to a standstill and even the stones to melt.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/059/059_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -77,6 +117,14 @@ title: ०५९
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+Those cowherd maidens, though unable to see Thee, in physical form, could very well visualise in their mind, Thy nimble petal-like fingers, flitting over the holes of the flute, and Thy sprig-like feet, beating in time with the tune, and by simply imagining this charming posture of Thine, they swooned in rapture.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/059/059_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +140,14 @@ title: ०५९
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+They considered the heavenly beings, the birds, beasts and cows and the very ground on which Thou walked in the forest, to be the most blessed of all, as they were fortunate enough to see Thee, unhindered and unobstructed.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/059/059_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -105,6 +161,14 @@ title: ०५९
 </details>
 
 
+
+
+
+<details ><summary>English (Padmini)</summary>
+
+These lovelorn lasses, longed to taste the nectar of Thy lips, at least whatever remained after being imbibed by the flute, but they lamented that such a time was still very far off and that they were nourishing such a hope in vain. With such depressing thoughts, crossing their mind, they swooned, frequently.
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/059/059_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -120,6 +184,14 @@ title: ०५९
 
 
 
+
+
+<details ><summary>English (Padmini)</summary>
+
+Oh Lord ! In this manner, day after day, these maidens, smitten by their extreme love for Thee, by the grace of Cupid, became more and more confused, and lost interest in their household duties.
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/059/059_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -130,5 +202,11 @@ title: ०५९
 
 रागस्तावज्जायते हि स्वभावान्मोक्षोपाये यत्नतः स्यान्न वा स्यात् ।  
 तासां त्वेकं तद्द्वयं लब्धमासीद्भाग्यं भाग्यं पाहि मां मारुतेश ॥ ५९१० ॥
+</details>
+
+<details ><summary>English (Padmini)</summary>
+
+Love comes naturally to all; the path to liberation may be attained through effort or at times may not be achieved. But these damsels, being extremely fortunate, attained both love and salvation in one go. A very great blessing indeed ! Oh Guruvayurappa ! May Thou save me.
+
 </details>
 
