--- a/laxyam/padyam/purANam/nArAyaNIyam/061.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/061.md
@@ -16,6 +16,15 @@ title: ०६१
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Thereafter, Thou, accompanied by the cowherd boys and herds of cattle, didst go to a distant forest, with the (undisclosed) intention of blessing a group of Brahmana womenfolk who were greatly devoted to Thee.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/061/061_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -29,6 +38,15 @@ title: ०६१
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Finding that the boys were exhausted by hunger and thirst in that uninhabited forest, Thou didst instruct them to approach a group of Brahmanas who were conducting a Yagna nearby, and ask for food.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/061/061_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -44,6 +62,15 @@ title: ०६१
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+When the boys accordingly sought food from them in Thy name, those Brahmanas, though well-versed in the scriptures, ignored them altogether and failed to respond.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/061/061_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -57,6 +84,15 @@ title: ०६१
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+The boys returned, depressed by the unsympathetic treatment at the hands of those Brahmanas. Is it any wonder that pure ritualists, totally devoid of devotion, behaved in this manner ?
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/061/061_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -72,6 +108,15 @@ title: ०६१
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Thou didst then tell them, with a tender smile, to approach the wives of those Brahmanas and tell them of Thy presence in the vicinity and request for food, which they would certainly give, being very kindhearted.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/061/061_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -85,6 +130,15 @@ title: ०६१
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Greatly excited on hearing the mention of Thy name, those women, who were yearning for long to see Thee, rushed to Thee bearing all four varieties of victuals (chewables, drinkables, suckables and lickables), despite being obstructed by their husbands.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/061/061_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -100,6 +154,15 @@ title: ०६१
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+With infinite joy, they perceived Thee standing with peacock-feathers quivering in Thy locks, bright ear ornaments reflected on Thy cheeks, meltingly tender looks and arms resting on a friend's shoulder.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/061/061_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -113,6 +176,15 @@ title: ०६१
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+One of the women, who was physically prevented by her husband from coming near Thee, meditated on Thee with intense devotion and, in an instant, attained salvation (union with Thee). How fortunate, indeed, she was !
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/061/061_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +200,15 @@ title: ०६१
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Having accepted their offer of food and blessed them, Thou didst send them back to their homes (which they had left unattended in their eagerness to see Thee) with instructions to attend to their wifely duties, and also removed any resentment towards them in the minds of their husbands.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/061/061_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -138,5 +219,12 @@ title: ०६१
 
 निरूप्य दोषं निजमङ्गनाजने विलोक्य भक्तिं च पुनर्विचारिभिः ।  
 प्रबुद्धतत्त्वैस्त्वमभिष्टुतो द्विजैर्मरुत्पुराधीश निरुन्धि मे गदान् ॥ ६११० ॥
+</details>
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+The Brahmanas, on reflection, realised their fault and also the signiificance of their wives' devotion to Thee. O Lord of Guruvayur ! Dispel all my afflictions.
+
+
 </details>
 
