--- a/laxyam/padyam/purANam/nArAyaNIyam/062.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/062.md
@@ -20,6 +20,15 @@ title: ०६२
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Lord Souri ! On one occasion, noticing the cowherds amassing materials needed for Vedic sacrfice, Thou, with intent to destroy Indra's pride, (though knowing the reason), didst question Nanda and others, with humility and gentleness, about the purpose of these preparations.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/062/062_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +46,15 @@ title: ०६२
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Nanda replied that every year a sacrifice needed to be performed to propitiate Indra, who nourished the earth with rain on which the entire population is dependent for subsistence, especially so in their case, as the cattle live on grass and water.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/062/062_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +74,15 @@ title: ०६२
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+To this, Thou didst, with logical reasoning, respond that there was no truth in saying that Indra was the bestower of rain; rather, that rains were the result of the unseen past good deeds of living beings. Indeed, what do large trees in the forest offer to Indra ? Thou asked.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/062/062_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +100,15 @@ title: ०६२
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Further, Thou didst tell them that cows being, no doubt, their wealth, it would be appropriate to offer sacrifice to the great mountain which provided nourishment to them. Also, that holy men who are more exalted than even the gods, too, deserved to be worshipped.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/062/062_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +128,15 @@ title: ०६२
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Being convinced by Thy reasoning, the Gopas reverentially worshipped holy men and made plenty of offerings to the mountain Govardhana, circumambulated it and bowed their heads before it with great respect. Thou, in the guise of the mountain, didst consume the entire offerings in the presence of the Gopas.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/062/062_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +154,15 @@ title: ०६२
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Thou didst, then, address the Gopas thus: "Do you now believe my words ? This mountain does, verily, partake of your offerings in his physical form. In case Indra feels offended, this mountain is capable of protecting us all from his wrath". The Gopas were delighted by Thy words.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/062/062_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +182,15 @@ title: ०६२
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+As the Gopas, along with Thee, returned home, Indra, on learning about the abrogation of the yagna to him, became highly incensed owing to the upsurge of Rajoguna, despite knowing Thy true identity and also that his high position was Thy gift.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/062/062_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +208,15 @@ title: ०६२
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+If Vishnu, having incarnated as a human being, insults the gods, then their exalted position would be lost. Indra, out of his excessive arrogance, vowed to destroy all prosperity of a mere cowherd (meaning Thee), and set out to defeat Thee.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/062/062_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +236,15 @@ title: ०६२
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Mounted on his elephant, Airavatha, and weilding the thunderbolt, Indra despatched the clouds of Pralaya (deluge), with intent to wipe out Thy abode (Vraja), while being, inwardly, laughed at by Fire, Wind and other Gods. O Lord of the three worlds ! Who, indeed, is immune from delusion by Thy Maya ?
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/062/062_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -178,5 +259,12 @@ title: ०६२
 प्यनातङ्कोऽस्माकं नियत इति विश्वास्य पशुपान् ।  
 अहो किं नायातो गिरिभिदिति सञ्चिन्त्य निवसन्  
 मरुद्गेहाधीश प्रणुद मुरवैरिन् मम गदान् ॥ ६२१०॥
+</details>
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Assuring the Gopas that even if Indra got angry, they had no cause for worry, as they had the grace of the holy men and the Govardhana mountain behind them, and wondering what was delaying Indra, Thou didst await his arrival. O Slayer of Mura ! Lord of Guruvayur ! May Thou eradicate all my ailments.
+
+
 </details>
 
