--- a/laxyam/padyam/purANam/nArAyaNIyam/063.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/063.md
@@ -16,6 +16,15 @@ title: ०६३
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Thou didst then, espy the rain clouds enveloping Vraja, shaking all the quarters with loud and unceasing thunder-claps, and rivalling Thy splendrous, dark-blue complexion.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/063/063_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -33,6 +42,15 @@ title: ०६३
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+The Gopas who were sorely tried and tormented by the torrential rains, accompanied by heavy hailstones, pouring down from all directions, and were appealing to Thee for succour, were then consoled by Thee, saying "Do not fear".
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/063/063_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -52,6 +70,15 @@ title: ०६३
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Quickly tearing the mountain by its roots and holding it aloft with Thy tender hands, Thou didst, smilingly, say "This mountain which is our family deity will ward off Indra's attack; why do you have any doubt about this ?"
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/063/063_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -69,6 +96,15 @@ title: ०६३
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+While Thou didst hold up the mountain with one tender, lotus-like hand (as if it were an umbrella), the Gopas with their herds of cattle and all their household effects, at Thy bidding, gathered over the soft, sandy stretch underneath that Lord of the Mountains, where the flood waters could not enter.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/063/063_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -88,6 +124,15 @@ title: ०६३
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+While keeping the mountain steadily up with one hand, Thou didst merrily engage in exchanging pleasantries with Thy companions (boys and girls) and gently scratching, with the other hand, the backs of the cows which were nustling Thee, and fill the Gopas with immense delight.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/063/063_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -101,6 +146,15 @@ title: ०६३
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+"How wonderful that this big mountain is being held aloft by Krishna for such a long time with his tender, lotus-like left hand alone; Could it be due to the power of the mountain ? " So said the Gopas with their gaze steadily on Thee all the while.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/063/063_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -116,6 +170,15 @@ title: ०६३
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Indra caused the heavy rains to continue pouring for seven consecutive days, telling himself that, when Thy hand tired, Thou wouldst put the mountain down.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/063/063_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -129,6 +192,15 @@ title: ०६३
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Lord ! Thou didst stand firm and steady without budging a bit from Thy position, and clouds, having discharged all their rain, were blown away and scattered by the wind, Indra got thoroughly scared and fled.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/063/063_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -144,6 +216,15 @@ title: ०६३
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+After the heavy rains subsided and the cowherds and their cattle came out, O Lord ! Thou didst set the mountain down properly on the surface of the earth, whereupon, the delighted Gopas embraced Thee.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/063/063_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -154,5 +235,12 @@ title: ०६३
 
 धरणिमेव पुरा धृतवानसि क्षितिधरोद्धरणे तव कः श्रमः ।  
 इति नुतस्त्रिदशैः कमलापते गुरुपुरालय पालय मां गदात् ॥ ६३१० ॥
+</details>
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Thou wert praised by the Gods thus: "For Thee, who, in the past (as Varaha) didst carry the very earth itself, what difficulty is there to lift up a mere mountain ?" O Lord of Guruvayur ! Consort of Lakshmi ! protect me from my afflictions.
+
+
 </details>
 
