--- a/laxyam/padyam/purANam/nArAyaNIyam/067.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/067.md
@@ -16,6 +16,15 @@ title: ०६७
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+The lotus-eyed Gopis, having experienced the heights of ecstasy through their participation in the amorous sports with Thee, who art the embodiment of Upwelling Bliss Absolute, began to feel exceedingly proud.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/067/067_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -29,6 +38,15 @@ title: ०६७
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Each one of them imagined that this Krishna, Lord of Lakshmi, who charms the whole world, has succumbed to my charms unabashedly and totally. Sensing their conceit, O Govinda ! Thou didst suddenly vanish from their sight.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/067/067_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -44,6 +62,15 @@ title: ०६७
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Enemy of Mura ! In the company of a Gopika named Radha, in whom pride had not yet taken root and who was, therefore, very dear to Thee, Thou didst repair to a distant spot, sporting freely with her.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/067/067_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -57,6 +84,15 @@ title: ०६७
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Lord ! On Thy sudden disappearance, those lotus-eyed damsels, all greatly smitten with pangs of separation, collected together and roamed all over the forest in search of Thee, and were greatly aggrieved.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/067/067_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -72,6 +108,15 @@ title: ०६७
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Those damsels who were totally devoted to Thee, lamentingly went about asking every tree, flower and creeper in that forest whether they had seen the thief of their hearts.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/067/067_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -85,6 +130,15 @@ title: ०६७
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+One of them imagining to have seen Thee in front of her, told the others excitedly about it, whereupon, their anguish multiplied manifold.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/067/067_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -100,6 +154,15 @@ title: ०६७
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Those women who had identified themselves with Thee, re-enacted Thy past sportive deeds (such as the redemption of Putana, slaying of Sakatasura, etc) on the banks of the Yamuna. Resuming their search for Thee, they came upon Radha, who too had been forsaken by Thee, due to her becoming conceited.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/067/067_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -113,6 +176,15 @@ title: ०६७
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Their continued search for Thee till nightfall having become futile, they reassembled on the banks of the Yamuna, bitterly lamenting their fate, and sang Thy praises.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/067/067_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +200,15 @@ title: ०६७
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Then, O Ocean of Compassion, who doth outcharm the Charmer of the three worlds (Cupid) ! Thou didst reveal Thyself, with a gentle smile, to those Vraja women, who were steeped in grief and pain.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/067/067_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -138,5 +219,12 @@ title: ०६७
 
 सन्दिग्धसन्दर्शनमात्मकान्तं त्वां वीक्ष्य तन्व्यस्सहसा तदानीम् ।  
 किं किं न चक्रुः प्रमदातिभारात् स त्वं गदात्पालय मारुतेश ॥ ६७१० ॥
+</details>
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+What all did those comely damsels not do in haste, out of their excessive delight on suddenly seeing Thee, their own beloved, (which they had even begun to doubt) ! O Lord of Guruvayur ! Save me from my afflictions.
+
+
 </details>
 
