--- a/laxyam/padyam/purANam/nArAyaNIyam/068.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/068.md
@@ -16,6 +16,15 @@ title: ०६८
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Lotus-eyed One ! Ecstatic on seeing Thee, the Gopis who rushed near Thee, stood immobilised, as if bathed in an outpouring of nectar.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/068/068_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -29,6 +38,15 @@ title: ०६८
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Then, one of them, seizing Thy soft (lotus-like) hand, and unhesitatingly placing it on her heavy bosom, remained for long, enveloped in a thrill of joy.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/068/068_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -44,6 +62,15 @@ title: ०६८
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Another one, O Lord, rapturously coiled Thy charming arm around her neck, as if wanting to obstruct the passage of the vital breath emerging through the throat.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/068/068_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -57,6 +84,15 @@ title: ०६८
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Yet another, bereft of all modesty, snatched the half-chewn betel from Thy lotus-mouth and, placing it in her own lotus-mouth, attained the height of fulfillment of her desires.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/068/068_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -72,6 +108,15 @@ title: ०६८
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+One, in anger, gazed at Thee with tearful eyes, muttering "Who will touch Thee, who didst mercilessly abandon me in the forest ?"
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/068/068_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -85,6 +130,15 @@ title: ०६८
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Repairing to the banks of the Yamuna, accompanied by the enraptured Gopikas, Thou didst glow brightly, sitting on the cushion fashioned out of their upper garments, resplendent with saffron stains.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/068/068_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -100,6 +154,15 @@ title: ०६८
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+The Gopikas, then, berated Thee of being unsympathetic even towards those like them, who had surrendered themselves to Thee unreservedly, forsaking everything.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/068/068_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -113,6 +176,15 @@ title: ०६८
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Thou didst then address them thus : "O, my beloved maidens, please do not consider me as being unsympathetic or hardhearted towards you, as I am afraid of losing your love. I acted in the manner I did, only with the intention of ensuring your continued devotion to me."
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/068/068_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +200,15 @@ title: ०६८
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Thou didst further, tell them "O dearest ones ! Please listen to me. There is none as dear to me as you are. Hence, you may, without let or hindrance, celebrate and sportingly enjoy these enchanting moonlit nights in my company.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/068/068_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -138,5 +219,12 @@ title: ०६८
 
 इति गिराधिकं मोदमेदुरैर्व्रजवधूजनैः साकमारमन् ।  
 कलितकौतुको रासखेलने गुरुपुरीपते पाहि मां गदात् ॥ ६८१०॥
+</details>
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Thus, Thou enjoyed with great zeal, the Rasa Leela in the company of the Gopikas, who were immensely delighted by Thy words. O Lord of Guruvayur ! Save me from my diseases.
+
+
 </details>
 
