--- a/laxyam/padyam/purANam/nArAyaNIyam/071.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/071.md
@@ -16,6 +16,15 @@ title: ०७१
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+A close friend of Kamsa, a demon by name Kesi, who had never suffered defeat in any enterprise, approached Thee in the guise of a horse born in the land of Sindhu (Sind), thinking, as it were, that Thou wert easily accessible to anyone born of the Sindhu (ocean), like Goddess Lakshmi.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/071/071_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -29,6 +38,15 @@ title: ०७१
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+That wicked demon, though appearing in the form of a Gandharva (celestial musician) and also horse, made frightening noises and damaged the hamlets of the Gopas, until he saw Thee, and then, charged at Thee.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/071/071_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -44,6 +62,15 @@ title: ०७१
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+That demon in the guise of Tharkshya, (horse) kicked on the chest, Thee, whose feet were placed on Tharkshya (Garuda), Thy vehicle. Perhaps having heard of the episode of Sage Bhrigu kicking Thee on the chest, he thought he too could do so with impunity.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/071/071_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -57,6 +84,15 @@ title: ०७१
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Evading his kick, Thou didst immediately hurl him to a great distance. Though rendered unconscious for a moment, he soon rushed at Thee with increased rage, to eat Thee.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/071/071_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -72,6 +108,15 @@ title: ०७१
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Having decided to punish him, Thou didst thrust Thy arm, sturdy as a club, into that horse's mouth, where it grew to an immense size, obstructing his breath, and choked him to death. Though he was only a horse (Sapthi, which also means 'seven'), he attained oneness with Thee (liberation).
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/071/071_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -85,6 +130,15 @@ title: ०७१
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+By killing that horse (the sacrificial animal in the Aswamedha Yajna), Thou didst perform a new kind of Aswamedha (shorn of its rituals). The celestials, in their delight at Thy deed, praised Thee by Thy new appellation, "Kesava" (slayer of Kesi).
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/071/071_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -100,6 +154,15 @@ title: ०७१
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Narada, who had dissuaded Kamsa when he was on the point of killing Vasudeva on his being apprised (by Narada) that Thou wert Vasudeva's son, came to Gokula soon after the killing of Kesi, and extolled Thee.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/071/071_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -113,6 +176,15 @@ title: ०७१
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Once, when Thou wert playing the game of "hide-and-seek" with the Gopas in the forest, Vyoma, son of Maya (architect of Asuras), possessed of unlimited magical powers and an enemy of the celestials, approached Thee.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/071/071_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +200,15 @@ title: ०७१
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Mingling with the Gopa boys, who had assumed (for the purpose of the game) the roles of thieves (some) and watchmen (some others), Vyoma, in the guise of a thief, confined some of the boys and cows in a cave, and blocked its entrance with rocks. Coming to know of this, Thou didst kill him.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/071/071_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -138,5 +219,12 @@ title: ०७१
 
 एवंविधैश्चाद्भुतकेलिभेदैरानन्दमूर्छामतुलां व्रजस्य ।  
 पदे पदे नूतनयन्नसीमां परात्मरूपिन् पवनेशपायाः ॥ ७११०॥
+</details>
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Supreme Lord of Guruvayur, may Thou, who didst, every now and then, enhance the incomparable and unlimited joy of the people of Vraja by Thy manifold, marvellous, sportive exploits, deign to protect me.
+
+
 </details>
 
