--- a/laxyam/padyam/purANam/nArAyaNIyam/075.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/075.md
@@ -20,6 +20,15 @@ title: ०७५
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Next morning, at the command of the frightened king (Kamsa), the beat of drums announced the commencement of the wrestling match. The host of kings, who had arrived to witness the same, duly took their allotted seats. Nandagopa, too, came to the palace, while Kamsa took the royal seat on the terrace. Then, along with Balarama, and Thy friends, Thou, charmingly dressed, didst reach the entrance to the arena where Thy passage was obstructed by the elephant Kuvalayapeeda, goaded to anger by the mahout.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/075/075_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +46,15 @@ title: ०७५
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+On Thy command "You evil creature, get out of my way fast", that elephant, at the prompting of the mahout (who was cruel and was also irritated by Thy words), quickly caught hold of Thee. Releasing Thyself from its hold, as if it were child's play, Thou didst forcefully pound its frontal lobe, which rivalled the pot-like breasts of the Gopikas, conceal Thyself between its legs, and, then, come out with a charming smile.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/075/075_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +74,15 @@ title: ०७५
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Then, Thou (who dost elude the Sages even after being nearly grasped) didst run towards that elephant and play with it (but keeping out of its reach), and, when it was about to attack Thee again, didst fling it to the ground and, pulling out its live tusk by the root, take the priceless pearls from there and give them to Thy dear friend Sridaama, with instructions to make them into a beautiful necklace and give it to Radha.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/075/075_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +100,15 @@ title: ०७५
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Then, O Lord, beholding Thee entering the arena, carrying the tusk on the shoulder and accompanied by Balarama, the assembled people whose eyes and minds were irresistibly drawn towards Thy auspicious, charming form, extolled Thee, remarking: "O, most blessed, indeed, is Nanda, in all the three worlds; No, it is the Gopikas; No, it is Yasoda; No, No, it is verily, we alone, as we have the good fortune to feast our eyes on this spectacle."
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/075/075_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +128,15 @@ title: ०७५
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Thou art verily, the infinite, eternal, all-pervading Brahman and Supreme-Consciousness-Bliss-Absolute, transcending all limitations (of space, time and causation). Thou didst manifest Thyself among the Gopas, though many people did not realise Thy true nature. When, however, the time arrived for the fruition of their good deeds, a large number of people, seeing Thee for the first time, at the auspicious moment, became absolved of all sins and were suffused with Bliss; and they joyously recounted Thy exploits which they remembered, and recognised Thee as the Supreme Brahman.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/075/075_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +154,15 @@ title: ०७५
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Soon, at the King's command, Chanura, the champion wrestler, and Mushtika, the accomplished boxer, attacked Thee and Balarama, respectively, with mutual exchange of powerful blows of the fist, accompanied by loud, weird noises, and adopting several tactics, like throwing up, pushing down, dragging, etc. Wonderful, indeed, that the Lord of Wrestlers, Chanura, even before his death, went through bondage and release many times (by being caught and let go by Thee, again and again).
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/075/075_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +182,15 @@ title: ०७५
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Even as the spectators were about to leave the scene, being unhappy and unwilling to witness that (unequal, as they thought) fight between two tender-bodied boys, on the one hand, and hardened wrestlers, on the other, Thou didst throw down to the ground, Chanura, who had already lost his life by being whirled round and round by Thee, by the hands, while Balarama, too, quickly crushed Mushtika to death. The rest of the wrestlers then, fled in fright, from the arena.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/075/075_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +208,15 @@ title: ०७५
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+The wicked Kamsa, perplexed at the turn of events, and not knowing what to do, signalled the drums to stop, and ordered his minions to kill Thy revered parents and to seize and take Thee away to a far-off place. Thou, who art all-pervading, enraged by these words of that villain, didst spring up on to Kamsa's throne, like Garuda flying to the mountain top, and seize Kamsa with determination, despite his brandishing his sword in a whirling motion to ward off capture.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/075/075_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +236,15 @@ title: ०७५
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+In an instant, hurling Kamsa to the ground and crushing his joints, Thou didst kill him. The Gods, then, showered flowers on Thee. O Supreme Being, what shall I say ! Ever thinking of Thee (out of fear), he attained salvation (union with Thee). This was indeed the result of his vasanas as Kalanemi (in his previous birth), who died looking at Thee in fear, when he was killed by Thee (in the battle between Devas and Asuras after the churning of the Ocean of Milk and distribution of the Amrit to the Devas - Dasakam 29, Shlokam 7).
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/075/075_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -178,5 +259,12 @@ title: ०७५
 कृत्वा राजानमुच्चैर्यदुकुलमखिलं मोदयन्कामदानैः ।  
 भक्तानामुत्तमञ्ञ्चोद्धवममरगुरोराप्तनीतिं सखायं  
 लब्ध्वा तुष्टो नगर्यां पवनपुरपते रुन्धि मे सर्वरोगान् ॥ ७५१०॥
+</details>
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+After killing Kamsa's eight brothers, Thou didst pay Thy respects to Thy parents and install Ugrasena on the throne; and gladdening the entire host of Yadavas, by giving them all that they desired, Thou didst take as Thy friend, Uddhava, the greatest of Thy devotees, who had learned ethics from the preceptor of the celestials, Brihaspati, and live happily in that city. O Lord of Guruvayur, deign to remove all my afflictions.
+
+
 </details>
 
