--- a/laxyam/padyam/purANam/nArAyaNIyam/079.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/079.md
@@ -16,6 +16,15 @@ title: ०७९
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+On reaching Kundina, followed by Balarama with an army, Thou wert welcomed with full honours by King Bhishmaka. Overjoyed on learning from the Brahmana youth about Thy arrival, Rukmini paid due respects to him.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/079/079_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -29,6 +38,15 @@ title: ०७९
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+The citizens, who were enchanted by Thy bewitching form, spent the night discussing the foul scheme of Rukmi and deploring it.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/079/079_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -44,6 +62,15 @@ title: ०७९
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Then that charming maiden, who had pledged her heart to Thee, decked with ornaments befitting the occasion, set out from her chambers to the temple of Goddess Parvati, surrounded by her able bodyguards.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/079/079_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -57,6 +84,15 @@ title: ०७९
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+In the company of other respectable women, Rukmini offered worship to Goddess Parvati with great fervour and, prostrating before the Goddess's lotus-feet, entreated her repeatedly to bless her and bring about the fulfillment of her yearning to get Thee as her husband.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/079/079_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -72,6 +108,15 @@ title: ०७९
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+While the assembled Kings were milling around in the palace, eager to catch a glimpse of the princess, and Thou wert watching silently, Rukmini emerged from the temple radiating charm.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/079/079_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -85,6 +130,15 @@ title: ०७९
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Then, as the host of Kings were infatuated by her beauty, Thou, too, O Lord, wert slightly bewitched by her side-long glances.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/079/079_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -100,6 +154,15 @@ title: ०७९
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Approaching her with the words : "Whither are you bound, O lovely one ?", Thou didst take her quickly by the hand, and seating her in the chariot, drive away fast, creating widespread uproar among Thy enemies.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/079/079_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -113,6 +176,15 @@ title: ०७९
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Hurling abuses at Thee in rage, and calling Thee a cowherd, etc, the assembled Kings fell on the Yadavas, but were soon worsted by them. Thou, however, remained unmoved, even as a lion is, while confronted by dogs.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/079/079_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +200,15 @@ title: ०७९
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Then, Rukmi, who came in pursuit, was taken captive by Thee, who, however, spared his life, and wert content to disfigure him, so as to humble his pride, and then set him free, on Balarama's urging. Thou didst, thereafter, leave for Dwaraka with Thy beloved Rukmini, who was Goddess Lakshmi herself.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/079/079_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -141,6 +222,15 @@ title: ०७९
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Lord, Thou didst, in private, greatly delight Rukmini, who was bashful on her first union with Thee and whose passion was kindled by love-play and face lit up by her smile.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/079/079_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -156,6 +246,15 @@ title: ०७९
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Though giving her immense joy day and night with jocular conversation, O Lord, Thou didst once, by ambiguous talk, produce uneasiness in her simple and straightforward mind.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/079/079_12.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -166,5 +265,12 @@ title: ०७९
 
 तदधिकैरथ लालनकौशलैः प्रणयिनीमधिकं रमयन्निमाम् ।  
 अयि मुकुन्द भवच्चरितानि नः प्रगदतां गदतान्तिमपाकुरु ॥ ७९१२॥
+</details>
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Thou didst enhance her happiness by ever new devices. O Mukunda, may Thou remove all sorrows from us, who always extol Thy glorious deeds.
+
+
 </details>
 
