--- a/laxyam/padyam/purANam/nArAyaNIyam/085.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/085.md
@@ -20,6 +20,15 @@ title: ०८५
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Then, O Lord, the 20,800 kings who had been imprisoned for a long time by Jarasandha, King of Magadha, sent a messenger to Thee, the sole refuge of the helpless, praying, in brief, for the destruction of Jarasandha and their release from confinement.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/085/085_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +46,15 @@ title: ०८५
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+As Thou wert preparing to march against Jarasandha, Narada apprised Thee of Yudhishtira's embarking upon the sacrifice of Rajasuya. Although perplexed for a moment as to which of the two should be accorded priority, Thou didst decide to proceed to Yudhishtira's capital, Indraprastha, on being advised by Uddhava that both objects would be achieved simultaneously, considering that the Rajasuya can be undertaken only after vanquishing all enemies, of which Jarasandha was one.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/085/085_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +74,15 @@ title: ०८५
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+On Thy arrival at Indraprastha with all Thy wives, Yudhishtira, who had become immensely wealthy with the help of his brothers by their increased might due to Thy gracious side glance, deputed Thee (who art the servant of Thy devotees) to Jarasandha, accompanied by Bhima and Arjuna. Wonder of wonders, indeed !
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/085/085_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +100,15 @@ title: ०८५
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Lord, all three of you, then, proceeding to Girivraj, capital of Jarasandha, in the garb of Brahmins, sought of Jarasandha, the boon of a duel as a festival. As Jarasandha lacked sufficient merit to be killed by Thee, Thou didst contrive to make him fight with Bhima, while, along with Arjuna,  Thou didst look on as one who induces Kings to fight each other.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/085/085_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +128,15 @@ title: ०८५
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Jarasandha, who, in his arrogance, was fighting ferociously, was killed by Bhima, by his body being split vertically down the middle, following a hint from Thee, by the act of splitting a twig. Then, Thou didst release the Kings from captivity and, besides, blessing them with joy, Thou didst confer on them Supreme devotion to Thee and enjoin them (who were free from worldly desires) to rule the earth according to Dharma (righteousness and justice).
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/085/085_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +154,15 @@ title: ०८५
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Thereafter, in the course of the Rajasuya sacrifice performed by Yudhishtira, in which all the assembled Kings gladly contributed their services, Thou, O Lord of the Universe, didst Thyself wash the feet of the holy men. How is one to describe the height of that great King's good fortune !
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/085/085_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +182,15 @@ title: ०८५
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Then, in the ceremony of Rajasuya, after considering to whom the prime or first worship should be extended, Yudhishtira, on the counsel of Sahadeva, performed, in that assembly, the Agrapuja in honour of Thee, who art the very Soul of the whole Universe. The entire universe, including all gods and men, rejoiced at the honour done to Thee.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/085/085_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +208,15 @@ title: ०८५
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Sisupala, King of Chedi, suddenly jumped from his seat, holding aloft his weapons and pouring forth a volley of abuses on Thee, such as "Strange indeed, that the prime honour is given to a cowherd lad of despicable conduct, while so many sages and kings are present; who is that fool doing this." The Pandava brothers thereupon rushed at him in anger.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/085/085_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +236,15 @@ title: ०८५
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Holding back Thy allies, the Pandavas, Thou didst Thyself sever the head of the onrushing Sisupala with Thy discus which destroys demons. With his mind purified by continuously thinking of Thee with hatred, in three lives (as Hiranyakasipu, Ravan, and, now, Sisupala) he attained that ultimate union with Thee, which is hard for even Yogis to attain.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/085/085_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -182,6 +263,15 @@ title: ०८५
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+On the glorious sacrifice, Rajasuya, being successfully completed by Thee, the assembled people departed raising paeans of "Victory to Yudhishtira, and Victory to Krishna". However, Duryodhana, who was burning with jealousy at the prosperity of his enemies (the Pandavas), lost his poise and stumbled in front of the Assembly Hall (constructed for the Pandavas by Maya, architect of the demons), out of his perplexity and confusion between firm ground and running water.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/085/085_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -196,5 +286,12 @@ title: ०८५
 रपाङ्गकलया विभो किमपि तावदुज्जृम्भयन् ।  
 धराभरनिराकृतौ सपदि नाम बीजं वपन्  
 जनार्दन मरुत्पुरीनिलय पाहि मामामयात् ॥ ८५११॥
+</details>
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Then, O Janardana, Eternal, All-pervading Lord, by encouraging slightly by Thy side-long glance, the laughter of derision arising from Draupadi and Bhima (at Duryodhana's discomfiture), Thou didst sow, then itself, the seed for the eventual eradication of evil and ridding of this earth of its burden. O Lord of Guruvayur, save me from my ailments.
+
+
 </details>
 
