--- a/laxyam/padyam/purANam/nArAyaNIyam/087.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/087.md
@@ -16,6 +16,15 @@ title: ०८७
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Thy companion while studying in Sage Sandipani's hermitage, a Brahmin by name Kuchela, who was totally devoted to Thee, free from wordly desires and possessed of a calm and collected disposition, was spending his days as a householder.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/087/087_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -29,6 +38,15 @@ title: ०८७
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+His wife who was of a similar detached temparament but had not attained control over her mind to the same extent, one day suggested to him that he might pay a visit to his friend, Lord of Rama (Krishna), for getting some means of livelihood.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/087/087_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -44,6 +62,15 @@ title: ०८७
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Thus urged by his wife, out of her being afflicted by hunger, Kuchela, despite his revulsion towards wealth, which is the source of arrogance, nevertheless, set out, because of his eagerness to see Thee, carrying some parched, beaten rice, tied to the end of his garment, as an offering to Thee. 
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/087/087_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -57,6 +84,15 @@ title: ०८७
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Arriving at Dwaraka, a city full of wonderful sights, he entered the house of Mitravinda, out of the 16,008 houses of Thy consorts, and experienced that Supreme Bliss, as though he had entered Vaikunttha itself. His joy knew no bounds on account of the extremely cordial reception accorded by Thee. What more could one wish for ?
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/087/087_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -72,6 +108,15 @@ title: ०८७
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+After doing him the proper honours, and getting him fanned by Thy consort herself, and taking hold of his hands, Thou didst converse with him about the various memories of those days in the Ashram of Sage Sandipani, and, in particular, about the incident when both of you went to the forest at the instance of Thy teacher's wife, to gather fuel, and were taken unawares by an untimely shower of rain.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/087/087_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -85,6 +130,15 @@ title: ०८७
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+On forcibly taking the beaten rice from Kuchela (who was feeling shy and hesitant to offer it to Thee), and eating one handful, Thy consort, Rukmini, rushed to Thee in alarm, and checked Thy hand, saying "This much is enough".
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/087/087_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -100,6 +154,15 @@ title: ०८७
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+After being honoured by Thee, who art the devotee of Thy devotees,Kuchela spent one night, very happily, in Thy city, and the next day, he set out on his return journey, empty-handed. Thy blessing, indeed, is multifaceted and inscrutable.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/087/087_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -113,6 +176,15 @@ title: ०८७
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+"If only I had asked, Krishna would certainly have given; what shall I tell my wife? " Thinking thus, he wound his way back home, with his mind wholly absorbed in the pleasant conversation with Thee and Thy bewitching smile. Gradually, when he reached his place, he suddenly saw before him a mansion resplendent with gems.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/087/087_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +200,15 @@ title: ०८७
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Perplexed for a moment whether he had lost his way, he saw his wife, bedecked in gold ornaments and jewellery, and surrounded by her companions. He then realised the marvellous nature of Thy compassion.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/087/087_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -138,5 +219,12 @@ title: ०८७
 
 स रत्नशालासु वसन्नपि स्वयं समुन्नमद्भक्तिभरोऽमृतं ययौ ।  
 त्वमेवमापूरितभक्तवाञ्छितो मरुत्पुराधीश हरस्व मे गदान् ॥ ८७१०॥
+</details>
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Even while residing in a gem-studded mansion, Kuchela's intense devotion to Thee increased steadily and, in due time, he attained salvation. O Lord of Guruvayur, may Thou eradicate my afflictions.
+
+
 </details>
 
