--- a/laxyam/padyam/purANam/nArAyaNIyam/092.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/092.md
@@ -20,6 +20,15 @@ title: ०९२
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+While prescribing rituals for the attainment of various ends, the Vedas expect these to be performed without attachment to, or in expectation (anticipation) of, their results, which are essentially ephemeral. By dedicating these actions to Thee alone, I shall save myself from the bondage of their results. I shall try to avoid performing, by thought, word or deed, any deed forbidden by the Vedas. But, if by inadvertence or compulsion, I happen to perform any such deed, I dedicate these also to Thee, the very light of consciousness.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/092/092_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +46,15 @@ title: ०९२
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+In worshipping Thee in modes other than those laid down in the Vedas, too, I shall visualise Thee in Thy pure satvik mode dear to me, in an image made out of stone, clay or other authorised substance, or in my heart alone, and do this regularly by offering to Thee flowers, incense and food stuffs, to the extent of my affordability, and purified by devotion. May I, O Lord, thereby attain Thy Grace.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/092/092_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +74,15 @@ title: ०९२
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+I sympathise with women and low-born classes who do not have the good fortune to listen to narrations of Thy exploits. I especially, however, bewail the fate of those twice born (high caste) persons who, even with ample opportunities to worship Thee, squander these in pursuits solely for the sake of livelihood through selfishness and succumbing to worldly pleasures, disregarding Thy teachings and repeated exhortations. What evil deed do such persons not perpetrate out of arrogance because of their high birth and learning ! O Lord, may Thou prevent me from becoming one like these.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/092/092_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +100,15 @@ title: ०९२
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Those that are devoid of devotion to Thee mock at Thy devotees and accuse them of chanting Thy names as cloak to hide their own their misdeeds, or censure them (even one's own brother) for obstructing them in their worldly pursuits. O Lord, may Thou save me from becoming one like these.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/092/092_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +128,15 @@ title: ०९२
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+In the Krita Yuga, people do penance by invoking Thee in the white and resplendent form of an illustrious sage. In the Treta Yuga they worship Thee as the Yajna Purusha of red hue and bearing various accessories needed for the sacrifice. In the Dwapara Yuga, Thy worshippers visualise Thee in light blue complexion, effulgent with discus, mace etc., in Thy hands and perform Tantrik rights. In the present Kali Yuga, people worship Thee of blue complexion by chanting Thy names.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/092/092_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +154,15 @@ title: ०९२
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Glory be to this Kali Yuga, as those born in it attain Thy Grace effortlessly and speedily through the chanting of Thy names alone. So much so, that, even those born in the earlier Yugas (Krita, Treta and Dwapara) are said to yearn for birth in Kali Yuga. O Lord Omniscient, slayer of Mura and granter of all desires, may Thou not delude us (who are born fortunately in this Kali Yuga) with the poison of worldly pleasures.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/092/092_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +182,15 @@ title: ०९२
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Among Thy countless devotees, a large majority are found in the Dravida region (Southern India), especially along the banks of rivers Kaveri, Tamraparni, Kritamala (Vaigai) and the sacred Prateechi, the Bharatapuzha in Malabar. O Lord, may Thou not confound me, who is born in this region, and, besides, harbours devotion to Thee, with bonds of earthly desires.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/092/092_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +208,15 @@ title: ०९२
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+In the Kali Yuga, Thy worship yields quick results, whereas punishment for evil deeds follows after long delay and in future lives. This Kali is ever afraid of Thy devotees. Therefore, O Lord, even if Kali removes a person from this life by disease etc., before his devotion matures, may Thou punish him (Kali) for such act, even as King Parikshit, after drawing his sword to kill him, eventually spared Kali in recognition of his redeeming qualities.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/092/092_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +236,15 @@ title: ०९२
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Sages have declared that, in Kali Yuga, eight deeds - * bathing in river Ganges;* study of Bhagavad Gita;* recitaion of Gayatri Mantra;* offer of Tulasi leaf (balsam);* offer of scented clay, Gopika Chandana;* worship of Saligrama (stone image);* fasting on Ekadasi (elevent day of each fortnight); and* chanting of Thy holy names (even if done without understanding their meanings)- all of which need little effort, lead to swift liberation through propitiating Thee.O Lord ! May Thou cause me to practice these with sincerity.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/092/092_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -178,5 +259,12 @@ title: ०९२
 योऽसौ सर्वात्मना त्वां शरणमुपगतः सर्वकृत्यानि हित्वा ।  
 तस्योत्पन्नं विकर्माप्यखिलमपनुदस्येव चित्तस्थितस्त्वं  
 तन्मे पापोत्थतापान्पवनपुरपते रुन्दि भक्तिं प्रणीयाः ॥ ९२१०॥
+</details>
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+One who takes refuge in Thee, heart and soul, eschewing all egocentric activities, thereby, discharges his debts to the gods, sages and the manes (of departed ancestors), because Thou dost reside in the heart of such a one and neutralise the consequences of his past deeds, including the evil and prohibited ones. May Thou, O Guruvayurappa, deign to wipe away the distress caused by my past sinful deeds and engender devotion to Thee in me.
+
+
 </details>
 
