--- a/laxyam/padyam/purANam/nArAyaNIyam/093.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/093.md
@@ -20,6 +20,15 @@ title: ०९३
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Concentrating my mind upon Thee through Thy grace alone, and realising that this universe and everything therein are but projections or manifestations of Thy Maya (delusive power), I shall be able to renounce all attachments and freely wander about without a care. Scriptural do's and don'ts apply only to those in whose mind discrimination or the concept of duality between good and evil prevails, but not to one whose mind is engrossed in Thee and thereby transcends such notions.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/093/093_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +46,15 @@ title: ०९३
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+The faculty of discrimination makes the human being superior to all other creatures, which are intent only on satisfying their animal needs such as hunger, thirst, etc. Hence, a human birth is indeed rare and difficult to get. However, a human being is at once, his own friend and enemy too. One who, with his mind absorbed in Thee strives for spiritual emancipation, is his own friend; anyone else is his own enemy.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/093/093_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +74,15 @@ title: ०९३
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Supreme Lord ! When Thy grace illumines the functioning of this world, where is the dearth of preceptors from whom one can learn several valuable lessons and imbibe many noble qualities. Thus, we learn the quality of forbearance from mother Earth, which remains unaffected by all abuses to which it is subjected; the virtue of non-attachment from the Wind, which stays unaffected by the myriad objects it comes into contact with; and the fact of all-pervasiveness of the self or soul, and its freedom from taint, from Space which is all pervasive and taintless.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/093/093_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +100,15 @@ title: ०९३
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+From Water, one imbibes the importance of being sweet and pure (in oneself) and purifying (others); from Fire, the capacity of remaining unaffected by all that one consumes, and also realisation that the self exists in all beings, including oneself, even as the fire exists (incipiently) in all forms of timber. From the Moon, which itself remains unchanged despite the waxing and waning of its phases, one learns that growth and decay affect only the body, not the soul. Further, through Thy grace, one learns that the self or soul, which, though apparently different in different bodies, is, in truth, one, from the Sun, which is ever one, even while appearing to be different in reflections in different media like water, mirrors, etc.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/093/093_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +128,15 @@ title: ०९३
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+From the Dove, which perishes while trying to save its loved ones from the hunter, may I learn the lesson of not courting destruction through excessive affection. Like the Python, which eats only what, by chance, comes its way, let me strive to be content with what I get and starve otherwise. The Ocean, deep and serene, teaches me to be calm and unfathomable. May I learn to resist the blandishments of the fair sex, etc. from the Moth, which, being attracted by the fire, falls into it and perishes. From the Bee, which has the capacity of sucking the honey only, may I learn to partake of the essence of things without courting disaster by accumulating wealth.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/093/093_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +154,15 @@ title: ०९३
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Lord ! May I not be captivated by attractive women, unlike the male elephant that gets caught with the help of cow elephants. May I not hoard wealth, which is likely to be snatched by others, even as honey stored by the Honey-bee is, by the honey-gatherers.  May I avoid being enticed by sweet words, unlike the deer which is charmed by vulgar music. Unlike the fish that falls to the bait, let me eschew craving for food. Like the courtesan Pingala, may I enjoy sound, undisturbed sleep free from desire or care. May Thou save me from assault due to possession of valuables, in the manner of the Kurara Bird, being attacked by other birds in order to snatch the meat from its mouth.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/093/093_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +182,15 @@ title: ०९३
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+May I, like the infant, live in happiness, unalloyed by pride. May I roam about in solitude, free from the noise and bustle of company, just as the solitary bangle on the maiden's wrist. With my mind engrossed in Thee, let me be oblivious to the external world even as a blacksmith engaged in making arrows is (oblivious) of the royal procession passing by. Like the snake, which makes its abode in rat-holes, may I live in houses built by others.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/093/093_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +208,15 @@ title: ०९३
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+From the spider, which, after spinning its web out of threads emanating from its body, later draws the thread into itself, may I realise that Thou dost, at the time of Pralaya (cosmic deluge), absorb into Thyself, the universe created out of Thee. From the beetle, I learn that constant meditation upon Thee begets Thy form. Above all, this human body which is full of filth and which gets reduced to ashes (after death) becomes the best of preceptors, inasmuch as, on serious reflection, it brings about discrimination between the self and non-self, and renunciation, especially of this body of mine, afflicted as it is by multifarious illnesses.{Note: As many as 24 preceptors and the lessons learnt from each one of them - some of these to be emulated, and some to be eschewed or avoided - all drawn from the world about us, have been enumerated in verses 3 to 8.)
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/093/093_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +236,15 @@ title: ०९३
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Lord of Guruvayur ! May Thou rid me of infatuation for this body of mine, due to love of which, folks develop bonds of various kinds to one's relations, material possessions, etc. and forget Thy Lotus-Feet. This body becomes food to fire, dogs, etc. after death, while, when alive, the sense organs (eyes, ears, skin and tongue) drag the human being hither and thither, back and forth, towards their objects, with none to turn him towards Thee.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/093/093_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -178,5 +259,12 @@ title: ०९३
 हृत्वा भक्तिं द्रढिष्ठां कुरु तव पदपङ्केरुहे पङ्कजाक्ष ।  
 नूनः नानाभवान्ते समधिगतमिमं मुक्तिदं विप्रदेहं  
 क्षुद्रे हा हन्त मा मा क्षिप विषयरसे पाहि मां मारुतेश ॥ ९३१०॥
+</details>
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Lotus-eyed Lord ! In case it is not possible to remove my infatuation with this body immediately, may Thou dispel all my afflictions and engender in me intense devotion to Thee. May Thou not consign this body to trivial worldly pleasures. Indeed, birth as a Brahmana has been attained by me after many lives, and this body, if properly used, can be the vehicle for attainment of liberation. O Lord ! May Thou save and protect me.
+
+
 </details>
 
