--- a/laxyam/padyam/purANam/nArAyaNIyam/096.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/096.md
@@ -20,6 +20,15 @@ title: ०९६
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Lord of Infinite Glory, verily, the Universe ! Thou art indeed the Supreme Brahman. Among letters, Thou art the letter "A"; among Mantras, the Pranava or OM; among Kings, Swayambhuva Manu; among Sages, Bhrigu (Brahmsrishi) and Narada (Devarishi); Prahlada among the demons; Kamadhenu among cows (animals); and Garuda among birds. Thou art, beside, Ananta among serpents and the Ganga among rivers.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/096/096_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +46,15 @@ title: ०९६
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Thou art Mahabali among devotees of holy men (Brahmins); among Sacrifices, Thou art Japayagna; Partha (Arjuna) among heroes (warriors); and Uddhava among Thy devotees. Thou art the might of the mighty and lustre of the lustrous. There is no end or limit to Thy glory. All objects of excellence are Thyself alone. Thou art the individual self (jeeva) and Prakriti (matter). Indeed, in this Universe, there is nothing that is not Thee.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/096/096_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +74,15 @@ title: ०९६
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Those who devotedly perform the duties enjoined in the Scriptures for their respective stations in life, as an offering to Thee, develop detachment by degrees. Eventually, as the spirit of renunciation matures fully, they give up even these duties and attain the clear realisation of their one-ness with Thee, the Supreme Brahman, who art Existence- Consciousness-Bliss (Sat-Chit-Ananda), the One that pervades all things which appear to be different, the One without cause and yet the cause of everything.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/096/096_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +100,15 @@ title: ०९६
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Out of the three paths of Jnana (Knowledge), Karma (Action) and Bhakti (Devotion), available in this world for attaining Thee, those who have developed complete dispassion towards all objects are competent and eligible to follow the first, namely the path of Knowledge; for those who are still attached to sense objects, the prescribed path is that of Action or Karma, totally dedicated to Thee. For those who are neither intensely attached nor totally dispassionate, but have some devotion to Thee, the path of Bhakti is appropriate.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/096/096_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +128,15 @@ title: ०९६
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+In this world of mortals, knowledge of Brahman or devotion to Thee is easily attainable owing to one's good deeds performed in past lives, so much so, that even those in heaven or hell (are said to) desire birth in this world. Hence, O Lord ! Having fortunately, got this human body, which is the boat for crossing the ocean of worldly existence, making my preceptor the boatman and Thee the favourable wind, I pray to Thee for taking me across that ocean.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/096/096_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +154,15 @@ title: ०९६
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Those who adopt the path of Knowledge (Jnanayoga) which targets the unmanifest Brahman, involving as it does, long and laborious study of the Scriptures and elaborate argumentation, succeed in attainment of liberation only after passing through innumerable lives. For the Karmayogi too, liberation is an extremely remote goal.  On the other hand, the path of devotion is pleasant to follow from the very inception, and leads to early liberation. May this devotion to Thee flourish in me.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/096/096_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +182,15 @@ title: ०९६
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+According to Sage Vyasa, the path of Knowledge, unleavened by devotion, is a waste of effort. Liberation comes easily to one who combines knowledge with devotion to Thee. In other words, devotion degenerates into blind faith if it is not accompanied by Scriptural knowledge, and succumbs to the knocks of adverse forces. The path of devotion, too, is not without its pitfalls due to the fickle nature of the mind and the difficulty in meditating upon the abstract, unmanifest Brahman. Nevertheless, this path of meditation is capable of being easily mastered by incessant and unremitting practice, and through the twin aids of the charm of Thy concrete form and Thy grace.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/096/096_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +208,15 @@ title: ०९६
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Lord of the universe ! Despite having totally eschewed the path of action in view of its multifarious obstacles and pitfalls, and being deeply absorbed in listening to stories of Thy exploits, chanting Thy names, and the like, I am still unable to kick away desires and attachments of various kinds (to home, family, etc). Nevertheless, being fully awake to the harmful nature of such desires and attachments, I shall, even while indulging these to some extent, fix my mind firmly on Thee and develop devotion through unremitting effort and practice. When the mind is fully pervaded by Thee, (I am sure), all my attachments will soon drop away.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/096/096_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +236,15 @@ title: ०९६
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Like the Brahmin (in the story), who, after losing all his hard-earned wealth and suffering persecution from the people (because of his miserly and unhelpful ways), finally realised that the root cause of all his sorrows was not the planetary positions or Time, or his past (evil) deeds, but the Mind alone, which, out of ignorance (Avidya) superimposes the three Gunas (inherent attributes of nature) on the ever-free Atman (soul) and vests it with various functionalities like, doing, enjoying, suffering etc, and thereby attained the tranquility that true knowledge and discrimination brings, and eventual union with Thee, O Lord, may Thou grant that peace of mind to me too.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/096/096_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -178,5 +259,12 @@ title: ०९६
 गाढं निर्विद्य भूयो युवतिसुखमिदं क्षुद्रमेवेति गायन् ।  
 त्वद्भक्तिं प्राप्य पूर्णः सुखतरमचरत्तद्वदुद्धूत सङ्गं  
 भक्तोत्तंसं क्रिया मां पवनपुरपते हन्त मे रुन्धिरोगान् ॥ ९६१०॥
+</details>
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Long ago, Pururavas (son of Ila and Budha), after indulging for long his deep infatuation with Urvasi, in the end, attained detachment and loudly proclaimed the trivial and ephemeral character of carnal pleasures. Becoming fully devoted to Thee and self-fulfilled, being a jeevanmukta (realised soul), he roamed about carefree. O Lord of Guruvayur ! May Thou, similarly sever all my desires and attachments, and make me the best of Thy devotees by curing me of my ailments, (which hinder this outcome).
+
+
 </details>
 
