--- a/laxyam/padyam/purANam/nArAyaNIyam/097.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/097.md
@@ -20,6 +20,15 @@ title: ०९७
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+In this world, under the influence of the three gunas (Sattva, Rajas and Tamas), various matters, like knowledge and faith, doer and dwelling, joy and action, fall into three different categories of low, medium and sublime, according to the degree of their association with one or other of these gunas. However, this differentiation is absent in Thy temple, Thy worship and everything else connected with Thee, as these transcend the three gunas. By resorting steadily to these, I shall soon attain perfection.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/097/097_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +46,15 @@ title: ०९७
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Roaming about happily with mind concentrated on Thee alone, and dedicating all actions to Thee, visiting holy places resorted to by Thy devotees currently and in the past, I shall, O Lord, forever worship Thee alone in all beings, viewing with equivalence, the robber, the low-born, the high-born, animals and all others, and shaking free from feelings such as, honour and dishonour, rivalry and jealousy.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/097/097_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +74,15 @@ title: ०९७
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+I shall continue Thy worship in the above manner until the stage when I can clearly recognise Thy presence in these beings (robbers, etc) and such recognition becomes firmly ingrained in me. As soon as that knowledge of the oneness of the Soul in all beings bursts forth on me suddenly, I shall go forth with the sense of complete identification with Thee. Once having taken to the Path of Devotion, there can be no deviation or fall from it to the devotee. Hence, O Lord, may Thou set me fully on that captivating path.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/097/097_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +100,15 @@ title: ०९७
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+The two prerequisites of good health and long life needed for firming up my devotion to Thee are, luckily, attainable by treading that very path of devotion, in the like manner as drinking of milk being prescribed as cure for one's illness, which is, indeed, wonderful. It is well known that Markandeya, whose span of life had been predicted by astrologers to be a mere 12 years, successfully averted death by fervently worshipping Thee for one year (12 months), thereby gaining the assistance of Thy soldiers to drive Death away.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/097/097_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +128,15 @@ title: ०९७
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Markandeya, who thus gained long life, did penance for six aeons or Manvantaras (reign of six Manus), on the banks of the river Pushpabhadra, with his mind totally immersed in the incomparable Bliss arising out of devotion to Thee. In the seventh aeon, Vaivaswata Manvantara, the then ruling Indra made a foolhardy attempt to entice him (Markandeya) with celestial damsels, the gentle mountain breeze and the god of love (Manmatha), all of whom soon came to grief by being scorched in the fire of Markandeya's penance (Yoga) and failed in their mission. Who can, indeed, ever overcome Thy devotees ?
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/097/097_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +154,15 @@ title: ०९७
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Thereafter, Thou did appear before him (Markandeya) in Thy form as Narayana, accompanied by Thy companion Nara, whereupon, he sang Thy praises with great joy at his good luck in getting Thy vision. Being entirely satisfied with his devotion to Thee, he declined to accept any of the boons offered by Thee. His only desire was to be vouchsafed a vision of Thy Maya (delusive power), presumably, out of curiosity, because he had never experienced the sorrows caused by her.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/097/097_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +182,15 @@ title: ०९७
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Soon after Thou vanished (from Markandeya's sight), the Great Deluge came, and Markandeya floated away from his hermitage on the turbulent waters of the seven seas which were rapidly getting inundated by the rains pouring from the wind-driven clouds. Exhausted by being tossed about on the flood waters for millions of years, he (Markandeya), who had not yet realised that this was all the work of Vishnumaya whom he had wished to see, espied at a great distance, an indescribably wonderful child of dark blue complexion, lying on a Banyan leaf, dispelling the darkness with its glow. The child had its foot raised to its lips and had its lotus-like toe held in its lotus-like hand and inserted into its lotus-like mouth, and was sucking its toe with a beatific smile on its face. This was the vision of unsurpassed beauty that Markandeya had.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/097/097_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +208,15 @@ title: ०९७
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Thrilled on seeing Thee (as the child on the Banyan leaf), Markandeya, with hair standing on end all over his body, rushed towards Thee, wishing to touch Thee, and was immediately sucked in by the inhalation of Thy breath. Inside Thee, he saw all the worlds. Then, on being ejected by the exhalation of Thy breath, and being overjoyed by the touch of Thy side-long glance, he reached out to embrace Thee. However, on Thy sudden disappearance, he found himself back in his hermitage as before.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/097/097_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +236,15 @@ title: ०९७
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Then, God Siva, being desirous of seeing Thy favourite devotee, and accompanied by His consort, Goddess Parvati, appeared before Markandeya and voluntarily granted him the boons of agelessness and immortality, which he (Markandeya) had already acquired by his penance. This makes it clear that even Siva is pleased by worship of Thee, and hence, that Thou art, in truth, the embodiment of the Trinity, Brahma, Vishnu and Siva, and the Inner Controller of all.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/097/097_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -178,5 +259,12 @@ title: ०९७
 तेभ्योऽप्यूर्ध्वं तु मायाविकृतिविरहितो भाति वैकुण्ठलोकः ।  
 तत्र त्वं कारणाम्भस्यपि पशुपकुले शुद्धसत्त्वैकरूपी  
 सच्चिद्ब्रह्माद्वयात्मा पवनपुरपते पाहि मां सर्वरोगात् ॥ ९७१०॥
+</details>
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Above the three abodes of Brahma, Vishnu and Siva, situated one above the other in Satyaloka, shines Vaikunttha, which is totally free from Maya. Thou, who dost shine in that Vaikunttha, as also in the primeval (causal) waters and in the Gokula, art the embodiment of pure Sattva and the non-dual Brahman or Existence-Consciousness-Bliss Absolute. O Lord of Guruvayur, may Thou protect me from all ailments.
+
+
 </details>
 
