--- a/laxyam/padyam/purANam/nArAyaNIyam/098.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/098.md
@@ -20,6 +20,15 @@ title: ०९८
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+My obeisance to Thee, O Krishna, who art the very Brahman which is the substratum of this universe, from which this universe took birth and into which it dissolves; which is, indeed, what appears as the universe but which transcends it; by the light of which this universe is illumined; which is far beyond description or picturisation by words and beyond conception by the mind; and the true nature of which even the gods and great sages do not fully comprehend, not to speak of lesser beings.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/098/098_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +46,15 @@ title: ०९८
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+My obeisance to Thee, O Vishnu, who art the Supreme Bliss Absolute and the abode of salvation; for whom there is neither birth nor activity, nor name; in whom attributes of good and evil and the like are not manifest and, yet, who voluntarily adopts them through the instrumentality of one's own Maya (delusive power), for the protection and benediction of the world; and who, though devoid of form, yet, being of a miraculous nature, assumes manifold forms by wielding one's own powers, such as Vidya (knowledge), Avidya (ignorance), etc.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/098/098_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +74,15 @@ title: ०९८
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+According to the Upanishads and the Enlightened ones, Thy form is not that of a beast (bird or animal), man or god or demon; it is neither female nor male; it is not of matter (substance), function, class (species), or quality (attribute); it is neither existent nor non-existent (being Existence itself). Thou art what remains after negation of everything, and is implied or signified, with considerable difficulty, by innumerable scriptural statements and averments as the Supreme Being, and which shines as Bliss Absolute. My obeisance to Thee, who art that Supreme One.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/098/098_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +100,15 @@ title: ०९८
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Being reflected in Maya, Thou doth create the entire Universe through the instrumentalities of Mahat (Intellect), Ahankara (Ego), the five Tanmatras (Quintessences) of Sound, Touch, Form, Taste, and Smell, the five Elements (Earth, Water, Fire, Air and Ether), the organs of sense and of action, the mind etc., like objects projected or fancied in the dream state. Further, at the time of Pralaya or Deluge, by means of Thy power in the form of Time, Thou doth obliterate the universe by withdrawing everything into Thyself, even as a tortoise retracts its limbs. When the whole universe thus becomes unmanifest, and intense darkness prevails, Thou doth shine forth, being unaffected by that darkness. My obeisance to Thee.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/098/098_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +128,15 @@ title: ०९८
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+My obeisance to Thee, O Lord Krishna, who art all-comprehensive and, hence, conceivable in any and every form or manner; Who art the prime cause of the entire universe; Who art variously described as Sabda Brahma (Primeval Sound), Karma (the end result of action), as atom and as Time, etc. by various schools of metaphysics; Who art, indeed, that Sole Reality or Principle addressed in the Vedanta as Purusha (Spirit), Para (Supreme), Chit (Intelligence), Atma (Soul), etc. and to Whom is ascribed the causation, by a mere glance, of manifold modifications of Maya.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/098/098_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +154,15 @@ title: ०९८
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Avidya (ignorance) engendered by Maya (delusive power), which is not susceptible of being characterised as either existing or non-existing, nor as both existing and non-existing, projects the appearance of the objective universe as a misconception, similar to that of a rope being viewed as a snake due to lack of illumination. When, on account of God's grace, and with the aid of a few averments of the Scriptures, that very Avidya gets metamorphosed into Vidya (knowledge), it serves as the axe to chop off in an instant, the dense jungle of Samsara (worldly existence). My obeisance to Thee, who art that Lord.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/098/098_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +182,15 @@ title: ०९८
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+On contemplation of the true nature of things, one realises that, in truth, there is only the non-dual Self or Brahman that shines in the universe, even when it is seen as prevailing in all its pluralities. This is similar to the basic truth of the existence of gold in all ornaments, or clay in all pots, pitchers and other earthenware. This reality becomes manifest when the flood of knowledge dawns, just as, when darkness is removed by light, one sees the worn-out rope for what it is, or as one realises, on waking up, the insubstantial nature of things seen in a dream. My obeisance to Thee, O Krishna.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/098/098_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +208,15 @@ title: ०९८
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Krishna, our obeisance to Thee who art the Controller of the entire universe; for fear of whom, the sun rises, the fire burns, the wind blows and all others like Brahma, etc perform their appointed tasks and offer their ordained homage, sacrifices, etc. at the appropriate times; and by Whom they were earlier installed in their respective positions (stations) and later dislodged from them.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/098/098_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +236,15 @@ title: ०९८
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+I do, by the three Yogas or Paths (Jnana, Karma and Bhakti), constantly worship Thee who doth manifest the three worlds suffused with the three Gunas (Sattva, Rajas and Tamas); Who art the one revealed and signified by the three-lettered Pranava (AUM or OM); Who art the combined embodiment of the Trinity (Brahma, Vishnu and Siva); Who art the Entity sung about by the three Vedas (Rik, Yajus and Sama); Who art cognisant of the three states (waking, dreaming and deep slumber); Who doth incarnate in the three yugas (Threta, Dvapara and Kali); Who doth measure (as Vamana) the entire universe in three strides; and Who doth remain unchanged in the past, present and future.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/098/098_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -182,6 +263,15 @@ title: ०९८
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+That attribute-less (Nirguna) aspect of Thine doth shine forth victoriously - That aspect which is the eternally pure, changeless Reality; ever vigilant (self-effulgent); ever free; is devoid of desire (and, hence, action-less); transcends all dualities; is the fountainhead of all good qualities and attributes, yet, itself without origin or cause; is without blemish, being untainted by sentiments or emotions like love, hate, etc; is refulgent with infinite glory; which is latent in the hearts and minds of sages who are bondage-free; and which is resplendent with concentrated, matchless, Supreme Bliss Absolute.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/098/098_11.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -196,5 +286,12 @@ title: ०९८
 संभ्राम्यत्क्रूरवेगं क्षणमनु जगदाछिद्य सन्धावमानम् ।  
 चक्रं ते कालरूपं व्यथयतु न तु मां त्वत्पदैकावलम्बं  
 विष्णो कारुण्यसिन्धो पवनपुरपते पाहि सर्वामयौघात् ॥ ९८११॥
+</details>
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+May not that inexorable wheel of Thine, in the form of Time, with its twelve spokes (months) and 360 teeth (days), whirling furiously fast and annihilating the universe every moment, with every revolution, enmesh and torment me, whose sole refuge is Thy feet. O Vishnu, Ocean of mercy and Lord of Guruvayur, may Thou save me from all my woes and ailments.
+
+
 </details>
 
