--- a/laxyam/padyam/purANam/nArAyaNIyam/099.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/099.md
@@ -20,6 +20,15 @@ title: ०९९
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Who can enumerate or recount the glories and exploits of that all-pervasive Lord Mahavishnu, who supports and sustains all the worlds; who measured the three worlds by three strides of His feet, and because of the contact with whose feet all these worlds overflow with happiness and prosperity ? Indeed, who can count the dust particles on the earth ? May I attain in this world itself to that dear and Supreme abode of Thine, wherein Thy devotees enjoy uninterrupted Bliss, with the honey of immortality streaming forth.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/099/099_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +46,15 @@ title: ०९९
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+The devotee of Thine, who, in the fullness of devotion, worships Thee with oblations in the form of sacrifices and offers of flowers, fruits etc., to Lord Vishnu who is Primeval (causal), Eternal and the Creator of everything; who renews Himself every moment; who is the Lord of all wealth, power, plenitude, splendour, magnificence, superhuman faculties (Siddhis), etc; or the devotee who expounds and expatiates upon Thy most exalted incarnations as Krishna, etc., he (that devotee) abides in this world, enjoying happiness and great renown and, in the end, proceeds without delay to that Supreme abode of Thine which is worthy of attainment.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/099/099_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +74,15 @@ title: ०९९
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O great poets (who are adept at eulogisation) ! Use your faculties and talents, in whichever manner you deem fit, in singing praises of the Lord who is the essence of all Scriptures; the recounting of whose glorious and miraculous incarnations and sportive exploits, the chanting of whose manifold names and the elaboration of whose marvellous deeds with understanding and involvement confer immense joy and fulfillment on everyone.  O Vishnu, I shall indeed comprehend Thy true nature by chanting Thy names and miraculous deeds and singing hymns of adoration to Thee, the Great One.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/099/099_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +100,15 @@ title: ०९९
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+May you (fellow humans) always contemplate on that Lord Mahavishnu and the mighty deeds by which he established and sustained the Rule of Dharma (by vesting the appropriate authorities with their respective duties); all the deeds that He executed for the welfare of Indra, sometimes as a servant, sometimes as a friend or companion; whose extremely effulgent state and exalted abode (Vaikunttha) is forever contemplated upon, viewed and experienced by accomplished Yogis, and which is revealed and expatiated upon by vigilant holy men (Brahmins) through the singing of His eulogies with devotional fervour.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/099/099_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +128,15 @@ title: ०९९
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Omnipresent Lord Vishnu, there is none who is born or yet to be born, who knows the limits of Thy glory. Being well aware that the chanting of Thy names, again and again, is conducive to the attainment of all that is auspicious and good, I shall engage in such chanting and singing various hymns in praise of Thee who doth have His abode in Vaikunttha, which shines above all the three worlds.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/099/099_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -109,6 +154,15 @@ title: ०९९
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Lord, the Primeval (causal) Waters which came into existence at the beginning of Creation, held Thee in their bosom, wherein the individual souls were massed together and merged in Thee, who art recumbent on those waters. O Hari, who art birth-less, there arose from Thy navel, a single lotus having for its petals the eight quarters, and the Mahameru mountain as its pericarp, and which, it is said, adumbrates all the worlds in subtle, causal form.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/099/099_07.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -128,6 +182,15 @@ title: ०९९
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O hapless human race ! It is, indeed, pitiable that, knowing neither that Lord Vishnu created the universe, nor that there is another, indescribable, form of His lying embedded in your innermost self (Soul), and with your minds enshrouded by the mists of Maya and misguided by names and forms, you squander your precious days in enjoying sensual pleasures and ever intent solely on performing sacrifices, and alas, without any yearning for Lord Mukunda.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/099/099_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -145,6 +208,15 @@ title: ०९९
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Possessing thousands of heads, eyes and feet, encompassing the entire universe and transcending it, and (yet) dwelling in the limited space of the heart besides, Thou art, O Supreme Soul, the past, (present) and future and everything else. Further, though pervading the body, the sense organs etc, (as the jiva), Thou alone doth, through projecting beyond these, revel in the Supreme Bliss of liberation.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/099/099_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -164,6 +236,15 @@ title: ०९९
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Even though manifest as the three worlds, Thou surpasseth them and doth exist as the embodiment of Infinite, Pure Consciousness (unlimited, immaculate knowledge). Indeed, Thy glory is so great, that nothing more can be said about it. The entire visible universe is but a small part of Thee, while the major (three-fourths) part, which is concentrated, pure Bliss, and which is immense, and which transcends all worlds, is resplendent beyond description. My obeisance to Thee, who art that Infinite Being.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/099/099_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -178,5 +259,12 @@ title: ०९९
 व्यक्तञ्चाप्येतदेव स्फुटममृतरसाम्भोधिकल्लोलतुल्यम् ।  
 सर्वोत्कृष्टामभीष्टां तदिह गुणरसेनैव चित्तं हरन्तीं  
 मूर्तिं ते संश्रयेऽहं पवनपुरपते पाहि मां कृष्ण रोगात् ॥ ९९१०॥
+</details>
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+Thy abstract, unmanifest (Nirguna) aspect is beyond comprehension, but Thy pure (Sattva) form is easily perceivable and, besides, it is like a wave on the Ocean of Bliss (Brahman). Therefore, O Krishna, Lord of Guruvayur, I take refuge in Thy Saguna form as (the image of) Krishna, which is most exalted, pleasing and captivating to the mind by reason of its attractive qualities (like affection towards one's devotees). May Thee save me from all ailments.
+
+
 </details>
 
