--- a/laxyam/padyam/purANam/nArAyaNIyam/100.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/100.md
@@ -20,6 +20,15 @@ title: १००
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+I perceive ahead of me, a dense, comely, effulgent halo, bluish in hue, like a thick bouquet or ring of Kalaya (blue lilies) flowers, by which I feel steeped in nectar; in its inner core, I behold the form of a divine lad, fetchingly handsome in his budding adolescence, who is surrounded by Narada and other Sages, with hairs standing on end on their limbs, signifying their thrilling experience of Supreme Bliss, and by a bevy of beautiful maidens personifying the Upanishads (or the Gopis of Brindavan).
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/100/100_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -37,6 +46,15 @@ title: १००
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+I see Thy darkish blue, perfectly pure (clean), curly, luxuriant tresses, gathered together in a charming knot, beautifully adorned with crest jewels, encircled by a cluster of peacock's feathers with glistening "eyes", and tied together with garlands of Mandara and like flowers. Besides, I also see Thy comely forehead, radiant like the crescent moon (on the fifth day after New Moon) with the clear white vertical sandal-paste mark on it.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/100/100_03.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -56,6 +74,15 @@ title: १००
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+O Lord ! May those pair of eyes of Thine which are charming through the play of the eye-brows throbbing like the gentle rippling waves on the Ocean of Infinite Compassion; which are refulgent with rows of deep-blue gleaming eyelashes; which are soft, lustrous and shaped like the long petals of the red rose; (those eyes) possessing very comely pupils and cooling the world by their merciful glances; may those eyes be cast on me, who has no refuge other than Thee.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/100/100_04.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -73,6 +100,15 @@ title: १००
 </details>
 
 
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+May Thy face with its prominent and captivating nose, brilliant with the pair of bejewelled fish-shaped, earrings adorning the lovely ears and reflected on the cheeks resembling mirrors of blue sapphire; which (face) is extremely attractive on account of the gentle smile oozing affection, between lips of cherry-red hue, mildly revealing sparkling rows of white teeth; may that face of Thine always shine before me (illumine me).
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/100/100_05.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -92,6 +128,15 @@ title: १००
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+May Thee sprinkle (impregnate, soak) the passages of my ears with the nectarine and refreshingly cooling melodies, (that are Brahman itself, in the form of sound) issuing forth from Thy flute placed at the tip of Thy lotus-like mouth and held in Thy two hands adorned with jewelled bracelets and coral-red tender palms, and which (the flute) has acquired variegated hues through contact with Thy fingers and the radiation emanating from Thy nails.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/100/100_06.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -110,6 +155,15 @@ title: १००
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+I meditate upon Thy handsome neck coloured purple by the radiating lustre of Thy Kaustubha jewel; on Thy chest beautified by the Srivatsa sign and adorned with clusters of dazzling pearl necklaces dangling around, garlands of forest flowers and tender sprouts and bunches of multicoloured blossoms, with bees hovering around them; and, also, the necklaces of precious stones spread over Thy chest.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/100/100_07.mp3"></div>
 
 
@@ -121,6 +175,15 @@ title: १००
 विश्वक्षोभं विशङ्क्य ध्रुवमनिशमुभौ पीतचेलावृताङ्गौ ।  
 आनम्राणां पुरस्तान्न्यसनधृतसमस्तार्थपालीसमुद्ग  
 च्छायां जानुद्वयं च क्रमपृथुलमनोज्ञे च जङ्घे निषेवे ॥ १००८,॥
+
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+We meditate upon Thee, who charms and captivates the entire world by the marvellous, spreading fragrances emanating from the five-membered unguents smeared over Thy body; who has a creeper-like slender waist in which innumerable worlds lie merged; who is attired in a yellow silk garment looking like dazzling molten gold overlaid on a rock of sapphire (the colour of the Lord's body); and who art encompassed by a jewelled girdle with tiny tinkling bells emitting brilliant rays.
+
+
+</details>
 
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/100/100_08.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -140,6 +203,15 @@ title: १००
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+I meditate upon Thy two well-proportioned resplendent thighs which steal the heart of Devi Lakshmi, and which are always attired in yellow silk garment, as though fearing their potential for causing universal agitation to the onlookers if exposed to view; on Thy pair of knees resembling two caskets containing a collection of all objects desired by Thy devotees who prostrate before Thee; and on Thy two fleshy, well-tapered, comely shanks (forelegs).
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/100/100_09.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -158,6 +230,15 @@ title: १००
 
 
 
+
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+I meditate upon Thy anklets which seem to proclaim, in sweet tones, the overriding superiority of worshipping Thy feet; upon the upper part of Thy feet, shaped like the tortoise which raises the minds of the devotees sinking in the sea of illusion, similar to the raising of the Mandara mountain by Thy tortoise incarnation; and also on the auspicious row of Thy toes and the upraised, purple-tinted crescent-shaped nails, the lunar radiance emanating from which dispels the darkness of sorrow in the minds of Thy devotees.
+
+
+</details>
+
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/100/100_10.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -172,5 +253,12 @@ title: १००
 स्तोत्रं चैतत्सहस्रोत्तरमधिकतरं त्वत्प्रसादाय भूयात् ।  
 द्वेधा नारायणीयं श्रुतिषु च जनुषा स्तुत्यतावर्णनेन  
 स्फीतं लीलावतारैरिदमिह कुरुतामायुरारोग्यसौख्यम् ॥ १००११॥
+</details>
+
+<details ><summary>English (rAmasvAmI)</summary>
+
+May the soles of Thy feet which, to the noble Sages, are the sweetest and most beloved among Thy limbs; which constitute the abode of the liberated; and which resemble the tender sprout of the wish-fulfilling, celestial tree that showers on Thy devotees all that they desire, be forever remain firmly embedded in my heart. O Krishna, Ocean of Mercy, Lord of Guruvayur and Master of the World ! May these feet of Thine, dispelling all my woes, confer on me the flood of prosperity and Supreme Bliss Absolute.
+
+
 </details>
 
